Clean Up Translations and Fix Missing Usage of Localization Keys

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Wissel Winhance Tema",
   "Tooltip_Donate": "Skenk om ontwikkeling te ondersteun",
   "Tooltip_ReportBug": "Rapporteer 'n Fout",
-  "Menu_ReportBug": "Rapporteer 'n Fout",
   "Settings_Title": "Winhance Instellings",
+  "Settings_Description": "Stel Winhance-toepassingsvoorkeure op",
   "Settings_Menu_Language": "Taal",
   "Settings_Language_Description": "Kies die toepassing se vertoontaal",
   "Settings_Theme_Title": "Winhance Tema",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Waarskuwing",
   "Dialog_Error": "Fout",
   "Dialog_Confirmation": "Bevestiging",
-  "Dialog_Question": "Vraag",
   "Dialog_ConfirmInstallation": "Bevestig Installasie",
   "Dialog_ConfirmRemoval": "Bevestig Verwydering",
   "Dialog_ConfirmOperation": "Bevestig {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Kies 'n konfigurasielêer vanaf jou rekenaar",
   "Dialog_ImportConfig_Option_Recommended_Title": "Voer aanbevole konfigurasie in",
   "Dialog_ImportConfig_Option_Recommended_Description": "Laai Winhance se aanbevole konfigurasielêer",
-  "Dialog_ImportOptions_Title": "Invoer Konfigurasie",
   "Dialog_ImportOptions_Message": "Kies hoe jy 'n konfigurasie wil invoer:",
-  "ImportOption_Own": "Voer my eie konfigurasielêer in",
-  "ImportOption_Recommended": "Voer Winhance aanbevole konfigurasie in",
-  "Dialog_Button_Yes": "Ja",
-  "Dialog_Button_No": "Nee",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Kanselleer",
-  "Dialog_Button_Continue": "Gaan voort",
-  "Dialog_Button_Close": "Maak toe",
-  "Dialog_Button_Apply": "Pas toe",
-  "Dialog_Button_Refresh": "Verfris",
-  "Dialog_Button_Help": "Hulp",
   "Dialog_Unified_Section_SoftwareAndApps": "Sagteware & Toepassings",
   "Dialog_Unified_Description_SoftwareAndApps": "Keuses vir Windows Pakkette en Eksterne Sagteware",
   "Dialog_Unified_Section_WindowsApps": "Windows Toepassings",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Verfris",
   "Button_Help": "Hulp",
   "Button_Delete": "Verwyder",
+  "Button_Download": "Laai af",
   "Common_On": "Aan",
   "Common_Off": "Af",
   "Common_Search_Placeholder": "Tik hier om te soek...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Geen ISO Gekies",
   "WIMUtil_Status_WaitForConversion": "🔒 Wag vir omskakeling om te voltooi",
   "WIMUtil_Status_CompleteStep1": "🔒 Voltooi Stap 1",
-  "WIMUtil_Status_ReadyToAddXml": "Gereed om XML by te voeg",
   "WIMUtil_Status_XmlAdded": "✓ XML Bygevoeg",
   "WIMUtil_Status_NoXmlAdded": "Geen XML Bygevoeg (Opsioneel)",
   "WIMUtil_Status_DriversAdded": "✓ Bestuurders Bygevoeg",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance het jou stelsel met rugsteune beskerm.",
   "Startup_Backup_RestoreEnabled": "Stelselherstel was gedeaktiveer en is nou geaktiveer.",
   "Startup_Backup_Created": "Geskep:",
-  "Startup_Backup_RegistryBackups": "• Registerrugsteune ({0} korwe) by:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Stelselherstelpunt: 'Winhance Aanvanklike Herstelpunt'",
   "Startup_Backup_ToRestore": "Om te herstel:",
-  "Startup_Backup_RestoreInstructions_System": "• Stelsel: Maak 'Skep 'n herstelpunt' oop in Instellings > Stelselherstel",
-  "Startup_Backup_RestoreInstructions_Registry": "• Register: Dubbelklik .reg lêers in die rugsteungids",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Om te herstel: Soek 'herstelpunt' in Windows Instellings",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Om te herstel: Dubbelklik .reg lêers in die rugsteungids",
   "Startup_Backup_Note": "Let wel: Stelselherstel sal nie verwyderde toepassings herstel nie.",
-  "Startup_Backup_Note_AdminRights": "Registerrugsteune is eenmalig en vereis adminregte.",
   "Startup_Backup_Checkbox_DontCreate": "Moenie herstelpunte in die toekoms skep nie",
-  "Startup_Backup_Checkbox_DontShow": "Moenie weer wys nie",
   "Startup_Migration_Title": "Skripligging Opgedateer",
   "Startup_Migration_SubTitle": "Winhance Migrasie",
   "Startup_Migration_Intro": "Winhance het die ligging van Windows Toepassing verwyderingskripte opgedateer.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Genereer 'n autounattend.xml-lêer gebaseer op jou huidige Winhance-keuses om Windows tydens installasie aan te pas.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Meer genereringsopsies kom binnekort",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Bykomende XML-aanpassingsopsies sal in toekomstige opdaterings beskikbaar wees.",
-  "Button_OpenWIMUtil": "Maak WIMUtil Oop",
-  "Button_DoItLater": "Ek Sal Dit Later Doen",
   "Dialog_FallbackDownload": "Alternatiewe Aflaaimetode",
-  "Dialog_Button_Download": "Laai af",
   "WindowsApps_Msg_FallbackDownload": "Die pakket '{0}' kon nie via WinGet gevind word nie, waarskynlik as gevolg van geografiese markbeperkings.\n\nWinhance kan hierdie pakket direk van Microsoft se bedieners aflaai deur 'n alternatiewe metode (store.rg-adguard.net) te gebruik.\n\n• Die pakketlêers kom direk van Microsoft se amptelike CDN\n• Hierdie metode is heeltemal wettig en veilig\n• Dit omseil slegs streeksbeperkings\n\nWil jy voortgaan met die alternatiewe aflaaimetode?",
   "WindowsApps_Checkbox_DontAskAgain": "Moenie my weer vra vir toekomstige installasies nie",
   "Progress_RemovingOldFile": "Verwyder ou beeldlêer...",
-  "Progress_WarningCouldNotDeleteFile": "Waarskuwing: Kon nie ou lêer uitvee nie",
   "Progress_ConversionCompleted": "Omskakeling suksesvol voltooi",
   "Progress_ConversionFailed": "Omskakeling misluk",
   "Progress_PreparingInstallAdk": "Berei voor om Windows ADK te installeer...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Kontroleer Stelselherstel status...",
   "Progress_EnablingRestore": "Aktiveer Stelselherstel...",
   "Progress_CreatingRestorePoint": "Skep stelselherstelpunt...",
-  "Progress_BackingUpRegistry": "Rugsteun {0} registerkorf...",
   "Progress_CheckingInstallStatus": "Kontroleer installasie status...",
   "Progress_WaitForInitialLoad": "Wag asseblief vir aanvanklike laai om te voltooi",
   "Progress_RefreshingStatus": "Verfris installasie status...",
   "Progress_SelectionsCleared": "Alle keuses skoongemaak",
   "Progress_NoInternetConnection": "Geen internetverbinding beskikbaar nie. Installasie kan nie voortgaan nie.",
-  "Progress_WingetInstalledSuccess": "WinGet suksesvol geïnstalleer",
   "Progress_ConvertingFormat": "Skakel {0} om na {1}...",
   "Progress_ConvertingEdition": "Skakel uitgawe {0} van {1} om...",
   "Progress_CopyingFile": "Kopieer: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Kon nie WinGet installeer nie. Kan nie {0} installeer nie.",
   "Progress_WinGet_StartingInstallation": "Begin installasie van {0}...",
   "Progress_WinGet_InstalledSuccess": "Suksesvol geïnstalleer {0}",
-  "Progress_WinGet_RepairingInstallation": "Herstel WinGet installasie...",
-  "Progress_WinGet_FailedRepair": "Kon nie WinGet herstel nie. Kan nie {0} installeer nie.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Kon nie WinGet opspoor na herstel nie. Kan nie {0} installeer nie.",
-  "Progress_WinGet_RetryingInstallation": "Probeer installasie van {0} weer...",
   "Progress_WinGet_InstallationCancelled": "Installasie van {0} was gekanselleer",
   "Progress_WinGet_NetworkError": "Netwerkfout tydens installasie van {0}. Kontroleer asseblief jou internetverbinding en probeer weer.",
   "Progress_WinGet_InstallationError": "Fout met installasie van {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Verifieer WinGet installasie...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "WinGet installasie verifikasie misluk",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet geïnstalleer maar nie toeganklik nie. Herbegin asseblief die toepassing.",
-  "Progress_WinGet_InitializingSources": "Initialiseer WinGet bronne...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet suksesvol geïnstalleer",
   "Progress_WinGet_InstallError": "Fout met installasie van WinGet: {0}",
   "Progress_Store_FetchingLinks": "Haal aflaaiskakels vir {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Kon nie {0} installeer nie",
   "Progress_Store_DownloadCancelled": "Aflaai van {0} was gekanselleer",
   "Progress_Store_InstallError": "Fout met installasie van {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Versoek pakketinligting vir {0}...",
-  "Progress_Store_DownloadingMainPackage": "Laai {0} hoofpakket af...",
   "Progress_Store_DownloadingDependencies": "Laai {0} vereiste afhanklikheidspakket(te) af...",
   "Progress_Store_InstallingWithDependencies": "Installeer {0} met {1} afhanklikhede...",
   "Progress_Store_Installing": "Installeer {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Installasie het misluk: {0}",
   "Progress_WinGet_CheckingUpdates": "Kontroleer vir WinGet-opdaterings...",
   "Progress_WinGet_Updating": "WinGet word opgedateer...",
-  "Progress_WinGet_CheckingVersion": "Kontroleer WinGet-weergawe...",
-  "Progress_WinGet_UpdateInitiated": "WinGet-opdatering geïnisieer via Store, verifieer voltooiing...",
-  "Progress_WinGet_WaitingForUpdate": "Wag for WinGet-opdatering om te voltooi...",
-  "Progress_WinGet_Reinstalling": "Installeer WinGet weer...",
   "Progress_WinGet_UpdateSuccess": "WinGet suksesvol opgedateer",
-  "Progress_WinGet_UpdateCompleted": "WinGet-opdatering voltooi",
   "Progress_WinGet_AlreadyUpToDate": "WinGet is reeds op datum",
-  "Progress_WinGet_InstalledLatest": "WinGet is reeds geïnstalleer by die nuutste weergawe",
   "Progress_WinGet_Ready": "WinGet is gereed",
   "Progress_Uninstalling": "Deïnstalleer {0}...",
   "Progress_Finalizing": "Finaliseer...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet is nie beskikbaar op hierdie stelsel nie.",
   "App_Tagline": "Verbeter jou Windows-ervaring",
   "Loading_InitializingSettings": "Instellings word geïnisialiseer...",
-  "Loading_CreatingRestorePoint": "Stelsel-herstelpunt word geskep. Wag asseblief, dit kan 'n rukkie neem...",
   "Loading_MigratingScripts": "Skripte word gemigreer...",
   "Loading_CheckingScripts": "Word nagegaan vir skrip-opdaterings...",
-  "Loading_PreparingApp": "Toepassing word voorberei..."
+  "Loading_PreparingApp": "Toepassing word voorberei...",
+  "Tooltip_Documentation": "Dokumentasie",
+  "Tooltip_ToggleNavigation": "Skakel navigasie",
+  "Dialog_ImportConfig_Option_Backup_Title": "Voer rugsteunkonfigurasie in",
+  "Dialog_ImportConfig_Option_Backup_Description": "Herstel jou stelsel-rugsteunkonfigurasie",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Herstel Windows-verstekwaardes",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Stel alle instellings terug na Windows-fabrieksverstekinstellings",
+  "Loading_CreatingConfigBackup": "Konfigurasie-rugsteun word geskep...",
+  "Config_Backup_NotFound": "Geen rugsteunkonfigurasielêers is gevind nie. 'n Rugsteun word outomaties geskep met die eerste toepassing-lansering.",
+  "Config_Backup_NotFound_Title": "Geen Rugsteun Gevind Nie",
+  "Config_Backup_Select_Title": "Kies Rugsteunlêer",
+  "Review_Mode_Title": "Konfigurasie-hersieningsmodus",
+  "Review_Mode_Description": "Hersien die veranderinge in alle afdelings en klik dan Pas Konfigurasie Toe wanneer jy gereed is.",
+  "Review_Mode_Status_Format": "{0} van {1} hersien ({2} sal toegepas word)",
+  "Review_Mode_Apply_Button": "Pas Konfigurasie Toe",
+  "Review_Mode_Cancel_Button": "Kanselleer",
+  "Review_Mode_Cancel_Confirmation_Title": "Kanselleer Konfigurasie-hersiening",
+  "Review_Mode_Cancel_Confirmation": "Is jy seker jy wil kanselleer? Geen veranderinge sal toegepas word nie.",
+  "Review_Mode_Diff_Toggle": "Huidig: {0} → Konfigurasie: {1}",
+  "Review_Mode_Select_Action": "Kies 'n aksie (Installeer of Verwyder) vir gemerkte toepassings met die knoppies hierbo",
+  "Review_Mode_Action_Install": "Gemerkte toepassings sal geïnstalleer word wanneer jy die konfigurasie toepas",
+  "Review_Mode_Action_Remove": "Gemerkte toepassings sal verwyder word wanneer jy die konfigurasie toepas",
+  "Review_Mode_Skip_Checkbox": "Slaan hersiening oor en pas onmiddellik toe",
+  "Review_Mode_Status_AllMatch": "Alle instellings stem reeds ooreen met konfigurasie",
+  "Review_Mode_Status_NoItems": "Geen konfigurasie-items om toe te pas nie",
+  "Review_Mode_Action_ThemeWallpaper": "Pas die verstekmuurpapier vir hierdie tema toe?",
+  "Review_Mode_Action_CleanTaskbar": "Maak die taakbalk skoon as deel van hierdie konfigurasie?",
+  "Review_Mode_Action_CleanStartMenu": "Maak die beginkieslys skoon as deel van hierdie konfigurasie?",
+  "Startup_Backup_ConfigBackup": "• Konfigurasie-rugsteun: 'n Momentopname van jou huidige Windows-instellings",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Stelselherstel: Soek 'Skep 'n herstelpunt' in Windows-instellings",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Rugsteunkonfigurasie: Gebruik Voer Konfigurasie In in die titelbalk en kies 'Voer Rugsteunkonfigurasie In'",
+  "Help_LearnMore_WindowsApps": "Leer meer oor Windows-toepassings",
+  "Help_LearnMore_ExternalApps": "Leer meer oor eksterne toepassings",
+  "WIMUtil_Tooltip_DownloadWindows10": "Laai Windows 10 ISO af",
+  "WIMUtil_Tooltip_DownloadWindows11": "Laai Windows 11 ISO af",
+  "WIMUtil_Tooltip_Schneegans": "Maak Schneegans XML-generator oop",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Verstek: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Is jy seker jy wil die WIM-beeldlêer uitvee? Hierdie aksie kan nie ongedaan gemaak word nie.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Is jy seker jy wil die ESD-beeldlêer uitvee? Hierdie aksie kan nie ongedaan gemaak word nie.",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM-lêer suksesvol uitgevee.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD-lêer suksesvol uitgevee.",
+  "WIMUtil_Msg_DeleteFailed": "Kon nie die beeldlêer uitvee nie.",
+  "WIMUtil_Msg_DeleteError": "Fout tydens uitvee van beeldlêer: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Besig om {0} na {1} om te skakel...",
+  "WIMUtil_Status_CreatingIso": "Besig om ISO te skep",
+  "WIMUtil_Button_OpenFolder": "Maak Vouer Oop",
+  "Loading_CheckingSystemProtection": "Stelselbeskerming word nagegaan..."
 }
