--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Přepnout motiv Winhance",
   "Tooltip_Donate": "Přispět na podporu vývoje",
   "Tooltip_ReportBug": "Nahlásit chybu",
-  "Menu_ReportBug": "Nahlásit chybu",
   "Settings_Title": "Nastavení Winhance",
+  "Settings_Description": "Konfigurace předvoleb aplikace Winhance",
   "Settings_Menu_Language": "Jazyk",
   "Settings_Language_Description": "Vyberte jazyk zobrazení aplikace",
   "Settings_Theme_Title": "Motiv Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Varování",
   "Dialog_Error": "Chyba",
   "Dialog_Confirmation": "Potvrzení",
-  "Dialog_Question": "Otázka",
   "Dialog_ConfirmInstallation": "Potvrdit instalaci",
   "Dialog_ConfirmRemoval": "Potvrdit odebrání",
   "Dialog_ConfirmOperation": "Potvrdit {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Vyberte konfigurační soubor z vašeho počítače",
   "Dialog_ImportConfig_Option_Recommended_Title": "Importovat doporučenou konfiguraci",
   "Dialog_ImportConfig_Option_Recommended_Description": "Načíst doporučený konfigurační soubor Winhance",
-  "Dialog_ImportOptions_Title": "Importovat konfiguraci",
   "Dialog_ImportOptions_Message": "Vyberte, jak chcete importovat konfiguraci:",
-  "ImportOption_Own": "Importovat vlastní konfigurační soubor",
-  "ImportOption_Recommended": "Importovat doporučenou konfiguraci Winhance",
-  "Dialog_Button_Yes": "Ano",
-  "Dialog_Button_No": "Ne",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Zrušit",
-  "Dialog_Button_Continue": "Pokračovat",
-  "Dialog_Button_Close": "Zavřít",
-  "Dialog_Button_Apply": "Použít",
-  "Dialog_Button_Refresh": "Aktualizovat",
-  "Dialog_Button_Help": "Nápověda",
   "Dialog_Unified_Section_SoftwareAndApps": "Software a aplikace",
   "Dialog_Unified_Description_SoftwareAndApps": "Výběry pro balíčky Windows a externí software",
   "Dialog_Unified_Section_WindowsApps": "Aplikace Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Aktualizovat",
   "Button_Help": "Nápověda",
   "Button_Delete": "Smazat",
+  "Button_Download": "Stáhnout",
   "Common_On": "Zapnuto",
   "Common_Off": "Vypnuto",
   "Common_Search_Placeholder": "Hledejte zde...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Nebylo vybráno žádné ISO",
   "WIMUtil_Status_WaitForConversion": "🔒 Počkejte na dokončení převodu",
   "WIMUtil_Status_CompleteStep1": "🔒 Dokončete krok 1",
-  "WIMUtil_Status_ReadyToAddXml": "Připraveno k přidání XML",
   "WIMUtil_Status_XmlAdded": "✓ XML přidáno",
   "WIMUtil_Status_NoXmlAdded": "Nebylo přidáno žádné XML (volitelné)",
   "WIMUtil_Status_DriversAdded": "✓ Ovladače přidány",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance ochránil váš systém zálohami.",
   "Startup_Backup_RestoreEnabled": "Obnovení systému bylo zakázáno a nyní je povoleno.",
   "Startup_Backup_Created": "Vytvořeno:",
-  "Startup_Backup_RegistryBackups": "• Zálohy registru ({0} hives) na:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Bod obnovení systému: 'Počáteční bod obnovení Winhance'",
   "Startup_Backup_ToRestore": "Pro obnovení:",
-  "Startup_Backup_RestoreInstructions_System": "• Systém: Otevřete 'Vytvořit bod obnovení' v Nastavení > Obnovení systému",
-  "Startup_Backup_RestoreInstructions_Registry": "• Registr: Dvakrát klikněte na soubory .reg v záložní složce",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Pro obnovení: Vyhledejte 'bod obnovení' v Nastavení Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Pro obnovení: Dvakrát klikněte na soubory .reg v záložní složce",
   "Startup_Backup_Note": "Poznámka: Obnovení systému neobnoví odebrané aplikace.",
-  "Startup_Backup_Note_AdminRights": "Zálohy registru jsou jednorázové a vyžadují administrátorská práva.",
   "Startup_Backup_Checkbox_DontCreate": "V budoucnu nevytvářet body obnovení",
-  "Startup_Backup_Checkbox_DontShow": "Už nezobrazovat",
   "Startup_Migration_Title": "Umístění skriptu aktualizováno",
   "Startup_Migration_SubTitle": "Migrace Winhance",
   "Startup_Migration_Intro": "Winhance aktualizoval umístění skriptů pro odstranění aplikací Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Vygenerujte soubor autounattend.xml na základě vašich aktuálních voleb Winhance pro přizpůsobení systému Windows během instalace.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Další možnosti generování již brzy",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Další možnosti přizpůsobení XML budou k dispozici v budoucích aktualizacích.",
-  "Button_OpenWIMUtil": "Otevřít WIMUtil",
-  "Button_DoItLater": "Udělám to později",
   "Dialog_FallbackDownload": "Alternativní metoda stahování",
-  "Dialog_Button_Download": "Stáhnout",
   "WindowsApps_Msg_FallbackDownload": "Balíček '{0}' nebyl nalezen prostřednictvím WinGet, pravděpodobně kvůli geografickým omezením trhu.\n\nWinhance může tento balíček stáhnout přímo ze serverů společnosti Microsoft pomocí alternativní metody (store.rg-adguard.net).\n\n• Soubory balíčku pocházejí přímo z oficiálního CDN společnosti Microsoft\n• Tato metoda je zcela legální a bezpečná\n• Obchází pouze regionální omezení\n\nChcete pokračovat s alternativní metodou stahování?",
   "WindowsApps_Checkbox_DontAskAgain": "Příště se mě na budoucí instalace neptej",
   "Progress_RemovingOldFile": "Odstraňování starého souboru obrazu...",
-  "Progress_WarningCouldNotDeleteFile": "Varování: Nepodařilo se odstranit starý soubor",
   "Progress_ConversionCompleted": "Převod úspěšně dokončen",
   "Progress_ConversionFailed": "Převod se nezdařil",
   "Progress_PreparingInstallAdk": "Příprava na instalaci Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Kontrola stavu obnovení systému...",
   "Progress_EnablingRestore": "Povolení obnovení systému...",
   "Progress_CreatingRestorePoint": "Vytváření bodu obnovení systému...",
-  "Progress_BackingUpRegistry": "Zálohování {0} registru...",
   "Progress_CheckingInstallStatus": "Kontrola stavu instalace...",
   "Progress_WaitForInitialLoad": "Počkejte prosím na dokončení počátečního načtení",
   "Progress_RefreshingStatus": "Aktualizace stavu instalace...",
   "Progress_SelectionsCleared": "Všechny výběry zrušeny",
   "Progress_NoInternetConnection": "Není k dispozici připojení k internetu. Instalace nemůže pokračovat.",
-  "Progress_WingetInstalledSuccess": "WinGet úspěšně nainstalován",
   "Progress_ConvertingFormat": "Převod {0} na {1}...",
   "Progress_ConvertingEdition": "Převod edice {0} z {1}...",
   "Progress_CopyingFile": "Kopírování: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Nepodařilo se nainstalovat WinGet. Nelze nainstalovat {0}.",
   "Progress_WinGet_StartingInstallation": "Zahájení instalace {0}...",
   "Progress_WinGet_InstalledSuccess": "Úspěšně nainstalováno {0}",
-  "Progress_WinGet_RepairingInstallation": "Oprava instalace WinGet...",
-  "Progress_WinGet_FailedRepair": "Nepodařilo se opravit WinGet. Nelze nainstalovat {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Nepodařilo se najít WinGet po opravě. Nelze nainstalovat {0}.",
-  "Progress_WinGet_RetryingInstallation": "Opakování instalace {0}...",
   "Progress_WinGet_InstallationCancelled": "Instalace {0} byla zrušena",
   "Progress_WinGet_NetworkError": "Chyba sítě při instalaci {0}. Zkontrolujte své internetové připojení a zkuste to znovu.",
   "Progress_WinGet_InstallationError": "Chyba při instalaci {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Ověřování instalace WinGet...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Ověření instalace WinGet se nezdařilo",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet nainstalován, ale není přístupný. Restartujte prosím aplikaci.",
-  "Progress_WinGet_InitializingSources": "Inicializace zdrojů WinGet...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet úspěšně nainstalován",
   "Progress_WinGet_InstallError": "Chyba při instalaci WinGet: {0}",
   "Progress_Store_FetchingLinks": "Získávání odkazů ke stažení pro {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Nepodařilo se nainstalovat {0}",
   "Progress_Store_DownloadCancelled": "Stahování {0} bylo zrušeno",
   "Progress_Store_InstallError": "Chyba při instalaci {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Vyžádání informací o balíčku pro {0}...",
-  "Progress_Store_DownloadingMainPackage": "Stahování hlavního balíčku {0}...",
   "Progress_Store_DownloadingDependencies": "Stahování {0} požadovaných balíčků závislostí...",
   "Progress_Store_InstallingWithDependencies": "Instalace {0} s {1} závislostmi...",
   "Progress_Store_Installing": "Instalace {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Instalace se nezdařila: {0}",
   "Progress_WinGet_CheckingUpdates": "Kontrola aktualizací WinGet...",
   "Progress_WinGet_Updating": "Aktualizace WinGet...",
-  "Progress_WinGet_CheckingVersion": "Kontrola verze WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Aktualizace WinGet byla zahájena přes Store, ověřování dokončení...",
-  "Progress_WinGet_WaitingForUpdate": "Čekání na dokončení aktualizace WinGet...",
-  "Progress_WinGet_Reinstalling": "Přeinstalace WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet byl úspěšně aktualizován",
-  "Progress_WinGet_UpdateCompleted": "Aktualizace WinGet dokončena",
   "Progress_WinGet_AlreadyUpToDate": "WinGet je již aktuální",
-  "Progress_WinGet_InstalledLatest": "WinGet je již nainstalován v nejnovější verzi",
   "Progress_WinGet_Ready": "WinGet je připraven",
   "Progress_Uninstalling": "Odinstalování {0}...",
   "Progress_Finalizing": "Dokončování...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet není v tomto systému k dispozici.",
   "App_Tagline": "Vylepšete svůj zážitek s Windows",
   "Loading_InitializingSettings": "Inicializace nastavení...",
-  "Loading_CreatingRestorePoint": "Vytváření bodu obnovení systému. Prosím čekejte, může to chvíli trvat...",
   "Loading_MigratingScripts": "Migrace skriptů...",
   "Loading_CheckingScripts": "Kontrola aktualizací skriptů...",
-  "Loading_PreparingApp": "Příprava aplikace..."
+  "Loading_PreparingApp": "Příprava aplikace...",
+  "Tooltip_Documentation": "Dokumentace",
+  "Tooltip_ToggleNavigation": "P\u0159epnout navigaci",
+  "Dialog_ImportConfig_Option_Backup_Title": "Importovat záložní konfiguraci",
+  "Dialog_ImportConfig_Option_Backup_Description": "Obnovit záložní konfiguraci systému",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Obnovit výchozí nastavení Windows",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Obnovit všechna nastavení na výchozí tovární hodnoty Windows",
+  "Loading_CreatingConfigBackup": "Vytváření zálohy konfigurace...",
+  "Config_Backup_NotFound": "Nebyly nalezeny žádné záložní konfigurační soubory. Záloha je automaticky vytvořena při prvním spuštění aplikace.",
+  "Config_Backup_NotFound_Title": "Záloha nenalezena",
+  "Config_Backup_Select_Title": "Vybrat záložní soubor",
+  "Review_Mode_Title": "Režim kontroly konfigurace",
+  "Review_Mode_Description": "Zkontrolujte změny ve všech sekcích a poté klikněte na Použít konfiguraci, když budete připraveni.",
+  "Review_Mode_Status_Format": "{0} z {1} zkontrolováno ({2} bude aplikováno)",
+  "Review_Mode_Apply_Button": "Použít konfiguraci",
+  "Review_Mode_Cancel_Button": "Zrušit",
+  "Review_Mode_Cancel_Confirmation_Title": "Zrušit kontrolu konfigurace",
+  "Review_Mode_Cancel_Confirmation": "Opravdu chcete zrušit? Žádné změny nebudou aplikovány.",
+  "Review_Mode_Diff_Toggle": "Aktuální: {0} → Konfigurace: {1}",
+  "Review_Mode_Select_Action": "Vyberte akci (Instalovat nebo Odinstalovat) pro zaškrtnuté aplikace pomocí tlačítek výše",
+  "Review_Mode_Action_Install": "Zaškrtnuté aplikace budou nainstalovány při aplikování konfigurace",
+  "Review_Mode_Action_Remove": "Zaškrtnuté aplikace budou odebrány při aplikování konfigurace",
+  "Review_Mode_Skip_Checkbox": "Přeskočit kontrolu a ihned aplikovat",
+  "Review_Mode_Status_AllMatch": "Všechna nastavení již odpovídají konfiguraci",
+  "Review_Mode_Status_NoItems": "Žádné položky konfigurace k aplikování",
+  "Review_Mode_Action_ThemeWallpaper": "Použít výchozí tapetu pro tento motiv?",
+  "Review_Mode_Action_CleanTaskbar": "Vyčistit hlavní panel jako součást této konfigurace?",
+  "Review_Mode_Action_CleanStartMenu": "Vyčistit nabídku Start jako součást této konfigurace?",
+  "Startup_Backup_ConfigBackup": "• Záloha konfigurace: Snímek vašeho aktuálního nastavení Windows",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Obnovení systému: Vyhledejte 'Vytvořit bod obnovení' v nastavení Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Záložní konfigurace: Použijte Importovat konfiguraci v záhlaví a vyberte 'Importovat záložní konfiguraci'",
+  "Help_LearnMore_WindowsApps": "Zjistit více o Windows aplikacích",
+  "Help_LearnMore_ExternalApps": "Zjistit více o externích aplikacích",
+  "WIMUtil_Tooltip_DownloadWindows10": "Stáhnout Windows 10 ISO",
+  "WIMUtil_Tooltip_DownloadWindows11": "Stáhnout Windows 11 ISO",
+  "WIMUtil_Tooltip_Schneegans": "Otevřít Schneegans XML generátor",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Výchozí: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Opravdu chcete smazat soubor WIM obrazu? Tuto akci nelze vrátit zpět.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Opravdu chcete smazat soubor ESD obrazu? Tuto akci nelze vrátit zpět.",
+  "WIMUtil_Msg_DeleteWimSuccess": "Soubor WIM úspěšně smazán.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "Soubor ESD úspěšně smazán.",
+  "WIMUtil_Msg_DeleteFailed": "Nepodařilo se smazat soubor obrazu.",
+  "WIMUtil_Msg_DeleteError": "Chyba při mazání souboru obrazu: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Převod {0} na {1}...",
+  "WIMUtil_Status_CreatingIso": "Vytváření ISO",
+  "WIMUtil_Button_OpenFolder": "Otevřít složku",
+  "Loading_CheckingSystemProtection": "Kontrola ochrany systému..."
 }
