--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Winhance-Theme umschalten",
   "Tooltip_Donate": "Spenden, um die Entwicklung zu unterstützen",
   "Tooltip_ReportBug": "Fehler melden",
-  "Menu_ReportBug": "Fehler melden",
   "Settings_Title": "Winhance-Einstellungen",
+  "Settings_Description": "Winhance-Anwendungseinstellungen konfigurieren",
   "Settings_Menu_Language": "Sprache",
   "Settings_Language_Description": "Wählen Sie die Anzeigesprache der Anwendung",
   "Settings_Theme_Title": "Winhance-Theme",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Warnung",
   "Dialog_Error": "Fehler",
   "Dialog_Confirmation": "Bestätigung",
-  "Dialog_Question": "Frage",
   "Dialog_ConfirmInstallation": "Installation bestätigen",
   "Dialog_ConfirmRemoval": "Entfernung bestätigen",
   "Dialog_ConfirmOperation": "{0} bestätigen",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Wählen Sie eine Konfigurationsdatei von Ihrem Computer aus",
   "Dialog_ImportConfig_Option_Recommended_Title": "Empfohlene Konfiguration importieren",
   "Dialog_ImportConfig_Option_Recommended_Description": "Laden Sie die empfohlene Konfigurationsdatei von Winhance",
-  "Dialog_ImportOptions_Title": "Konfiguration importieren",
   "Dialog_ImportOptions_Message": "Wählen Sie, wie Sie eine Konfiguration importieren möchten:",
-  "ImportOption_Own": "Eigene Konfigurationsdatei importieren",
-  "ImportOption_Recommended": "Empfohlene Winhance-Konfiguration importieren",
-  "Dialog_Button_Yes": "Ja",
-  "Dialog_Button_No": "Nein",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Abbrechen",
-  "Dialog_Button_Continue": "Weiter",
-  "Dialog_Button_Close": "Schließen",
-  "Dialog_Button_Apply": "Anwenden",
-  "Dialog_Button_Refresh": "Aktualisieren",
-  "Dialog_Button_Help": "Hilfe",
   "Dialog_Unified_Section_SoftwareAndApps": "Software & Apps",
   "Dialog_Unified_Description_SoftwareAndApps": "Auswahl für Windows-Pakete und externe Software",
   "Dialog_Unified_Section_WindowsApps": "Windows-Apps",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Aktualisieren",
   "Button_Help": "Hilfe",
   "Button_Delete": "Löschen",
+  "Button_Download": "Herunterladen",
   "Common_On": "Ein",
   "Common_Off": "Aus",
   "Common_Search_Placeholder": "Tippen Sie hier, um zu suchen...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Keine ISO ausgewählt",
   "WIMUtil_Status_WaitForConversion": "🔒 Warten Sie auf den Abschluss der Konvertierung",
   "WIMUtil_Status_CompleteStep1": "🔒 Schritt 1 abschließen",
-  "WIMUtil_Status_ReadyToAddXml": "Bereit zum Hinzufügen von XML",
   "WIMUtil_Status_XmlAdded": "✓ XML hinzugefügt",
   "WIMUtil_Status_NoXmlAdded": "Keine XML hinzugefügt (optional)",
   "WIMUtil_Status_DriversAdded": "✓ Treiber hinzugefügt",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance hat Ihr System mit Sicherungen geschützt.",
   "Startup_Backup_RestoreEnabled": "Die Systemwiederherstellung war deaktiviert und ist jetzt aktiviert.",
   "Startup_Backup_Created": "Erstellt:",
-  "Startup_Backup_RegistryBackups": "• Registrierungssicherungen ({0} Hives) unter:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Systemwiederherstellungspunkt: 'Winhance Initial Restore Point'",
   "Startup_Backup_ToRestore": "Zum Wiederherstellen:",
-  "Startup_Backup_RestoreInstructions_System": "• System: Öffnen Sie 'Wiederherstellungspunkt erstellen' in den Einstellungen > Systemwiederherstellung",
-  "Startup_Backup_RestoreInstructions_Registry": "• Registrierung: Doppelklicken Sie auf .reg-Dateien im Sicherungsordner",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Zum Wiederherstellen: Suchen Sie in den Windows-Einstellungen nach 'Wiederherstellungspunkt'",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Zum Wiederherstellen: Doppelklicken Sie auf .reg-Dateien im Sicherungsordner",
   "Startup_Backup_Note": "Hinweis: Die Systemwiederherstellung stellt keine entfernten Apps wieder her.",
-  "Startup_Backup_Note_AdminRights": "Registrierungssicherungen sind einmalig und erfordern Administratorrechte.",
   "Startup_Backup_Checkbox_DontCreate": "In Zukunft keine Wiederherstellungspunkte erstellen",
-  "Startup_Backup_Checkbox_DontShow": "Nicht wieder anzeigen",
   "Startup_Migration_Title": "Skriptspeicherort aktualisiert",
   "Startup_Migration_SubTitle": "Winhance-Migration",
   "Startup_Migration_Intro": "Winhance hat den Speicherort der Skripte zur Entfernung von Windows-Apps aktualisiert.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Erstellen Sie eine autounattend.xml-Datei basierend auf Ihren aktuellen Winhance-Auswahlen, um Windows während der Installation anzupassen.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Weitere Generierungsoptionen folgen in Kürze",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Zusätzliche XML-Anpassungsoptionen werden in zukünftigen Updates verfügbar sein.",
-  "Button_OpenWIMUtil": "WIMUtil öffnen",
-  "Button_DoItLater": "Ich mache es später",
   "Dialog_FallbackDownload": "Alternative Download-Methode",
-  "Dialog_Button_Download": "Herunterladen",
   "WindowsApps_Msg_FallbackDownload": "Das Paket '{0}' konnte über WinGet nicht gefunden werden, wahrscheinlich aufgrund von geografischen Marktbeschränkungen.\n\nWinhance kann dieses Paket direkt von den Microsoft-Servern über eine alternative Methode (store.rg-adguard.net) herunterladen.\n\n• Die Paketdateien stammen direkt von der offiziellen CDN von Microsoft\n• Diese Methode ist völlig legal und sicher\n• Sie umgeht nur regionale Beschränkungen\n\nMöchten Sie mit der alternativen Download-Methode fortfahren?",
   "WindowsApps_Checkbox_DontAskAgain": "Fragen Sie mich bei zukünftigen Installationen nicht erneut",
   "Progress_RemovingOldFile": "Alte Bilddatei wird entfernt...",
-  "Progress_WarningCouldNotDeleteFile": "Warnung: Alte Datei konnte nicht gelöscht werden",
   "Progress_ConversionCompleted": "Konvertierung erfolgreich abgeschlossen",
   "Progress_ConversionFailed": "Konvertierung fehlgeschlagen",
   "Progress_PreparingInstallAdk": "Vorbereitung zur Installation von Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Status der Systemwiederherstellung wird überprüft...",
   "Progress_EnablingRestore": "Systemwiederherstellung wird aktiviert...",
   "Progress_CreatingRestorePoint": "Systemwiederherstellungspunkt wird erstellt...",
-  "Progress_BackingUpRegistry": "Sicherung des {0}-Registrierungshives...",
   "Progress_CheckingInstallStatus": "Installationsstatus wird überprüft...",
   "Progress_WaitForInitialLoad": "Bitte warten Sie, bis der anfängliche Ladevorgang abgeschlossen ist",
   "Progress_RefreshingStatus": "Installationsstatus wird aktualisiert...",
   "Progress_SelectionsCleared": "Alle Auswahlen gelöscht",
   "Progress_NoInternetConnection": "Keine Internetverbindung verfügbar. Die Installation kann nicht fortgesetzt werden.",
-  "Progress_WingetInstalledSuccess": "WinGet erfolgreich installiert",
   "Progress_ConvertingFormat": "{0} wird in {1} konvertiert...",
   "Progress_ConvertingEdition": "Edition {0} von {1} wird konvertiert...",
   "Progress_CopyingFile": "Kopieren: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Fehler bei der Installation von WinGet. {0} kann nicht installiert werden.",
   "Progress_WinGet_StartingInstallation": "Installation von {0} wird gestartet...",
   "Progress_WinGet_InstalledSuccess": "{0} erfolgreich installiert",
-  "Progress_WinGet_RepairingInstallation": "WinGet-Installation wird repariert...",
-  "Progress_WinGet_FailedRepair": "Fehler bei der Reparatur von WinGet. {0} kann nicht installiert werden.",
-  "Progress_WinGet_FailedLocateAfterRepair": "WinGet konnte nach der Reparatur nicht gefunden werden. {0} kann nicht installiert werden.",
-  "Progress_WinGet_RetryingInstallation": "Installation von {0} wird erneut versucht...",
   "Progress_WinGet_InstallationCancelled": "Installation von {0} wurde abgebrochen",
   "Progress_WinGet_NetworkError": "Netzwerkfehler bei der Installation von {0}. Bitte überprüfen Sie Ihre Internetverbindung und versuchen Sie es erneut.",
   "Progress_WinGet_InstallationError": "Fehler bei der Installation von {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "WinGet-Installation wird überprüft...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Überprüfung der WinGet-Installation fehlgeschlagen",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet ist installiert, aber nicht zugänglich. Bitte starten Sie die Anwendung neu.",
-  "Progress_WinGet_InitializingSources": "WinGet-Quellen werden initialisiert...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet erfolgreich installiert",
   "Progress_WinGet_InstallError": "Fehler bei der Installation von WinGet: {0}",
   "Progress_Store_FetchingLinks": "Download-Links für {0} werden abgerufen...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Fehler bei der Installation von {0}",
   "Progress_Store_DownloadCancelled": "Download von {0} wurde abgebrochen",
   "Progress_Store_InstallError": "Fehler bei der Installation von {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Paketinformationen für {0} werden angefordert...",
-  "Progress_Store_DownloadingMainPackage": "Hauptpaket {0} wird heruntergeladen...",
   "Progress_Store_DownloadingDependencies": "Erforderliche(s) Abhängigkeitspaket(e) für {0} wird/werden heruntergeladen...",
   "Progress_Store_InstallingWithDependencies": "{0} mit {1} Abhängigkeiten wird installiert...",
   "Progress_Store_Installing": "Installiere {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Installation fehlgeschlagen: {0}",
   "Progress_WinGet_CheckingUpdates": "Suche nach WinGet-Updates...",
   "Progress_WinGet_Updating": "WinGet wird aktualisiert...",
-  "Progress_WinGet_CheckingVersion": "Prüfe WinGet-Version...",
-  "Progress_WinGet_UpdateInitiated": "WinGet-Update über Store eingeleitet, überprüfe Fertigstellung...",
-  "Progress_WinGet_WaitingForUpdate": "Warte auf Abschluss des WinGet-Updates...",
-  "Progress_WinGet_Reinstalling": "WinGet wird neu installiert...",
   "Progress_WinGet_UpdateSuccess": "WinGet erfolgreich aktualisiert",
-  "Progress_WinGet_UpdateCompleted": "WinGet-Update abgeschlossen",
   "Progress_WinGet_AlreadyUpToDate": "WinGet ist bereits auf dem neuesten Stand",
-  "Progress_WinGet_InstalledLatest": "WinGet ist bereits in der neuesten Version installiert",
   "Progress_WinGet_Ready": "WinGet ist bereit",
   "Progress_Uninstalling": "Deinstalliere {0}...",
   "Progress_Finalizing": "Finalisiere...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet ist auf diesem System nicht verfügbar.",
   "App_Tagline": "Verbessern Sie Ihr Windows-Erlebnis",
   "Loading_InitializingSettings": "Einstellungen werden initialisiert...",
-  "Loading_CreatingRestorePoint": "Systemwiederherstellungspunkt wird erstellt. Bitte warten, dies kann eine Weile dauern...",
   "Loading_MigratingScripts": "Skripte werden migriert...",
   "Loading_CheckingScripts": "Skriptaktualisierungen werden geprüft...",
-  "Loading_PreparingApp": "Anwendung wird vorbereitet..."
+  "Loading_PreparingApp": "Anwendung wird vorbereitet...",
+  "Tooltip_Documentation": "Dokumentation",
+  "Tooltip_ToggleNavigation": "Navigation umschalten",
+  "Dialog_ImportConfig_Option_Backup_Title": "Sicherungskonfiguration importieren",
+  "Dialog_ImportConfig_Option_Backup_Description": "Ihre System-Sicherungskonfiguration wiederherstellen",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Windows-Standardwerte wiederherstellen",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Alle Einstellungen auf die Windows-Werkseinstellungen zurücksetzen",
+  "Loading_CreatingConfigBackup": "Konfigurationssicherung wird erstellt...",
+  "Config_Backup_NotFound": "Es wurden keine Sicherungskonfigurationsdateien gefunden. Eine Sicherung wird beim ersten Start der App automatisch erstellt.",
+  "Config_Backup_NotFound_Title": "Keine Sicherung gefunden",
+  "Config_Backup_Select_Title": "Sicherungsdatei auswählen",
+  "Review_Mode_Title": "Konfigurations-Überprüfungsmodus",
+  "Review_Mode_Description": "Überprüfen Sie die Änderungen in allen Abschnitten und klicken Sie dann auf Konfiguration anwenden, wenn Sie bereit sind.",
+  "Review_Mode_Status_Format": "{0} von {1} überprüft ({2} werden angewendet)",
+  "Review_Mode_Apply_Button": "Konfiguration anwenden",
+  "Review_Mode_Cancel_Button": "Abbrechen",
+  "Review_Mode_Cancel_Confirmation_Title": "Konfigurations-Überprüfung abbrechen",
+  "Review_Mode_Cancel_Confirmation": "Sind Sie sicher, dass Sie abbrechen möchten? Es werden keine Änderungen angewendet.",
+  "Review_Mode_Diff_Toggle": "Aktuell: {0} → Konfiguration: {1}",
+  "Review_Mode_Select_Action": "Wählen Sie eine Aktion (Installieren oder Deinstallieren) für markierte Apps mit den Schaltflächen oben",
+  "Review_Mode_Action_Install": "Markierte Apps werden installiert, wenn Sie die Konfiguration anwenden",
+  "Review_Mode_Action_Remove": "Markierte Apps werden entfernt, wenn Sie die Konfiguration anwenden",
+  "Review_Mode_Skip_Checkbox": "Überprüfung überspringen und sofort anwenden",
+  "Review_Mode_Status_AllMatch": "Alle Einstellungen stimmen bereits mit der Konfiguration überein",
+  "Review_Mode_Status_NoItems": "Keine Konfigurationselemente zum Anwenden",
+  "Review_Mode_Action_ThemeWallpaper": "Das Standard-Hintergrundbild für dieses Design anwenden?",
+  "Review_Mode_Action_CleanTaskbar": "Die Taskleiste als Teil dieser Konfiguration bereinigen?",
+  "Review_Mode_Action_CleanStartMenu": "Das Startmenü als Teil dieser Konfiguration bereinigen?",
+  "Startup_Backup_ConfigBackup": "• Konfigurationssicherung: Eine Momentaufnahme Ihrer aktuellen Windows-Einstellungen",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Systemwiederherstellung: Suchen Sie 'Wiederherstellungspunkt erstellen' in den Windows-Einstellungen",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Sicherungskonfiguration: Verwenden Sie Konfiguration importieren in der Titelleiste und wählen Sie 'Sicherungskonfiguration importieren'",
+  "Help_LearnMore_WindowsApps": "Mehr über Windows-Apps erfahren",
+  "Help_LearnMore_ExternalApps": "Mehr über externe Apps erfahren",
+  "WIMUtil_Tooltip_DownloadWindows10": "Windows 10 ISO herunterladen",
+  "WIMUtil_Tooltip_DownloadWindows11": "Windows 11 ISO herunterladen",
+  "WIMUtil_Tooltip_Schneegans": "Schneegans XML-Generator öffnen",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Standard: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Sind Sie sicher, dass Sie die WIM-Abbilddatei löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Sind Sie sicher, dass Sie die ESD-Abbilddatei löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM-Datei erfolgreich gelöscht.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD-Datei erfolgreich gelöscht.",
+  "WIMUtil_Msg_DeleteFailed": "Die Abbilddatei konnte nicht gelöscht werden.",
+  "WIMUtil_Msg_DeleteError": "Fehler beim Löschen der Abbilddatei: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "{0} wird in {1} konvertiert...",
+  "WIMUtil_Status_CreatingIso": "ISO wird erstellt",
+  "WIMUtil_Button_OpenFolder": "Ordner öffnen",
+  "Loading_CheckingSystemProtection": "Systemschutz wird überprüft..."
 }
