--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Εναλλαγή Θέματος Winhance",
   "Tooltip_Donate": "Δωρεά για Υποστήριξη της Ανάπτυξης",
   "Tooltip_ReportBug": "Αναφορά Σφάλματος",
-  "Menu_ReportBug": "Αναφορά Σφάλματος",
   "Settings_Title": "Ρυθμίσεις Winhance",
+  "Settings_Description": "Διαμόρφωση προτιμήσεων εφαρμογής Winhance",
   "Settings_Menu_Language": "Γλώσσα",
   "Settings_Language_Description": "Επιλέξτε τη γλώσσα εμφάνισης της εφαρμογής",
   "Settings_Theme_Title": "Θέμα Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Προειδοποίηση",
   "Dialog_Error": "Σφάλμα",
   "Dialog_Confirmation": "Επιβεβαίωση",
-  "Dialog_Question": "Ερώτηση",
   "Dialog_ConfirmInstallation": "Επιβεβαίωση Εγκατάστασης",
   "Dialog_ConfirmRemoval": "Επιβεβαίωση Αφαίρεσης",
   "Dialog_ConfirmOperation": "Επιβεβαίωση {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Επιλέξτε ένα αρχείο ρυθμίσεων από τον υπολογιστή σας",
   "Dialog_ImportConfig_Option_Recommended_Title": "Εισαγωγή προτεινόμενων ρυθμίσεων",
   "Dialog_ImportConfig_Option_Recommended_Description": "Φόρτωση του προτεινόμενου αρχείου ρυθμίσεων του Winhance",
-  "Dialog_ImportOptions_Title": "Εισαγωγή Ρυθμίσεων",
   "Dialog_ImportOptions_Message": "Επιλέξτε πώς θέλετε να εισάγετε μια ρύθμιση:",
-  "ImportOption_Own": "Εισαγωγή του δικού μου αρχείου ρυθμίσεων",
-  "ImportOption_Recommended": "Εισαγωγή προτεινόμενης ρύθμισης Winhance",
-  "Dialog_Button_Yes": "Ναι",
-  "Dialog_Button_No": "Όχι",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Άκυρο",
-  "Dialog_Button_Continue": "Συνέχεια",
-  "Dialog_Button_Close": "Κλείσιμο",
-  "Dialog_Button_Apply": "Εφαρμογή",
-  "Dialog_Button_Refresh": "Ανανέωση",
-  "Dialog_Button_Help": "Βοήθεια",
   "Dialog_Unified_Section_SoftwareAndApps": "Λογισμικό \u0026 Εφαρμογές",
   "Dialog_Unified_Description_SoftwareAndApps": "Επιλογές για Πακέτα Windows και Εξωτερικό Λογισμικό",
   "Dialog_Unified_Section_WindowsApps": "Εφαρμογές Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Ανανέωση",
   "Button_Help": "Βοήθεια",
   "Button_Delete": "Διαγραφή",
+  "Button_Download": "Λήψη",
   "Common_On": "Ενεργό",
   "Common_Off": "Ανενεργό",
   "Common_Search_Placeholder": "Πληκτρολογήστε για αναζήτηση...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Δεν Επιλέχθηκε ISO",
   "WIMUtil_Status_WaitForConversion": "🔒 Αναμονή για ολοκλήρωση μετατροπής",
   "WIMUtil_Status_CompleteStep1": "🔒 Ολοκληρώστε το Βήμα 1",
-  "WIMUtil_Status_ReadyToAddXml": "Έτοιμο για προσθήκη XML",
   "WIMUtil_Status_XmlAdded": "✓ XML Προστέθηκε",
   "WIMUtil_Status_NoXmlAdded": "Δεν Προστέθηκε XML (Προαιρετικό)",
   "WIMUtil_Status_DriversAdded": "✓ Προγράμματα Οδήγησης Προστέθηκαν",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Το Winhance έχει προστατεύσει το σύστημά σας με αντίγραφα ασφαλείας.",
   "Startup_Backup_RestoreEnabled": "Η Επαναφορά Συστήματος ήταν απενεργοποιημένη και τώρα είναι ενεργοποιημένη.",
   "Startup_Backup_Created": "Δημιουργήθηκε:",
-  "Startup_Backup_RegistryBackups": "• Αντίγραφα ασφαλείας μητρώου ({0} κυψέλες) στο:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Σημείο Επαναφοράς Συστήματος: \u0027Αρχικό Σημείο Επαναφοράς Winhance\u0027",
   "Startup_Backup_ToRestore": "Για επαναφορά:",
-  "Startup_Backup_RestoreInstructions_System": "• Σύστημα: Ανοίξτε \u0027Δημιουργία σημείου επαναφοράς\u0027 στις Ρυθμίσεις \u003e Επαναφορά Συστήματος",
-  "Startup_Backup_RestoreInstructions_Registry": "• Μητρώο: Διπλό κλικ στα αρχεία .reg στον φάκελο αντιγράφων ασφαλείας",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Για επαναφορά: Αναζητήστε \u0027σημείο επαναφοράς\u0027 στις Ρυθμίσεις Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Για επαναφορά: Διπλό κλικ στα αρχεία .reg στον φάκελο αντιγράφων ασφαλείας",
   "Startup_Backup_Note": "Σημείωση: Η Επαναφορά Συστήματος δεν θα επαναφέρει αφαιρεμένες εφαρμογές.",
-  "Startup_Backup_Note_AdminRights": "Τα αντίγραφα ασφαλείας μητρώου είναι μιας χρήσης και απαιτούν δικαιώματα διαχειριστή.",
   "Startup_Backup_Checkbox_DontCreate": "Να μην δημιουργούνται σημεία επαναφοράς στο μέλλον",
-  "Startup_Backup_Checkbox_DontShow": "Να μην εμφανιστεί ξανά",
   "Startup_Migration_Title": "Η Τοποθεσία Σεναρίων Ενημερώθηκε",
   "Startup_Migration_SubTitle": "Μετεγκατάσταση Winhance",
   "Startup_Migration_Intro": "Το Winhance ενημέρωσε την τοποθεσία των σεναρίων αφαίρεσης Εφαρμογών Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Δημιουργήστε ένα αρχείο autounattend.xml βάσει των τρεχουσών επιλογών σας στο Winhance για προσαρμογή των Windows κατά την εγκατάσταση.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Περισσότερες επιλογές δημιουργίας σύντομα",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Πρόσθετες επιλογές προσαρμογής XML θα είναι διαθέσιμες σε μελλοντικές ενημερώσεις.",
-  "Button_OpenWIMUtil": "Άνοιγμα WIMUtil",
-  "Button_DoItLater": "Θα το κάνω αργότερα",
   "Dialog_FallbackDownload": "Εναλλακτική Μέθοδος Λήψης",
-  "Dialog_Button_Download": "Λήψη",
   "WindowsApps_Msg_FallbackDownload": "Το πακέτο \u0027{0}\u0027 δεν βρέθηκε μέσω WinGet, πιθανώς λόγω περιορισμών γεωγραφικής αγοράς.\n\nΤο Winhance μπορεί να κατεβάσει αυτό το πακέτο απευθείας από τους διακομιστές της Microsoft χρησιμοποιώντας μια εναλλακτική μέθοδο (store.rg-adguard.net).\n\n• Τα αρχεία πακέτου προέρχονται απευθείας από το επίσημο CDN της Microsoft\n• Αυτή η μέθοδος είναι πλήρως νόμιμη και ασφαλής\n• Παρακάμπτει μόνο τους περιφερειακούς περιορισμούς\n\nΘα θέλατε να προχωρήσετε με την εναλλακτική μέθοδο λήψης;",
   "WindowsApps_Checkbox_DontAskAgain": "Να μην ερωτηθώ ξανά για μελλοντικές εγκαταστάσεις",
   "Progress_RemovingOldFile": "Αφαίρεση παλιού αρχείου εικόνας...",
-  "Progress_WarningCouldNotDeleteFile": "Προειδοποίηση: Δεν ήταν δυνατή η διαγραφή του παλιού αρχείου",
   "Progress_ConversionCompleted": "Η μετατροπή ολοκληρώθηκε επιτυχώς",
   "Progress_ConversionFailed": "Η μετατροπή απέτυχε",
   "Progress_PreparingInstallAdk": "Προετοιμασία εγκατάστασης Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Έλεγχος κατάστασης Επαναφοράς Συστήματος...",
   "Progress_EnablingRestore": "Ενεργοποίηση Επαναφοράς Συστήματος...",
   "Progress_CreatingRestorePoint": "Δημιουργία σημείου επαναφοράς συστήματος...",
-  "Progress_BackingUpRegistry": "Δημιουργία αντιγράφου ασφαλείας κυψέλης μητρώου {0}...",
   "Progress_CheckingInstallStatus": "Έλεγχος κατάστασης εγκατάστασης...",
   "Progress_WaitForInitialLoad": "Παρακαλώ περιμένετε να ολοκληρωθεί η αρχική φόρτωση",
   "Progress_RefreshingStatus": "Ανανέωση κατάστασης εγκατάστασης...",
   "Progress_SelectionsCleared": "Όλες οι επιλογές καθαρίστηκαν",
   "Progress_NoInternetConnection": "Δεν υπάρχει διαθέσιμη σύνδεση στο διαδίκτυο. Η εγκατάσταση δεν μπορεί να προχωρήσει.",
-  "Progress_WingetInstalledSuccess": "Το WinGet εγκαταστάθηκε επιτυχώς",
   "Progress_ConvertingFormat": "Μετατροπή {0} σε {1}...",
   "Progress_ConvertingEdition": "Μετατροπή έκδοσης {0} του {1}...",
   "Progress_CopyingFile": "Αντιγραφή: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Αποτυχία εγκατάστασης WinGet. Δεν είναι δυνατή η εγκατάσταση του {0}.",
   "Progress_WinGet_StartingInstallation": "Έναρξη εγκατάστασης του {0}...",
   "Progress_WinGet_InstalledSuccess": "Εγκαταστάθηκε επιτυχώς {0}",
-  "Progress_WinGet_RepairingInstallation": "Επιδιόρθωση εγκατάστασης WinGet...",
-  "Progress_WinGet_FailedRepair": "Αποτυχία επιδιόρθωσης WinGet. Δεν είναι δυνατή η εγκατάσταση του {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Αποτυχία εντοπισμού WinGet μετά την επιδιόρθωση. Δεν είναι δυνατή η εγκατάσταση του {0}.",
-  "Progress_WinGet_RetryingInstallation": "Επανάληψη εγκατάστασης του {0}...",
   "Progress_WinGet_InstallationCancelled": "Η εγκατάσταση του {0} ακυρώθηκε",
   "Progress_WinGet_NetworkError": "Σφάλμα δικτύου κατά την εγκατάσταση του {0}. Παρακαλώ ελέγξτε τη σύνδεσή σας στο διαδίκτυο και προσπαθήστε ξανά.",
   "Progress_WinGet_InstallationError": "Σφάλμα εγκατάστασης {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Επαλήθευση εγκατάστασης WinGet...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Η επαλήθευση εγκατάστασης WinGet απέτυχε",
-  "Progress_WinGet_InstalledNotAccessible": "Το WinGet εγκαταστάθηκε αλλά δεν είναι προσβάσιμο. Παρακαλώ επανεκκινήστε την εφαρμογή.",
-  "Progress_WinGet_InitializingSources": "Αρχικοποίηση πηγών WinGet...",
   "Progress_WinGet_InstalledSuccessfully": "Το WinGet εγκαταστάθηκε επιτυχώς",
   "Progress_WinGet_InstallError": "Σφάλμα εγκατάστασης WinGet: {0}",
   "Progress_Store_FetchingLinks": "Λήψη συνδέσμων λήψης για {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Αποτυχία εγκατάστασης {0}",
   "Progress_Store_DownloadCancelled": "Η λήψη του {0} ακυρώθηκε",
   "Progress_Store_InstallError": "Σφάλμα εγκατάστασης {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Αίτηση πληροφοριών πακέτου για {0}...",
-  "Progress_Store_DownloadingMainPackage": "Λήψη κύριου πακέτου {0}...",
   "Progress_Store_DownloadingDependencies": "Λήψη {0} απαιτούμενου(ων) πακέτου(ων) εξάρτησης...",
   "Progress_Store_InstallingWithDependencies": "Εγκατάσταση {0} με {1} εξαρτήσεις...",
   "Progress_Store_Installing": "Εγκατάσταση {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Η εγκατάσταση απέτυχε: {0}",
   "Progress_WinGet_CheckingUpdates": "Έλεγχος για ενημερώσεις WinGet...",
   "Progress_WinGet_Updating": "Ενημέρωση του WinGet...",
-  "Progress_WinGet_CheckingVersion": "Έλεγχος έκδοσης WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Η ενημέρωση WinGet ξεκίνησε μέσω Store, επαλήθευση ολοκλήρωσης...",
-  "Progress_WinGet_WaitingForUpdate": "Αναμονή για ολοκλήρωση της ενημέρωσης WinGet...",
-  "Progress_WinGet_Reinstalling": "Επανεγκατάσταση WinGet...",
   "Progress_WinGet_UpdateSuccess": "Το WinGet ενημερώθηκε με επιτυχία",
-  "Progress_WinGet_UpdateCompleted": "Η ενημέρωση WinGet ολοκληρώθηκε",
   "Progress_WinGet_AlreadyUpToDate": "Το WinGet είναι ήδη ενημερωμένο",
-  "Progress_WinGet_InstalledLatest": "Το WinGet είναι ήδη εγκατεστημένο στην τελευταία έκδοση",
   "Progress_WinGet_Ready": "Το WinGet είναι έτοιμο",
   "Progress_Uninstalling": "Απεγκατάσταση {0}...",
   "Progress_Finalizing": "Ολοκλήρωση...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "Το WinGet δεν είναι διαθέσιμο σε αυτό το σύστημα.",
   "App_Tagline": "Βελτιώστε την εμπειρία σας στα Windows",
   "Loading_InitializingSettings": "Αρχικοποίηση ρυθμίσεων...",
-  "Loading_CreatingRestorePoint": "Δημιουργία σημείου επαναφοράς συστήματος. Παρακαλώ περιμένετε, μπορεί να διαρκέσει λίγο...",
   "Loading_MigratingScripts": "Μεταφορά σεναρίων...",
   "Loading_CheckingScripts": "Έλεγχος ενημερώσεων σεναρίων...",
-  "Loading_PreparingApp": "Προετοιμασία εφαρμογής..."
+  "Loading_PreparingApp": "Προετοιμασία εφαρμογής...",
+  "Tooltip_Documentation": "Τεκμηρίωση",
+  "Tooltip_ToggleNavigation": "\u0395\u03BD\u03B1\u03BB\u03BB\u03B1\u03B3\u03AE \u03C0\u03BB\u03BF\u03AE\u03B3\u03B7\u03C3\u03B7\u03C2",
+  "Dialog_ImportConfig_Option_Backup_Title": "Εισαγωγή αντιγράφου ασφαλείας",
+  "Dialog_ImportConfig_Option_Backup_Description": "Επαναφορά της διαμόρφωσης αντιγράφου ασφαλείας του συστήματός σας",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Επαναφορά προεπιλογών Windows",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Επαναφορά όλων των ρυθμίσεων στις εργοστασιακές προεπιλογές των Windows",
+  "Loading_CreatingConfigBackup": "Δημιουργία αντιγράφου ασφαλείας διαμόρφωσης...",
+  "Config_Backup_NotFound": "Δεν βρέθηκαν αρχεία αντιγράφου ασφαλείας. Ένα αντίγραφο ασφαλείας δημιουργείται αυτόματα κατά την πρώτη εκκίνηση της εφαρμογής.",
+  "Config_Backup_NotFound_Title": "Δεν Βρέθηκε Αντίγραφο Ασφαλείας",
+  "Config_Backup_Select_Title": "Επιλογή Αρχείου Αντιγράφου Ασφαλείας",
+  "Review_Mode_Title": "Λειτουργία Ελέγχου Διαμόρφωσης",
+  "Review_Mode_Description": "Ελέγξτε τις αλλαγές σε όλες τις ενότητες και πατήστε Εφαρμογή Διαμόρφωσης όταν είστε έτοιμοι.",
+  "Review_Mode_Status_Format": "{0} από {1} ελέγχθηκαν ({2} θα εφαρμοστούν)",
+  "Review_Mode_Apply_Button": "Εφαρμογή Διαμόρφωσης",
+  "Review_Mode_Cancel_Button": "Ακύρωση",
+  "Review_Mode_Cancel_Confirmation_Title": "Ακύρωση Ελέγχου Διαμόρφωσης",
+  "Review_Mode_Cancel_Confirmation": "Είστε σίγουροι ότι θέλετε να ακυρώσετε; Δεν θα εφαρμοστεί καμία αλλαγή.",
+  "Review_Mode_Diff_Toggle": "Τρέχον: {0} → Διαμόρφωση: {1}",
+  "Review_Mode_Select_Action": "Επιλέξτε μια ενέργεια (Εγκατάσταση ή Απεγκατάσταση) για τις επιλεγμένες εφαρμογές χρησιμοποιώντας τα κουμπιά παραπάνω",
+  "Review_Mode_Action_Install": "Οι επιλεγμένες εφαρμογές θα εγκατασταθούν όταν εφαρμόσετε τη διαμόρφωση",
+  "Review_Mode_Action_Remove": "Οι επιλεγμένες εφαρμογές θα αφαιρεθούν όταν εφαρμόσετε τη διαμόρφωση",
+  "Review_Mode_Skip_Checkbox": "Παράλειψη ελέγχου και άμεση εφαρμογή",
+  "Review_Mode_Status_AllMatch": "Όλες οι ρυθμίσεις ταιριάζουν ήδη με τη διαμόρφωση",
+  "Review_Mode_Status_NoItems": "Δεν υπάρχουν στοιχεία διαμόρφωσης προς εφαρμογή",
+  "Review_Mode_Action_ThemeWallpaper": "Εφαρμογή της προεπιλεγμένης ταπετσαρίας για αυτό το θέμα;",
+  "Review_Mode_Action_CleanTaskbar": "Καθαρισμός της γραμμής εργασιών ως μέρος αυτής της διαμόρφωσης;",
+  "Review_Mode_Action_CleanStartMenu": "Καθαρισμός του μενού Έναρξη ως μέρος αυτής της διαμόρφωσης;",
+  "Startup_Backup_ConfigBackup": "• Αντίγραφο Ασφαλείας Διαμόρφωσης: Ένα στιγμιότυπο των τρεχουσών ρυθμίσεων Windows σας",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Επαναφορά Συστήματος: Αναζητήστε 'Δημιουργία σημείου επαναφοράς' στις Ρυθμίσεις Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Αντίγραφο Διαμόρφωσης: Χρησιμοποιήστε Εισαγωγή Διαμόρφωσης στη γραμμή τίτλου και επιλέξτε 'Εισαγωγή αντιγράφου ασφαλείας'",
+  "Help_LearnMore_WindowsApps": "Μάθετε περισσότερα για τις Εφαρμογές Windows",
+  "Help_LearnMore_ExternalApps": "Μάθετε περισσότερα για τις Εξωτερικές Εφαρμογές",
+  "WIMUtil_Tooltip_DownloadWindows10": "Λήψη ISO Windows 10",
+  "WIMUtil_Tooltip_DownloadWindows11": "Λήψη ISO Windows 11",
+  "WIMUtil_Tooltip_Schneegans": "Άνοιγμα Schneegans XML Generator",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Προεπιλογή: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Είστε σίγουροι ότι θέλετε να διαγράψετε το αρχείο εικόνας WIM; Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Είστε σίγουροι ότι θέλετε να διαγράψετε το αρχείο εικόνας ESD; Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
+  "WIMUtil_Msg_DeleteWimSuccess": "Το αρχείο WIM διαγράφηκε επιτυχώς.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "Το αρχείο ESD διαγράφηκε επιτυχώς.",
+  "WIMUtil_Msg_DeleteFailed": "Αποτυχία διαγραφής του αρχείου εικόνας.",
+  "WIMUtil_Msg_DeleteError": "Σφάλμα κατά τη διαγραφή του αρχείου εικόνας: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Μετατροπή {0} σε {1}...",
+  "WIMUtil_Status_CreatingIso": "Δημιουργία ISO",
+  "WIMUtil_Button_OpenFolder": "Άνοιγμα Φακέλου",
+  "Loading_CheckingSystemProtection": "Έλεγχος προστασίας συστήματος..."
 }
