--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -21,9 +21,9 @@
   "Tooltip_Donate": "Donate to Support Development",
   "Tooltip_ReportBug": "Report a Bug",
   "Tooltip_Documentation": "Documentation",
-  "Menu_ReportBug": "Report a Bug",
-  "Menu_Documentation": "Documentation",
+  "Tooltip_ToggleNavigation": "Toggle Navigation",
   "Settings_Title": "Winhance Settings",
+  "Settings_Description": "Configure Winhance Application Preferences",
   "Settings_Menu_Language": "Language",
   "Settings_Language_Description": "Select the application display language",
   "Settings_Theme_Title": "Winhance Theme",
@@ -47,7 +47,6 @@
   "Dialog_Warning": "Warning",
   "Dialog_Error": "Error",
   "Dialog_Confirmation": "Confirmation",
-  "Dialog_Question": "Question",
   "Dialog_ConfirmInstallation": "Confirm Installation",
   "Dialog_ConfirmRemoval": "Confirm Removal",
   "Dialog_ConfirmOperation": "Confirm {0}",
@@ -82,19 +81,7 @@
   "Dialog_ImportConfig_Option_Backup_Description": "Restore your system backup configuration",
   "Dialog_ImportConfig_Option_Defaults_Title": "Restore Windows defaults",
   "Dialog_ImportConfig_Option_Defaults_Description": "Reset all settings to Windows factory defaults",
-  "Dialog_ImportOptions_Title": "Import Configuration",
   "Dialog_ImportOptions_Message": "Choose how you would like to import a configuration:",
-  "ImportOption_Own": "Import my own configuration file",
-  "ImportOption_Recommended": "Import Winhance recommended configuration",
-  "Dialog_Button_Yes": "Yes",
-  "Dialog_Button_No": "No",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Cancel",
-  "Dialog_Button_Continue": "Continue",
-  "Dialog_Button_Close": "Close",
-  "Dialog_Button_Apply": "Apply",
-  "Dialog_Button_Refresh": "Refresh",
-  "Dialog_Button_Help": "Help",
   "Dialog_Unified_Section_SoftwareAndApps": "Software \u0026 Apps",
   "Dialog_Unified_Description_SoftwareAndApps": "Selections for Windows Packages and External Software",
   "Dialog_Unified_Section_WindowsApps": "Windows Apps",
@@ -129,39 +116,21 @@
   "Config_Import_Error_NoSelection": "Please select at least one section to import.",
   "Config_Import_Error_NoSelection_Title": "No Sections Selected",
   "Loading_CreatingConfigBackup": "Creating configuration backup...",
-  "Config_Import_Page_Title": "Import Configuration",
-  "Config_Import_Page_Description": "Select which settings from the config file you want to apply to your computer.",
-  "Config_Import_ReviewBeforeApplying": "Review app selections before processing",
-  "Config_Import_ReviewBeforeApplying_Description": "Apps will be loaded into Software \u0026 Apps for review instead of being processed immediately",
-  "Config_Import_Apply": "Apply",
-  "Config_Import_Overlay_Title": "Applying Configuration",
-  "Config_Import_Overlay_PleaseWait": "Please wait while your settings are being applied...",
-  "Config_Import_Log_Success": "Configuration applied successfully",
-  "Config_Import_Log_Failed": "Configuration application failed",
   "Config_Backup_NotFound": "No backup configuration files were found. A backup is automatically created on first app launch.",
   "Config_Backup_NotFound_Title": "No Backup Found",
   "Config_Backup_Select_Title": "Select Backup File",
   "Review_Mode_Title": "Config Review Mode",
   "Review_Mode_Description": "Review the changes across all sections, then click Apply Config when ready.",
   "Review_Mode_Status_Format": "{0} of {1} reviewed ({2} will be applied)",
-  "Review_Mode_Status_Initial": "Navigate to each section to review changes",
   "Review_Mode_Apply_Button": "Apply Config",
   "Review_Mode_Cancel_Button": "Cancel",
   "Review_Mode_Cancel_Confirmation_Title": "Cancel Config Review",
   "Review_Mode_Cancel_Confirmation": "Are you sure you want to cancel? No changes will be applied.",
   "Review_Mode_Diff_Toggle": "Current: {0} \u2192 Config: {1}",
-  "Review_Mode_Diff_Selection": "Current: {0} \u2192 Config: {1}",
-  "Review_Mode_Diff_Numeric": "Current: {0} \u2192 Config: {1}",
-  "Review_Mode_Apply_Change": "Apply",
-  "Review_Mode_Reject_Change": "Don't apply",
   "Review_Mode_Select_Action": "Select an action (Install or Uninstall) for checked apps using the buttons above",
   "Review_Mode_Action_Install": "Checked apps will be installed when you apply the config",
   "Review_Mode_Action_Remove": "Checked apps will be removed when you apply the config",
-  "Review_Mode_WindowsApps_Banner": "Checked apps will be removed when you apply the config. Uncheck any you want to keep.",
-  "Review_Mode_ExternalApps_Banner": "Checked apps will be installed when you apply the config. Uncheck any you don\u0027t want.",
   "Review_Mode_Skip_Checkbox": "Skip review and apply immediately",
-  "Review_Mode_No_Changes_Title": "No Changes Detected",
-  "Review_Mode_No_Changes_Message": "The selected configuration matches your current system settings. There are no changes to review.",
   "Review_Mode_Status_AllMatch": "All settings already match config",
   "Review_Mode_Status_NoItems": "No configuration items to apply",
   "Review_Mode_Action_ThemeWallpaper": "Apply the default wallpaper for this theme?",
@@ -177,6 +146,7 @@
   "Button_Refresh": "Refresh",
   "Button_Help": "Help",
   "Button_Delete": "Delete",
+  "Button_Download": "Download",
   "Common_On": "On",
   "Common_Off": "Off",
   "Common_Search_Placeholder": "Type here to search...",
@@ -1147,7 +1117,6 @@
   "WIMUtil_Status_NoIsoSelected": "No ISO Selected",
   "WIMUtil_Status_WaitForConversion": "🔒 Wait for conversion to complete",
   "WIMUtil_Status_CompleteStep1": "🔒 Complete Step 1",
-  "WIMUtil_Status_ReadyToAddXml": "Ready to add XML",
   "WIMUtil_Status_XmlAdded": "✓ XML Added",
   "WIMUtil_Status_NoXmlAdded": "No XML Added (Optional)",
   "WIMUtil_Status_DriversAdded": "✓ Drivers Added",
@@ -1214,7 +1183,6 @@
   "Startup_Backup_RestoreInstructions_ConfigBackup": "\u2022 Backup Config: Use Import Config in the title bar and select \u0027Import Backup Config\u0027",
   "Startup_Backup_Note": "Note: System Restore will undo system-level changes. The backup config will restore your Windows settings to their original values.",
   "Startup_Backup_Checkbox_DontCreate": "Don\u0027t create restore points or backup configs in the future",
-  "Startup_Backup_Checkbox_DontShow": "Don\u0027t show this again",
   "Startup_Migration_Title": "Script Location Updated",
   "Startup_Migration_SubTitle": "Winhance Migration",
   "Startup_Migration_Intro": "Winhance has updated the location of Windows App removal scripts.",
@@ -1360,14 +1328,10 @@
   "AdvancedTools_GenerateCard_Description": "Generate an autounattend.xml file based on your current Winhance selections to customize Windows during installation.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "More generation options coming soon",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Additional XML customization options will be available in future updates.",
-  "Button_OpenWIMUtil": "Open WIMUtil",
-  "Button_DoItLater": "I\u0027ll Do It Later",
   "Dialog_FallbackDownload": "Alternative Download Method",
-  "Dialog_Button_Download": "Download",
   "WindowsApps_Msg_FallbackDownload": "The package \u0027{0}\u0027 could not be found via WinGet, likely due to geographic market restrictions.\n\nWinhance can download this package directly from Microsoft\u0027s servers using an alternative method (store.rg-adguard.net).\n\n• The package files come directly from Microsoft\u0027s official CDN\n• This method is completely legal and safe\n• It bypasses regional restrictions only\n\nWould you like to proceed with the alternative download method?",
   "WindowsApps_Checkbox_DontAskAgain": "Don\u0027t ask me again for future installations",
   "Progress_RemovingOldFile": "Removing old image file...",
-  "Progress_WarningCouldNotDeleteFile": "Warning: Could not delete old file",
   "Progress_ConversionCompleted": "Conversion completed successfully",
   "Progress_ConversionFailed": "Conversion failed",
   "Progress_PreparingInstallAdk": "Preparing to install Windows ADK...",
@@ -1407,13 +1371,11 @@
   "Progress_CheckingRestoreStatus": "Checking System Restore status...",
   "Progress_EnablingRestore": "Enabling System Restore...",
   "Progress_CreatingRestorePoint": "Creating system restore point...",
-  "Progress_BackingUpRegistry": "Backing up {0} registry hive...",
   "Progress_CheckingInstallStatus": "Checking installation status...",
   "Progress_WaitForInitialLoad": "Please wait for initial load to complete",
   "Progress_RefreshingStatus": "Refreshing installation status...",
   "Progress_SelectionsCleared": "All selections cleared",
   "Progress_NoInternetConnection": "No internet connection available. Installation cannot proceed.",
-  "Progress_WingetInstalledSuccess": "WinGet installed successfully",
   "Progress_ConvertingFormat": "Converting {0} to {1}...",
   "Progress_ConvertingEdition": "Converting edition {0} of {1}...",
   "Progress_CopyingFile": "Copying: {0}",
@@ -1426,10 +1388,6 @@
   "Progress_WinGet_FailedInstallManager": "Failed to install WinGet. Cannot install {0}.",
   "Progress_WinGet_StartingInstallation": "Starting installation of {0}...",
   "Progress_WinGet_InstalledSuccess": "Successfully installed {0}",
-  "Progress_WinGet_RepairingInstallation": "Repairing WinGet installation...",
-  "Progress_WinGet_FailedRepair": "Failed to repair WinGet. Cannot install {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Failed to locate WinGet after repair. Cannot install {0}.",
-  "Progress_WinGet_RetryingInstallation": "Retrying installation of {0}...",
   "Progress_WinGet_InstallationCancelled": "Installation of {0} was cancelled",
   "Progress_WinGet_NetworkError": "Network error while installing {0}. Please check your internet connection and try again.",
   "Progress_WinGet_InstallationError": "Error installing {0}: {1}",
@@ -1446,8 +1404,6 @@
   "Progress_WinGet_VerifyingInstallation": "Verifying WinGet installation...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "WinGet installation verification failed",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet installed but not accessible. Please restart the application.",
-  "Progress_WinGet_InitializingSources": "Initializing WinGet sources...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet installed successfully",
   "Progress_WinGet_InstallError": "Error installing WinGet: {0}",
   "Progress_Store_FetchingLinks": "Fetching download links for {0}...",
@@ -1456,8 +1412,6 @@
   "Progress_Store_FailedInstall": "Failed to install {0}",
   "Progress_Store_DownloadCancelled": "Download of {0} was cancelled",
   "Progress_Store_InstallError": "Error installing {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Requesting package information for {0}...",
-  "Progress_Store_DownloadingMainPackage": "Downloading {0} main package...",
   "Progress_Store_DownloadingDependencies": "Downloading {0} required dependency package(s)...",
   "Progress_Store_InstallingWithDependencies": "Installing {0} with {1} dependencies...",
   "Progress_Store_Installing": "Installing {0}...",
@@ -1466,14 +1420,8 @@
   "Progress_Store_NonRecoverableError": "Installation failed: {0}",
   "Progress_WinGet_CheckingUpdates": "Checking for WinGet updates...",
   "Progress_WinGet_Updating": "Updating WinGet...",
-  "Progress_WinGet_CheckingVersion": "Checking WinGet version...",
-  "Progress_WinGet_UpdateInitiated": "WinGet update initiated via Store, verifying completion...",
-  "Progress_WinGet_WaitingForUpdate": "Waiting for WinGet update to complete...",
-  "Progress_WinGet_Reinstalling": "Reinstalling WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet updated successfully",
-  "Progress_WinGet_UpdateCompleted": "WinGet update completed",
   "Progress_WinGet_AlreadyUpToDate": "WinGet is already up to date",
-  "Progress_WinGet_InstalledLatest": "WinGet is already installed at latest version",
   "Progress_WinGet_Ready": "WinGet is ready",
   "Progress_Uninstalling": "Uninstalling {0}...",
   "Progress_Finalizing": "Finalizing...",
@@ -1532,7 +1480,6 @@
   "App_Tagline": "Enhance Your Windows Experience",
   "Loading_InitializingSettings": "Initializing settings...",
   "Loading_CheckingSystemProtection": "Checking system protection...",
-  "Loading_CreatingRestorePoint": "Creating system restore point. Please wait, this might take a while...",
   "Loading_MigratingScripts": "Migrating scripts...",
   "Loading_CheckingScripts": "Checking for script updates...",
   "Loading_PreparingApp": "Loading apps and checking installation status..."
