--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Cambiar Tema de Winhance",
   "Tooltip_Donate": "Donar para Apoyar el Desarrollo",
   "Tooltip_ReportBug": "Informar de un Error",
-  "Menu_ReportBug": "Informar de un Error",
   "Settings_Title": "Configuración de Winhance",
+  "Settings_Description": "Configurar las preferencias de la aplicación Winhance",
   "Settings_Menu_Language": "Idioma",
   "Settings_Language_Description": "Selecciona el idioma de visualización de la aplicación",
   "Settings_Theme_Title": "Tema de Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Advertencia",
   "Dialog_Error": "Error",
   "Dialog_Confirmation": "Confirmación",
-  "Dialog_Question": "Pregunta",
   "Dialog_ConfirmInstallation": "Confirmar Instalación",
   "Dialog_ConfirmRemoval": "Confirmar Eliminación",
   "Dialog_ConfirmOperation": "Confirmar {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Selecciona un archivo de configuración de tu equipo",
   "Dialog_ImportConfig_Option_Recommended_Title": "Importar configuración recomendada",
   "Dialog_ImportConfig_Option_Recommended_Description": "Cargar el archivo de configuración recomendado de Winhance",
-  "Dialog_ImportOptions_Title": "Importar Configuración",
   "Dialog_ImportOptions_Message": "Elige cómo deseas importar una configuración:",
-  "ImportOption_Own": "Importar mi propio archivo de configuración",
-  "ImportOption_Recommended": "Importar configuración recomendada de Winhance",
-  "Dialog_Button_Yes": "Sí",
-  "Dialog_Button_No": "No",
-  "Dialog_Button_OK": "Aceptar",
-  "Dialog_Button_Cancel": "Cancelar",
-  "Dialog_Button_Continue": "Continuar",
-  "Dialog_Button_Close": "Cerrar",
-  "Dialog_Button_Apply": "Aplicar",
-  "Dialog_Button_Refresh": "Actualizar",
-  "Dialog_Button_Help": "Ayuda",
   "Dialog_Unified_Section_SoftwareAndApps": "Software y Aplicaciones",
   "Dialog_Unified_Description_SoftwareAndApps": "Selecciones para paquetes de Windows y software externo",
   "Dialog_Unified_Section_WindowsApps": "Aplicaciones de Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Actualizar",
   "Button_Help": "Ayuda",
   "Button_Delete": "Eliminar",
+  "Button_Download": "Descargar",
   "Common_On": "Activado",
   "Common_Off": "Desactivado",
   "Common_Search_Placeholder": "Escribe aquí para buscar...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Ningún ISO Seleccionado",
   "WIMUtil_Status_WaitForConversion": "🔒 Esperar a que la conversión se complete",
   "WIMUtil_Status_CompleteStep1": "🔒 Completar Paso 1",
-  "WIMUtil_Status_ReadyToAddXml": "Listo para añadir XML",
   "WIMUtil_Status_XmlAdded": "✓ XML Añadido",
   "WIMUtil_Status_NoXmlAdded": "Ningún XML Añadido (Opcional)",
   "WIMUtil_Status_DriversAdded": "✓ Controladores Añadidos",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance ha protegido tu sistema con copias de seguridad.",
   "Startup_Backup_RestoreEnabled": "La Restauración del Sistema estaba deshabilitada y ahora está habilitada.",
   "Startup_Backup_Created": "Creado:",
-  "Startup_Backup_RegistryBackups": "• Copias de seguridad del registro ({0} subárboles) en:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Punto de Restauración del Sistema: 'Punto de Restauración Inicial de Winhance'",
   "Startup_Backup_ToRestore": "Para restaurar:",
-  "Startup_Backup_RestoreInstructions_System": "• Sistema: Abre 'Crear un punto de restauración' en Configuración > Restauración del Sistema",
-  "Startup_Backup_RestoreInstructions_Registry": "• Registro: Haz doble clic en los archivos .reg de la carpeta de copia de seguridad",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Para restaurar: Busca 'punto de restauración' en la Configuración de Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Para restaurar: Haz doble clic en los archivos .reg de la carpeta de copia de seguridad",
   "Startup_Backup_Note": "Nota: La Restauración del Sistema no restaurará las aplicaciones eliminadas.",
-  "Startup_Backup_Note_AdminRights": "Las copias de seguridad del registro son únicas y requieren derechos de administrador.",
   "Startup_Backup_Checkbox_DontCreate": "No crear puntos de restauración en el futuro",
-  "Startup_Backup_Checkbox_DontShow": "No volver a mostrar esto",
   "Startup_Migration_Title": "Ubicación del Script Actualizada",
   "Startup_Migration_SubTitle": "Migración de Winhance",
   "Startup_Migration_Intro": "Winhance ha actualizado la ubicación de los scripts de eliminación de aplicaciones de Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Genere un archivo autounattend.xml basado en sus selecciones actuales de Winhance para personalizar Windows durante la instalación.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Más opciones de generación próximamente",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Opciones adicionales de personalización XML estarán disponibles en futuras actualizaciones.",
-  "Button_OpenWIMUtil": "Abrir Utilidad WIM",
-  "Button_DoItLater": "Lo Haré Más Tarde",
   "Dialog_FallbackDownload": "Método de Descarga Alternativo",
-  "Dialog_Button_Download": "Descargar",
   "WindowsApps_Msg_FallbackDownload": "El paquete '{0}' no se pudo encontrar a través de WinGet, probablemente debido a restricciones del mercado geográfico.\n\nWinhance puede descargar este paquete directamente desde los servidores de Microsoft usando un método alternativo (store.rg-adguard.net).\n\n• Los archivos del paquete provienen directamente del CDN oficial de Microsoft\n• Este método es completamente legal y seguro\n• Solo evita las restricciones regionales\n\n¿Deseas continuar con el método de descarga alternativo?",
   "WindowsApps_Checkbox_DontAskAgain": "No volver a preguntar para futuras instalaciones",
   "Progress_RemovingOldFile": "Eliminando archivo de imagen antiguo...",
-  "Progress_WarningCouldNotDeleteFile": "Advertencia: No se pudo eliminar el archivo antiguo",
   "Progress_ConversionCompleted": "Conversión completada con éxito",
   "Progress_ConversionFailed": "Conversión fallida",
   "Progress_PreparingInstallAdk": "Preparando para instalar Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Comprobando estado de Restauración del Sistema...",
   "Progress_EnablingRestore": "Habilitando Restauración del Sistema...",
   "Progress_CreatingRestorePoint": "Creando punto de restauración del sistema...",
-  "Progress_BackingUpRegistry": "Haciendo copia de seguridad del subárbol del registro {0}...",
   "Progress_CheckingInstallStatus": "Comprobando estado de instalación...",
   "Progress_WaitForInitialLoad": "Espera a que se complete la carga inicial",
   "Progress_RefreshingStatus": "Actualizando estado de instalación...",
   "Progress_SelectionsCleared": "Todas las selecciones borradas",
   "Progress_NoInternetConnection": "No hay conexión a Internet disponible. La instalación no puede continuar.",
-  "Progress_WingetInstalledSuccess": "WinGet instalado con éxito",
   "Progress_ConvertingFormat": "Convirtiendo {0} a {1}...",
   "Progress_ConvertingEdition": "Convirtiendo edición {0} de {1}...",
   "Progress_CopyingFile": "Copiando: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Error al instalar WinGet. No se puede instalar {0}.",
   "Progress_WinGet_StartingInstallation": "Iniciando instalación de {0}...",
   "Progress_WinGet_InstalledSuccess": "Instalado con éxito {0}",
-  "Progress_WinGet_RepairingInstallation": "Reparando instalación de WinGet...",
-  "Progress_WinGet_FailedRepair": "Error al reparar WinGet. No se puede instalar {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Error al localizar WinGet después de la reparación. No se puede instalar {0}.",
-  "Progress_WinGet_RetryingInstallation": "Reintentando instalación de {0}...",
   "Progress_WinGet_InstallationCancelled": "La instalación de {0} fue cancelada",
   "Progress_WinGet_NetworkError": "Error de red al instalar {0}. Comprueba tu conexión a Internet e inténtalo de nuevo.",
   "Progress_WinGet_InstallationError": "Error al instalar {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Verificando instalación de WinGet...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Fallo en la verificación de la instalación de WinGet",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet instalado pero no accesible. Reinicia la aplicación.",
-  "Progress_WinGet_InitializingSources": "Inicializando fuentes de WinGet...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet instalado con éxito",
   "Progress_WinGet_InstallError": "Error al instalar WinGet: {0}",
   "Progress_Store_FetchingLinks": "Obteniendo enlaces de descarga para {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Error al instalar {0}",
   "Progress_Store_DownloadCancelled": "La descarga de {0} fue cancelada",
   "Progress_Store_InstallError": "Error al instalar {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Solicitando información del paquete para {0}...",
-  "Progress_Store_DownloadingMainPackage": "Descargando paquete principal de {0}...",
   "Progress_Store_DownloadingDependencies": "Descargando paquete(s) de dependencia(s) requerido(s) para {0}...",
   "Progress_Store_InstallingWithDependencies": "Instalando {0} con {1} dependencias...",
   "Progress_Store_Installing": "Instalando {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Error de instalación: {0}",
   "Progress_WinGet_CheckingUpdates": "Buscando actualizaciones de WinGet...",
   "Progress_WinGet_Updating": "Actualizando WinGet...",
-  "Progress_WinGet_CheckingVersion": "Comprobando versión de WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Actualización de WinGet iniciada a través de Store, verificando finalización...",
-  "Progress_WinGet_WaitingForUpdate": "Esperando a que se complete la actualización de WinGet...",
-  "Progress_WinGet_Reinstalling": "Reinstalando WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet actualizado correctamente",
-  "Progress_WinGet_UpdateCompleted": "Actualización de WinGet completada",
   "Progress_WinGet_AlreadyUpToDate": "WinGet ya está actualizado",
-  "Progress_WinGet_InstalledLatest": "WinGet ya está instalado en la última versión",
   "Progress_WinGet_Ready": "WinGet está listo",
   "Progress_Uninstalling": "Desinstalando {0}...",
   "Progress_Finalizing": "Finalizando...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet no está disponible en este sistema.",
   "App_Tagline": "Mejora tu experiencia en Windows",
   "Loading_InitializingSettings": "Inicializando configuración...",
-  "Loading_CreatingRestorePoint": "Creando punto de restauración del sistema. Por favor espera, esto puede tardar un poco...",
   "Loading_MigratingScripts": "Migrando scripts...",
   "Loading_CheckingScripts": "Comprobando actualizaciones de scripts...",
-  "Loading_PreparingApp": "Preparando la aplicación..."
+  "Loading_PreparingApp": "Preparando la aplicación...",
+  "Tooltip_Documentation": "Documentación",
+  "Tooltip_ToggleNavigation": "Alternar navegaci\u00F3n",
+  "Dialog_ImportConfig_Option_Backup_Title": "Importar copia de seguridad",
+  "Dialog_ImportConfig_Option_Backup_Description": "Restaurar la configuración de copia de seguridad de su sistema",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Restaurar valores predeterminados de Windows",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Restablecer todas las configuraciones a los valores de fábrica de Windows",
+  "Loading_CreatingConfigBackup": "Creando copia de seguridad de la configuración...",
+  "Config_Backup_NotFound": "No se encontraron archivos de copia de seguridad. Se crea una copia de seguridad automáticamente en el primer inicio de la aplicación.",
+  "Config_Backup_NotFound_Title": "Copia de Seguridad No Encontrada",
+  "Config_Backup_Select_Title": "Seleccionar Archivo de Copia de Seguridad",
+  "Review_Mode_Title": "Modo de Revisión de Configuración",
+  "Review_Mode_Description": "Revise los cambios en todas las secciones y haga clic en Aplicar Configuración cuando esté listo.",
+  "Review_Mode_Status_Format": "{0} de {1} revisados ({2} se aplicarán)",
+  "Review_Mode_Apply_Button": "Aplicar Configuración",
+  "Review_Mode_Cancel_Button": "Cancelar",
+  "Review_Mode_Cancel_Confirmation_Title": "Cancelar Revisión de Configuración",
+  "Review_Mode_Cancel_Confirmation": "¿Está seguro de que desea cancelar? No se aplicará ningún cambio.",
+  "Review_Mode_Diff_Toggle": "Actual: {0} → Configuración: {1}",
+  "Review_Mode_Select_Action": "Seleccione una acción (Instalar o Desinstalar) para las aplicaciones marcadas usando los botones de arriba",
+  "Review_Mode_Action_Install": "Las aplicaciones marcadas se instalarán cuando aplique la configuración",
+  "Review_Mode_Action_Remove": "Las aplicaciones marcadas se eliminarán cuando aplique la configuración",
+  "Review_Mode_Skip_Checkbox": "Omitir revisión y aplicar inmediatamente",
+  "Review_Mode_Status_AllMatch": "Todos los ajustes ya coinciden con la configuración",
+  "Review_Mode_Status_NoItems": "No hay elementos de configuración que aplicar",
+  "Review_Mode_Action_ThemeWallpaper": "¿Aplicar el fondo de pantalla predeterminado para este tema?",
+  "Review_Mode_Action_CleanTaskbar": "¿Limpiar la barra de tareas como parte de esta configuración?",
+  "Review_Mode_Action_CleanStartMenu": "¿Limpiar el menú Inicio como parte de esta configuración?",
+  "Startup_Backup_ConfigBackup": "• Copia de Seguridad de Configuración: Una instantánea de sus ajustes actuales de Windows",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Restaurar Sistema: Busque 'Crear un punto de restauración' en la Configuración de Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Copia de Configuración: Use Importar Configuración en la barra de título y seleccione 'Importar copia de seguridad'",
+  "Help_LearnMore_WindowsApps": "Más información sobre Aplicaciones de Windows",
+  "Help_LearnMore_ExternalApps": "Más información sobre Aplicaciones Externas",
+  "WIMUtil_Tooltip_DownloadWindows10": "Descargar ISO de Windows 10",
+  "WIMUtil_Tooltip_DownloadWindows11": "Descargar ISO de Windows 11",
+  "WIMUtil_Tooltip_Schneegans": "Abrir Schneegans XML Generator",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Predeterminado: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "¿Está seguro de que desea eliminar el archivo de imagen WIM? Esta acción no se puede deshacer.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "¿Está seguro de que desea eliminar el archivo de imagen ESD? Esta acción no se puede deshacer.",
+  "WIMUtil_Msg_DeleteWimSuccess": "Archivo WIM eliminado correctamente.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "Archivo ESD eliminado correctamente.",
+  "WIMUtil_Msg_DeleteFailed": "Error al eliminar el archivo de imagen.",
+  "WIMUtil_Msg_DeleteError": "Error al eliminar el archivo de imagen: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Convirtiendo {0} a {1}...",
+  "WIMUtil_Status_CreatingIso": "Creando ISO",
+  "WIMUtil_Button_OpenFolder": "Abrir Carpeta",
+  "Loading_CheckingSystemProtection": "Comprobando protección del sistema..."
 }
