--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Changer le thème de Winhance",
   "Tooltip_Donate": "Faire un don pour soutenir le développement",
   "Tooltip_ReportBug": "Signaler un bug",
-  "Menu_ReportBug": "Signaler un bug",
   "Settings_Title": "Paramètres de Winhance",
+  "Settings_Description": "Configurer les préférences de l'application Winhance",
   "Settings_Menu_Language": "Langue",
   "Settings_Language_Description": "Sélectionner la langue d'affichage de l'application",
   "Settings_Theme_Title": "Thème de Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Avertissement",
   "Dialog_Error": "Erreur",
   "Dialog_Confirmation": "Confirmation",
-  "Dialog_Question": "Question",
   "Dialog_ConfirmInstallation": "Confirmer l'installation",
   "Dialog_ConfirmRemoval": "Confirmer la suppression",
   "Dialog_ConfirmOperation": "Confirmer {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Sélectionner un fichier de configuration depuis votre ordinateur",
   "Dialog_ImportConfig_Option_Recommended_Title": "Importer la configuration recommandée",
   "Dialog_ImportConfig_Option_Recommended_Description": "Charger le fichier de configuration recommandé de Winhance",
-  "Dialog_ImportOptions_Title": "Importer la configuration",
   "Dialog_ImportOptions_Message": "Choisissez comment vous souhaitez importer une configuration :",
-  "ImportOption_Own": "Importer mon propre fichier de configuration",
-  "ImportOption_Recommended": "Importer la configuration recommandée de Winhance",
-  "Dialog_Button_Yes": "Oui",
-  "Dialog_Button_No": "Non",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Annuler",
-  "Dialog_Button_Continue": "Continuer",
-  "Dialog_Button_Close": "Fermer",
-  "Dialog_Button_Apply": "Appliquer",
-  "Dialog_Button_Refresh": "Actualiser",
-  "Dialog_Button_Help": "Aide",
   "Dialog_Unified_Section_SoftwareAndApps": "Logiciels & Apps",
   "Dialog_Unified_Description_SoftwareAndApps": "Sélections pour les paquets Windows et les logiciels externes",
   "Dialog_Unified_Section_WindowsApps": "Applications Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Actualiser",
   "Button_Help": "Aide",
   "Button_Delete": "Supprimer",
+  "Button_Download": "Télécharger",
   "Common_On": "Activé",
   "Common_Off": "Désactivé",
   "Common_Search_Placeholder": "Tapez ici pour rechercher...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Aucune ISO sélectionnée",
   "WIMUtil_Status_WaitForConversion": "🔒 Attendre la fin de la conversion",
   "WIMUtil_Status_CompleteStep1": "🔒 Terminer l'étape 1",
-  "WIMUtil_Status_ReadyToAddXml": "Prêt à ajouter un XML",
   "WIMUtil_Status_XmlAdded": "✓ XML ajouté",
   "WIMUtil_Status_NoXmlAdded": "Aucun XML ajouté (facultatif)",
   "WIMUtil_Status_DriversAdded": "✓ Pilotes ajoutés",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance a protégé votre système avec des sauvegardes.",
   "Startup_Backup_RestoreEnabled": "La restauration du système était désactivée et est maintenant activée.",
   "Startup_Backup_Created": "Créé :",
-  "Startup_Backup_RegistryBackups": "• Sauvegardes du Registre ({0} ruches) à :",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Point de restauration système : 'Point de restauration initial Winhance'",
   "Startup_Backup_ToRestore": "Pour restaurer :",
-  "Startup_Backup_RestoreInstructions_System": "• Système : ouvrez 'Créer un point de restauration' dans Paramètres > Restauration du système",
-  "Startup_Backup_RestoreInstructions_Registry": "• Registre : double-cliquez sur les fichiers .reg dans le dossier de sauvegarde",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Pour restaurer : recherchez 'point de restauration' dans les paramètres Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Pour restaurer : double-cliquez sur les fichiers .reg dans le dossier de sauvegarde",
   "Startup_Backup_Note": "Remarque : la restauration du système ne restaurera pas les applications supprimées.",
-  "Startup_Backup_Note_AdminRights": "Les sauvegardes du Registre sont uniques et nécessitent des droits d'administrateur.",
   "Startup_Backup_Checkbox_DontCreate": "Ne pas créer de points de restauration à l'avenir",
-  "Startup_Backup_Checkbox_DontShow": "Ne plus afficher ce message",
   "Startup_Migration_Title": "Emplacement du script mis à jour",
   "Startup_Migration_SubTitle": "Migration Winhance",
   "Startup_Migration_Intro": "Winhance a mis à jour l'emplacement des scripts de suppression d'applications Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Générez un fichier autounattend.xml basé sur vos sélections Winhance actuelles pour personnaliser Windows lors de l'installation.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Plus d'options de génération bientôt disponibles",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Des options de personnalisation XML supplémentaires seront disponibles dans les prochaines mises à jour.",
-  "Button_OpenWIMUtil": "Ouvrir WIMUtil",
-  "Button_DoItLater": "Je le ferai plus tard",
   "Dialog_FallbackDownload": "Méthode de téléchargement alternative",
-  "Dialog_Button_Download": "Télécharger",
   "WindowsApps_Msg_FallbackDownload": "Le paquet '{0}' n'a pas pu être trouvé via WinGet, probablement en raison de restrictions géographiques du marché.\n\nWinhance peut télécharger ce paquet directement depuis les serveurs de Microsoft en utilisant une méthode alternative (store.rg-adguard.net).\n\n• Les fichiers du paquet proviennent directement du CDN officiel de Microsoft\n• Cette méthode est totalement légale et sûre\n• Elle contourne uniquement les restrictions régionales\n\nVoulez-vous procéder à la méthode de téléchargement alternative ?",
   "WindowsApps_Checkbox_DontAskAgain": "Ne plus me demander pour les futures installations",
   "Progress_RemovingOldFile": "Suppression de l'ancien fichier image...",
-  "Progress_WarningCouldNotDeleteFile": "Avertissement : impossible de supprimer l'ancien fichier",
   "Progress_ConversionCompleted": "Conversion terminée avec succès",
   "Progress_ConversionFailed": "Échec de la conversion",
   "Progress_PreparingInstallAdk": "Préparation de l'installation de l'ADK Windows...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Vérification de l'état de la restauration du système...",
   "Progress_EnablingRestore": "Activation de la restauration du système...",
   "Progress_CreatingRestorePoint": "Création du point de restauration système...",
-  "Progress_BackingUpRegistry": "Sauvegarde de la ruche de Registre {0}...",
   "Progress_CheckingInstallStatus": "Vérification de l'état de l'installation...",
   "Progress_WaitForInitialLoad": "Veuillez attendre la fin du chargement initial",
   "Progress_RefreshingStatus": "Actualisation de l'état de l'installation...",
   "Progress_SelectionsCleared": "Toutes les sélections ont été effacées",
   "Progress_NoInternetConnection": "Aucune connexion Internet disponible. L'installation ne peut pas continuer.",
-  "Progress_WingetInstalledSuccess": "WinGet installé avec succès",
   "Progress_ConvertingFormat": "Conversion de {0} en {1}...",
   "Progress_ConvertingEdition": "Conversion de l'édition {0} de {1}...",
   "Progress_CopyingFile": "Copie de : {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Échec de l'installation de WinGet. Impossible d'installer {0}.",
   "Progress_WinGet_StartingInstallation": "Démarrage de l'installation de {0}...",
   "Progress_WinGet_InstalledSuccess": "Installation réussie de {0}",
-  "Progress_WinGet_RepairingInstallation": "Réparation de l'installation de WinGet...",
-  "Progress_WinGet_FailedRepair": "Échec de la réparation de WinGet. Impossible d'installer {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Échec de la localisation de WinGet après réparation. Impossible d'installer {0}.",
-  "Progress_WinGet_RetryingInstallation": "Nouvelle tentative d'installation de {0}...",
   "Progress_WinGet_InstallationCancelled": "L'installation de {0} a été annulée",
   "Progress_WinGet_NetworkError": "Erreur réseau lors de l'installation de {0}. Veuillez vérifier votre connexion Internet et réessayer.",
   "Progress_WinGet_InstallationError": "Erreur lors de l'installation de {0} : {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Vérification de l'installation de WinGet...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Échec de la vérification de l'installation de WinGet",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet est installé mais n'est pas accessible. Veuillez redémarrer l'application.",
-  "Progress_WinGet_InitializingSources": "Initialisation des sources WinGet...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet installé avec succès",
   "Progress_WinGet_InstallError": "Erreur lors de l'installation de WinGet : {0}",
   "Progress_Store_FetchingLinks": "Récupération des liens de téléchargement pour {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Échec de l'installation de {0}",
   "Progress_Store_DownloadCancelled": "Le téléchargement de {0} a été annulé",
   "Progress_Store_InstallError": "Erreur lors de l'installation de {0} : {1}",
-  "Progress_Store_RequestingPackageInfo": "Demande d'informations sur le paquet pour {0}...",
-  "Progress_Store_DownloadingMainPackage": "Téléchargement du paquet principal de {0}...",
   "Progress_Store_DownloadingDependencies": "Téléchargement du ou des paquets de dépendances requis pour {0}...",
   "Progress_Store_InstallingWithDependencies": "Installation de {0} avec {1} dépendances...",
   "Progress_Store_Installing": "Installation de {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "L'installation a échoué : {0}",
   "Progress_WinGet_CheckingUpdates": "Vérification des mises à jour de WinGet...",
   "Progress_WinGet_Updating": "Mise à jour de WinGet...",
-  "Progress_WinGet_CheckingVersion": "Vérification de la version de WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Mise à jour de WinGet initiée via le Store, vérification de la finalisation...",
-  "Progress_WinGet_WaitingForUpdate": "Attente de la fin de la mise à jour de WinGet...",
-  "Progress_WinGet_Reinstalling": "Réinstallation de WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet mis à jour avec succès",
-  "Progress_WinGet_UpdateCompleted": "Mise à jour de WinGet terminée",
   "Progress_WinGet_AlreadyUpToDate": "WinGet est déjà à jour",
-  "Progress_WinGet_InstalledLatest": "WinGet est déjà installé dans sa dernière version",
   "Progress_WinGet_Ready": "WinGet est prêt",
   "Progress_Uninstalling": "Désinstallation de {0}...",
   "Progress_Finalizing": "Finalisation...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet n'est pas disponible sur ce système.",
   "App_Tagline": "Améliorez votre expérience Windows",
   "Loading_InitializingSettings": "Initialisation des paramètres...",
-  "Loading_CreatingRestorePoint": "Création du point de restauration système. Veuillez patienter, cela peut prendre un moment...",
   "Loading_MigratingScripts": "Migration des scripts...",
   "Loading_CheckingScripts": "Vérification des mises à jour des scripts...",
-  "Loading_PreparingApp": "Préparation de l'application..."
+  "Loading_PreparingApp": "Préparation de l'application...",
+  "Tooltip_Documentation": "Documentation",
+  "Tooltip_ToggleNavigation": "Basculer la navigation",
+  "Dialog_ImportConfig_Option_Backup_Title": "Importer la sauvegarde",
+  "Dialog_ImportConfig_Option_Backup_Description": "Restaurer la configuration de sauvegarde de votre système",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Restaurer les valeurs par défaut de Windows",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Réinitialiser tous les paramètres aux valeurs d'usine de Windows",
+  "Loading_CreatingConfigBackup": "Création de la sauvegarde de configuration...",
+  "Config_Backup_NotFound": "Aucun fichier de sauvegarde trouvé. Une sauvegarde est automatiquement créée au premier lancement de l'application.",
+  "Config_Backup_NotFound_Title": "Aucune Sauvegarde Trouvée",
+  "Config_Backup_Select_Title": "Sélectionner le Fichier de Sauvegarde",
+  "Review_Mode_Title": "Mode de Révision de Configuration",
+  "Review_Mode_Description": "Vérifiez les modifications dans toutes les sections, puis cliquez sur Appliquer la Configuration lorsque vous êtes prêt.",
+  "Review_Mode_Status_Format": "{0} sur {1} vérifiés ({2} seront appliqués)",
+  "Review_Mode_Apply_Button": "Appliquer la Configuration",
+  "Review_Mode_Cancel_Button": "Annuler",
+  "Review_Mode_Cancel_Confirmation_Title": "Annuler la Révision de Configuration",
+  "Review_Mode_Cancel_Confirmation": "Êtes-vous sûr de vouloir annuler ? Aucune modification ne sera appliquée.",
+  "Review_Mode_Diff_Toggle": "Actuel : {0} → Configuration : {1}",
+  "Review_Mode_Select_Action": "Sélectionnez une action (Installer ou Désinstaller) pour les applications cochées à l'aide des boutons ci-dessus",
+  "Review_Mode_Action_Install": "Les applications cochées seront installées lorsque vous appliquerez la configuration",
+  "Review_Mode_Action_Remove": "Les applications cochées seront supprimées lorsque vous appliquerez la configuration",
+  "Review_Mode_Skip_Checkbox": "Ignorer la vérification et appliquer immédiatement",
+  "Review_Mode_Status_AllMatch": "Tous les paramètres correspondent déjà à la configuration",
+  "Review_Mode_Status_NoItems": "Aucun élément de configuration à appliquer",
+  "Review_Mode_Action_ThemeWallpaper": "Appliquer le fond d'écran par défaut pour ce thème ?",
+  "Review_Mode_Action_CleanTaskbar": "Nettoyer la barre des tâches dans le cadre de cette configuration ?",
+  "Review_Mode_Action_CleanStartMenu": "Nettoyer le menu Démarrer dans le cadre de cette configuration ?",
+  "Startup_Backup_ConfigBackup": "• Sauvegarde de Configuration : Un instantané de vos paramètres Windows actuels",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Restauration du Système : Recherchez 'Créer un point de restauration' dans les Paramètres Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Sauvegarde de Configuration : Utilisez Importer la Configuration dans la barre de titre et sélectionnez 'Importer la sauvegarde'",
+  "Help_LearnMore_WindowsApps": "En savoir plus sur les Applications Windows",
+  "Help_LearnMore_ExternalApps": "En savoir plus sur les Applications Externes",
+  "WIMUtil_Tooltip_DownloadWindows10": "Télécharger l'ISO Windows 10",
+  "WIMUtil_Tooltip_DownloadWindows11": "Télécharger l'ISO Windows 11",
+  "WIMUtil_Tooltip_Schneegans": "Ouvrir Schneegans XML Generator",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Par défaut : {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Êtes-vous sûr de vouloir supprimer le fichier image WIM ? Cette action est irréversible.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Êtes-vous sûr de vouloir supprimer le fichier image ESD ? Cette action est irréversible.",
+  "WIMUtil_Msg_DeleteWimSuccess": "Fichier WIM supprimé avec succès.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "Fichier ESD supprimé avec succès.",
+  "WIMUtil_Msg_DeleteFailed": "Échec de la suppression du fichier image.",
+  "WIMUtil_Msg_DeleteError": "Erreur lors de la suppression du fichier image : {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Conversion de {0} en {1}...",
+  "WIMUtil_Status_CreatingIso": "Création de l'ISO",
+  "WIMUtil_Button_OpenFolder": "Ouvrir le Dossier",
+  "Loading_CheckingSystemProtection": "Vérification de la protection du système..."
 }
