--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "विनहान्स थीम टॉगल करें",
   "Tooltip_Donate": "विकास का समर्थन करने के लिए दान करें",
   "Tooltip_ReportBug": "एक बग की रिपोर्ट करें",
-  "Menu_ReportBug": "एक बग की रिपोर्ट करें",
   "Settings_Title": "विनहान्स सेटिंग्स",
+  "Settings_Description": "Winhance एप्लिकेशन प्राथमिकताएँ कॉन्फ़िगर करें",
   "Settings_Menu_Language": "भाषा",
   "Settings_Language_Description": "एप्लिकेशन डिस्प्ले भाषा चुनें",
   "Settings_Theme_Title": "विनहान्स थीम",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "चेतावनी",
   "Dialog_Error": "त्रुटि",
   "Dialog_Confirmation": "पुष्टि",
-  "Dialog_Question": "प्रश्न",
   "Dialog_ConfirmInstallation": "इंस्टॉलेशन की पुष्टि करें",
   "Dialog_ConfirmRemoval": "हटाने की पुष्टि करें",
   "Dialog_ConfirmOperation": "{0} की पुष्टि करें",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "अपने कंप्यूटर से एक कॉन्फ़िगरेशन फ़ाइल चुनें",
   "Dialog_ImportConfig_Option_Recommended_Title": "अनुशंसित कॉन्फिग आयात करें",
   "Dialog_ImportConfig_Option_Recommended_Description": "विनहान्स की अनुशंसित कॉन्फिग फ़ाइल लोड करें",
-  "Dialog_ImportOptions_Title": "कॉन्फ़िगरेशन आयात करें",
   "Dialog_ImportOptions_Message": "चुनें कि आप कॉन्फ़िगरेशन कैसे आयात करना चाहते हैं:",
-  "ImportOption_Own": "मेरी अपनी कॉन्फ़िगरेशन फ़ाइल आयात करें",
-  "ImportOption_Recommended": "Winhance अनुशंसित कॉन्फ़िगरेशन आयात करें",
-  "Dialog_Button_Yes": "हाँ",
-  "Dialog_Button_No": "नहीं",
-  "Dialog_Button_OK": "ठीक है",
-  "Dialog_Button_Cancel": "रद्द करें",
-  "Dialog_Button_Continue": "जारी रखें",
-  "Dialog_Button_Close": "बंद करें",
-  "Dialog_Button_Apply": "लागू करें",
-  "Dialog_Button_Refresh": "रीफ्रेश",
-  "Dialog_Button_Help": "सहायता",
   "Dialog_Unified_Section_SoftwareAndApps": "सॉफ्टवेयर और ऐप्स",
   "Dialog_Unified_Description_SoftwareAndApps": "विंडोज पैकेज और बाहरी सॉफ्टवेयर के लिए चयन",
   "Dialog_Unified_Section_WindowsApps": "विंडोज ऐप्स",
@@ -132,6 +119,7 @@
   "Button_Refresh": "रीफ्रेश",
   "Button_Help": "सहायता",
   "Button_Delete": "हटाएं",
+  "Button_Download": "डाउनलोड करें",
   "Common_On": "चालू",
   "Common_Off": "बंद",
   "Common_Search_Placeholder": "खोजने के लिए यहां टाइप करें...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "कोई आईएसओ नहीं चुना गया",
   "WIMUtil_Status_WaitForConversion": "🔒 रूपांतरण पूरा होने तक प्रतीक्षा करें",
   "WIMUtil_Status_CompleteStep1": "🔒 चरण 1 पूरा करें",
-  "WIMUtil_Status_ReadyToAddXml": "XML जोड़ने के लिए तैयार",
   "WIMUtil_Status_XmlAdded": "✓ XML जोड़ा गया",
   "WIMUtil_Status_NoXmlAdded": "कोई XML नहीं जोड़ा गया (वैकल्पिक)",
   "WIMUtil_Status_DriversAdded": "✓ ड्राइवर जोड़े गए",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "विनहान्स ने आपके सिस्टम को बैकअप के साथ सुरक्षित किया है।",
   "Startup_Backup_RestoreEnabled": "सिस्टम पुनर्स्थापना अक्षम थी और अब सक्षम है।",
   "Startup_Backup_Created": "बनाया गया:",
-  "Startup_Backup_RegistryBackups": "• रजिस्ट्री बैकअप ({0} हाइव्स) at:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• सिस्टम पुनर्स्थापना बिंदु: 'विनहान्स प्रारंभिक पुनर्स्थापना बिंदु'",
   "Startup_Backup_ToRestore": "पुनर्स्थापित करने के लिए:",
-  "Startup_Backup_RestoreInstructions_System": "• सिस्टम: सेटिंग्स > सिस्टम पुनर्स्थापना में 'एक पुनर्स्थापना बिंदु बनाएँ' खोलें",
-  "Startup_Backup_RestoreInstructions_Registry": "• रजिस्ट्री: बैकअप फ़ोल्डर में .reg फ़ाइलों पर डबल-क्लिक करें",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "पुनर्स्थापित करने के लिए: विंडोज सेटिंग्स में 'पुनर्स्थापना बिंदु' खोजें",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "पुनर्स्थापित करने के लिए: बैकअप फ़ोल्डर में .reg फ़ाइलों पर डबल-क्लिक करें",
   "Startup_Backup_Note": "नोट: सिस्टम पुनर्स्थापना हटाए गए ऐप्स को बहाल नहीं करेगा।",
-  "Startup_Backup_Note_AdminRights": "रजिस्ट्री बैकअप एक बार के हैं और उन्हें व्यवस्थापक के अधिकारों की आवश्यकता है।",
   "Startup_Backup_Checkbox_DontCreate": "भविष्य में पुनर्स्थापना बिंदु न बनाएँ",
-  "Startup_Backup_Checkbox_DontShow": "इसे फिर से न दिखाएँ",
   "Startup_Migration_Title": "स्क्रिप्ट स्थान अद्यतन किया गया",
   "Startup_Migration_SubTitle": "विनहान्स माइग्रेशन",
   "Startup_Migration_Intro": "विनहान्स ने विंडोज ऐप हटाने वाली स्क्रिप्ट्स का स्थान अपडेट कर दिया है।",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "इंस्टॉलेशन के दौरान Windows को अनुकूलित करने के लिए अपने वर्तमान Winhance चयनों के आधार पर एक autounattend.xml फ़ाइल जनरेट करें।",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "और अधिक जनरेशन विकल्प जल्द आ रहे हैं",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "अतिरिक्त XML अनुकूलन विकल्प भविष्य के अपडेट में उपलब्ध होंगे।",
-  "Button_OpenWIMUtil": "WIMUtil खोलें",
-  "Button_DoItLater": "मैं इसे बाद में करूँगा",
   "Dialog_FallbackDownload": "वैकल्पिक डाउनलोड विधि",
-  "Dialog_Button_Download": "डाउनलोड करें",
   "WindowsApps_Msg_FallbackDownload": "पैकेज '{0}' WinGet के माध्यम से नहीं मिल सका, शायद भौगोलिक बाजार प्रतिबंधों के कारण।\n\nविनहान्स इस पैकेज को सीधे माइक्रोसॉफ्ट के सर्वर से एक वैकल्पिक विधि (store.rg-adguard.net) का उपयोग करके डाउनलोड कर सकता है।\n\n• पैकेज फाइलें सीधे माइक्रोसॉफ्ट के आधिकारिक CDN से आती हैं\n• यह विधि पूरी तरह से कानूनी और सुरक्षित है\n• यह केवल क्षेत्रीय प्रतिबंधों को नजरअंदाज करता है\n\nक्या आप वैकल्पिक डाउनलोड विधि के साथ आगे बढ़ना चाहेंगे?",
   "WindowsApps_Checkbox_DontAskAgain": "भविष्य की स्थापनाओं के लिए मुझसे दोबारा न पूछें",
   "Progress_RemovingOldFile": "पुरानी छवि फ़ाइल हटाई जा रही है...",
-  "Progress_WarningCouldNotDeleteFile": "चेतावनी: पुरानी फ़ाइल नहीं हटाई जा सकी",
   "Progress_ConversionCompleted": "रूपांतरण सफलतापूर्वक पूरा हुआ",
   "Progress_ConversionFailed": "रूपांतरण विफल",
   "Progress_PreparingInstallAdk": "विंडोज ADK स्थापित करने की तैयारी...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "सिस्टम पुनर्स्थापना स्थिति की जाँच हो रही है...",
   "Progress_EnablingRestore": "सिस्टम पुनर्स्थापना सक्षम की जा रही है...",
   "Progress_CreatingRestorePoint": "सिस्टम पुनर्स्थापना बिंदु बनाया जा रहा है...",
-  "Progress_BackingUpRegistry": "{0} रजिस्ट्री हाइव का बैकअप लिया जा रहा है...",
   "Progress_CheckingInstallStatus": "स्थापना स्थिति की जाँच हो रही है...",
   "Progress_WaitForInitialLoad": "कृपया प्रारंभिक लोड पूरा होने तक प्रतीक्षा करें",
   "Progress_RefreshingStatus": "स्थापना स्थिति ताज़ा की जा रही है...",
   "Progress_SelectionsCleared": "सभी चयन साफ़ किए गए",
   "Progress_NoInternetConnection": "कोई इंटरनेट कनेक्शन उपलब्ध नहीं है। स्थापना आगे नहीं बढ़ सकती।",
-  "Progress_WingetInstalledSuccess": "WinGet सफलतापूर्वक स्थापित",
   "Progress_ConvertingFormat": "{0} को {1} में बदला जा रहा है...",
   "Progress_ConvertingEdition": "संस्करण {0} को {1} में बदला जा रहा है...",
   "Progress_CopyingFile": "प्रतिलिपि बनाई जा रही है: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "WinGet स्थापित करने में विफल। {0} स्थापित नहीं किया जा सकता।",
   "Progress_WinGet_StartingInstallation": "{0} की स्थापना शुरू हो रही है...",
   "Progress_WinGet_InstalledSuccess": "सफलतापूर्वक {0} स्थापित",
-  "Progress_WinGet_RepairingInstallation": "WinGet स्थापना की मरम्मत हो रही है...",
-  "Progress_WinGet_FailedRepair": "WinGet की मरम्मत में विफल। {0} स्थापित नहीं किया जा सकता।",
-  "Progress_WinGet_FailedLocateAfterRepair": "मरम्मत के बाद WinGet का पता लगाने में विफल। {0} स्थापित नहीं किया जा सकता।",
-  "Progress_WinGet_RetryingInstallation": "{0} की स्थापना पुनः प्रयास किया जा रहा है...",
   "Progress_WinGet_InstallationCancelled": "{0} की स्थापना रद्द कर दी गई थी",
   "Progress_WinGet_NetworkError": "{0} स्थापित करते समय नेटवर्क त्रुटि। कृपया अपना इंटरनेट कनेक्शन जांचें और पुनः प्रयास करें।",
   "Progress_WinGet_InstallationError": "{0} स्थापित करने में त्रुटि: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "WinGet स्थापना का सत्यापन किया जा रहा है...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "WinGet स्थापना सत्यापन विफल",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet स्थापित है लेकिन सुलभ नहीं है। कृपया एप्लिकेशन को पुनरारंभ करें।",
-  "Progress_WinGet_InitializingSources": "WinGet स्रोतों को प्रारंभ किया जा रहा है...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet सफलतापूर्वक स्थापित",
   "Progress_WinGet_InstallError": "WinGet स्थापित करने में त्रुटि: {0}",
   "Progress_Store_FetchingLinks": "{0} के लिए डाउनलोड लिंक प्राप्त किए जा रहे हैं...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "{0} स्थापित करने में विफल",
   "Progress_Store_DownloadCancelled": "{0} का डाउनलोड रद्द कर दिया गया था",
   "Progress_Store_InstallError": "{0} स्थापित करने में त्रुटि: {1}",
-  "Progress_Store_RequestingPackageInfo": "{0} के लिए पैकेज जानकारी का अनुरोध किया जा रहा है...",
-  "Progress_Store_DownloadingMainPackage": "{0} मुख्य पैकेज डाउनलोड किया जा रहा है...",
   "Progress_Store_DownloadingDependencies": "{0} आवश्यक निर्भरता पैकेज डाउनलोड किए जा रहे हैं...",
   "Progress_Store_InstallingWithDependencies": "{0} को {1} निर्भरताओं के साथ स्थापित किया जा रहा है...",
   "Progress_Store_Installing": "{0} इंस्टॉल किया जा रहा है...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "इंस्टॉलेशन विफल रहा: {0}",
   "Progress_WinGet_CheckingUpdates": "WinGet अपडेट की जाँच की जा रही है...",
   "Progress_WinGet_Updating": "WinGet अपडेट किया जा रहा है...",
-  "Progress_WinGet_CheckingVersion": "WinGet संस्करण की जाँच की जा रही है...",
-  "Progress_WinGet_UpdateInitiated": "स्टोर के माध्यम से WinGet अपडेट शुरू किया गया, पूर्णता की पुष्टि की जा रही है...",
-  "Progress_WinGet_WaitingForUpdate": "WinGet अपडेट पूरा होने की प्रतीक्षा की जा रही है...",
-  "Progress_WinGet_Reinstalling": "WinGet को फिर से इंस्टॉल किया जा रहा है...",
   "Progress_WinGet_UpdateSuccess": "WinGet सफलतापूर्वक अपडेट किया गया",
-  "Progress_WinGet_UpdateCompleted": "WinGet अपडेट पूरा हुआ",
   "Progress_WinGet_AlreadyUpToDate": "WinGet पहले से ही अपडेट है",
-  "Progress_WinGet_InstalledLatest": "WinGet पहले से ही नवीनतम संस्करण में इंस्टॉल है",
   "Progress_WinGet_Ready": "WinGet तैयार है",
   "Progress_Uninstalling": "अनइंस्टॉल किया जा रहा है {0}...",
   "Progress_Finalizing": "पूर्ण किया जा रहा है...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet इस सिस्टम पर उपलब्ध नहीं है।",
   "App_Tagline": "अपने विंडोज अनुभव को बेहतर बनाएं",
   "Loading_InitializingSettings": "सेटिंग्स प्रारंभ हो रही हैं...",
-  "Loading_CreatingRestorePoint": "सिस्टम पुनर्स्थापना बिंदु बनाया जा रहा है। कृपया प्रतीक्षा करें, इसमें कुछ समय लग सकता है...",
   "Loading_MigratingScripts": "स्क्रिप्ट माइग्रेट हो रही हैं...",
   "Loading_CheckingScripts": "स्क्रिप्ट अपडेट की जांच हो रही है...",
-  "Loading_PreparingApp": "एप्लिकेशन तैयार हो रहा है..."
+  "Loading_PreparingApp": "एप्लिकेशन तैयार हो रहा है...",
+  "Tooltip_Documentation": "दस्तावेज़ीकरण",
+  "Tooltip_ToggleNavigation": "\u0928\u0947\u0935\u093F\u0917\u0947\u0936\u0928 \u091F\u0949\u0917\u0932 \u0915\u0930\u0947\u0902",
+  "Dialog_ImportConfig_Option_Backup_Title": "बैकअप कॉन्फ़िग आयात करें",
+  "Dialog_ImportConfig_Option_Backup_Description": "अपने सिस्टम बैकअप कॉन्फ़िगरेशन को पुनर्स्थापित करें",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Windows डिफ़ॉल्ट पुनर्स्थापित करें",
+  "Dialog_ImportConfig_Option_Defaults_Description": "सभी सेटिंग्स को Windows फ़ैक्ट्री डिफ़ॉल्ट पर रीसेट करें",
+  "Loading_CreatingConfigBackup": "कॉन्फ़िगरेशन बैकअप बनाया जा रहा है...",
+  "Config_Backup_NotFound": "कोई बैकअप कॉन्फ़िगरेशन फ़ाइलें नहीं मिलीं। पहले ऐप लॉन्च पर स्वचालित रूप से बैकअप बनाया जाता है।",
+  "Config_Backup_NotFound_Title": "कोई बैकअप नहीं मिला",
+  "Config_Backup_Select_Title": "बैकअप फ़ाइल चुनें",
+  "Review_Mode_Title": "कॉन्फ़िग समीक्षा मोड",
+  "Review_Mode_Description": "सभी अनुभागों में परिवर्तनों की समीक्षा करें, फिर तैयार होने पर कॉन्फ़िग लागू करें पर क्लिक करें।",
+  "Review_Mode_Status_Format": "{1} में से {0} की समीक्षा हुई ({2} लागू किए जाएंगे)",
+  "Review_Mode_Apply_Button": "कॉन्फ़िग लागू करें",
+  "Review_Mode_Cancel_Button": "रद्द करें",
+  "Review_Mode_Cancel_Confirmation_Title": "कॉन्फ़िग समीक्षा रद्द करें",
+  "Review_Mode_Cancel_Confirmation": "क्या आप वाकई रद्द करना चाहते हैं? कोई परिवर्तन लागू नहीं किया जाएगा।",
+  "Review_Mode_Diff_Toggle": "वर्तमान: {0} → कॉन्फ़िग: {1}",
+  "Review_Mode_Select_Action": "ऊपर दिए गए बटनों का उपयोग करके चेक किए गए ऐप्स के लिए एक कार्रवाई (इंस्टॉल या अनइंस्टॉल) चुनें",
+  "Review_Mode_Action_Install": "कॉन्फ़िग लागू करने पर चेक किए गए ऐप्स इंस्टॉल किए जाएंगे",
+  "Review_Mode_Action_Remove": "कॉन्फ़िग लागू करने पर चेक किए गए ऐप्स हटाए जाएंगे",
+  "Review_Mode_Skip_Checkbox": "समीक्षा छोड़ें और तुरंत लागू करें",
+  "Review_Mode_Status_AllMatch": "सभी सेटिंग्स पहले से कॉन्फ़िग से मेल खाती हैं",
+  "Review_Mode_Status_NoItems": "लागू करने के लिए कोई कॉन्फ़िगरेशन आइटम नहीं",
+  "Review_Mode_Action_ThemeWallpaper": "इस थीम के लिए डिफ़ॉल्ट वॉलपेपर लागू करें?",
+  "Review_Mode_Action_CleanTaskbar": "इस कॉन्फ़िगरेशन के हिस्से के रूप में टास्कबार साफ़ करें?",
+  "Review_Mode_Action_CleanStartMenu": "इस कॉन्फ़िगरेशन के हिस्से के रूप में स्टार्ट मेनू साफ़ करें?",
+  "Startup_Backup_ConfigBackup": "• कॉन्फ़िगरेशन बैकअप: आपकी वर्तमान Windows सेटिंग्स का एक स्नैपशॉट",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• सिस्टम पुनर्स्थापना: Windows सेटिंग्स में 'पुनर्स्थापना बिंदु बनाएं' खोजें",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• बैकअप कॉन्फ़िग: शीर्षक बार में कॉन्फ़िग आयात करें का उपयोग करें और 'बैकअप कॉन्फ़िग आयात करें' चुनें",
+  "Help_LearnMore_WindowsApps": "Windows ऐप्स के बारे में और जानें",
+  "Help_LearnMore_ExternalApps": "बाहरी ऐप्स के बारे में और जानें",
+  "WIMUtil_Tooltip_DownloadWindows10": "Windows 10 ISO डाउनलोड करें",
+  "WIMUtil_Tooltip_DownloadWindows11": "Windows 11 ISO डाउनलोड करें",
+  "WIMUtil_Tooltip_Schneegans": "Schneegans XML जनरेटर खोलें",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "डिफ़ॉल्ट: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "क्या आप वाकई WIM इमेज फ़ाइल को हटाना चाहते हैं? यह क्रिया पूर्ववत नहीं की जा सकती।",
+  "WIMUtil_Msg_DeleteEsdConfirm": "क्या आप वाकई ESD इमेज फ़ाइल को हटाना चाहते हैं? यह क्रिया पूर्ववत नहीं की जा सकती।",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM फ़ाइल सफलतापूर्वक हटाई गई।",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD फ़ाइल सफलतापूर्वक हटाई गई।",
+  "WIMUtil_Msg_DeleteFailed": "इमेज फ़ाइल हटाने में विफल।",
+  "WIMUtil_Msg_DeleteError": "इमेज फ़ाइल हटाने में त्रुटि: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "{0} को {1} में बदला जा रहा है...",
+  "WIMUtil_Status_CreatingIso": "ISO बनाया जा रहा है",
+  "WIMUtil_Button_OpenFolder": "फ़ोल्डर खोलें",
+  "Loading_CheckingSystemProtection": "सिस्टम सुरक्षा की जांच हो रही है..."
 }
