--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Winhance téma váltó",
   "Tooltip_Donate": "Adományozzon a fejlesztés támogatására",
   "Tooltip_ReportBug": "Hibajelentés",
-  "Menu_ReportBug": "Hibajelentés",
   "Settings_Title": "Winhance beállítások",
+  "Settings_Description": "Winhance alkalmazás beállításainak konfigurálása",
   "Settings_Menu_Language": "Nyelv",
   "Settings_Language_Description": "Válassza ki az alkalmazás megjelenítési nyelvét",
   "Settings_Theme_Title": "Winhance téma",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Figyelmeztetés",
   "Dialog_Error": "Hiba",
   "Dialog_Confirmation": "Megerősítés",
-  "Dialog_Question": "Kérdés",
   "Dialog_ConfirmInstallation": "Telepítés megerősítése",
   "Dialog_ConfirmRemoval": "Eltávolítás megerősítése",
   "Dialog_ConfirmOperation": "Megerősítés {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Válasszon ki egy konfigurációs fájlt a számítógépéről",
   "Dialog_ImportConfig_Option_Recommended_Title": "Ajánlott beállítások importálása",
   "Dialog_ImportConfig_Option_Recommended_Description": "Töltse be a Winhance által ajánlott konfigurációs fájlt",
-  "Dialog_ImportOptions_Title": "Konfiguráció importálása",
   "Dialog_ImportOptions_Message": "Válassza ki, hogyan szeretné importálni a konfigurációt:",
-  "ImportOption_Own": "Saját konfigurációs fájl importálása",
-  "ImportOption_Recommended": "Winhance ajánlott konfiguráció importálása",
-  "Dialog_Button_Yes": "Igen",
-  "Dialog_Button_No": "Nem",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Mégse",
-  "Dialog_Button_Continue": "Folytatás",
-  "Dialog_Button_Close": "Bezárás",
-  "Dialog_Button_Apply": "Alkalmaz",
-  "Dialog_Button_Refresh": "Frissítés",
-  "Dialog_Button_Help": "Súgó",
   "Dialog_Unified_Section_SoftwareAndApps": "Szoftverek és alkalmazások",
   "Dialog_Unified_Description_SoftwareAndApps": "Válogatás Windows-csomagokhoz és külső szoftverekhez",
   "Dialog_Unified_Section_WindowsApps": "Windows alkalmazások",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Frissítés",
   "Button_Help": "Súgó",
   "Button_Delete": "Törlés",
+  "Button_Download": "Letöltés",
   "Common_On": "Be",
   "Common_Off": "Ki",
   "Common_Search_Placeholder": "Írjon ide a kereséshez...",
@@ -1102,7 +1090,6 @@
   "WIMUtil_Status_NoIsoSelected": "Nincs ISO kiválasztva",
   "WIMUtil_Status_WaitForConversion": "🔒 Várjon, amíg a konvertálás befejeződik",
   "WIMUtil_Status_CompleteStep1": "🔒 1. lépés befejezése",
-  "WIMUtil_Status_ReadyToAddXml": "Készen állok az XML hozzáadására",
   "WIMUtil_Status_XmlAdded": "✓ XML hozzáadva",
   "WIMUtil_Status_NoXmlAdded": "Nincs XML hozzáadva (választható)",
   "WIMUtil_Status_DriversAdded": "✓ Illesztőprogramok hozzáadva",
@@ -1162,18 +1149,10 @@
   "Startup_Backup_Intro": "A Winhance biztonsági mentésekkel védte a rendszerét.",
   "Startup_Backup_RestoreEnabled": "A rendszer-visszaállítás le volt tiltva, most pedig engedélyezve van.",
   "Startup_Backup_Created": "Létrehozva:",
-  "Startup_Backup_RegistryBackups": "• A rendszerleíró adatbázis biztonsági másolatai ({0} ágazat) itt:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Rendszerhelyreállítási pont: 'Winhance kezdeti helyreállítási pont'",
   "Startup_Backup_ToRestore": "A helyreállításhoz:",
-  "Startup_Backup_RestoreInstructions_System": "• Rendszer: Nyissa meg a 'Helyreállítási pont létrehozása' lehetőséget a Beállítások > Rendszer-visszaállítás menüpontban",
-  "Startup_Backup_RestoreInstructions_Registry": "• Regisztrációs adatbázis: Kattintson duplán a .reg fájlokra a biztonsági mentés mappában",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Visszaállításhoz: Keresse meg a 'visszaállítási pont' lehetőséget a Windows beállításaiban",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Visszaállításhoz: Kattintson duplán a .reg fájlokra a biztonsági mentés mappájában",
   "Startup_Backup_Note": "Megjegyzés: A Rendszer-visszaállítás nem állítja vissza az eltávolított alkalmazásokat.",
-  "Startup_Backup_Note_AdminRights": "A rendszerleíró adatbázis biztonsági mentése egyszeri és rendszergazdai jogosultságot igényel.",
   "Startup_Backup_Checkbox_DontCreate": "Ne hozzon létre visszaállítási pontokat a jövőben",
-  "Startup_Backup_Checkbox_DontShow": "Ne mutassa ezt újra",
   "Startup_Migration_Title": "Szkript helye frissítve",
   "Startup_Migration_SubTitle": "Winhance költöztetés",
   "Startup_Migration_Intro": "A Winhance frissítette a Windows alkalmazások eltávolítási szkriptjeinek helyét.",
@@ -1304,14 +1283,10 @@
   "AdvancedTools_GenerateCard_Description": "Hozzon létre egy autounattend.xml fájlt a jelenlegi Winhance beállítások alapján a Windows telepítés testreszabásához.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "További generálási lehetőségek hamarosan",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "További XML testreszabási lehetőségek lesznek elérhetők a jövőbeli frissítésekben.",
-  "Button_OpenWIMUtil": "WIMUtil megnyitása",
-  "Button_DoItLater": "Majd később megcsinálom",
   "Dialog_FallbackDownload": "Alternatív letöltési mód",
-  "Dialog_Button_Download": "Letöltés",
   "WindowsApps_Msg_FallbackDownload": "A(z) '{0}' csomagot a WinGet nem találta, valószínűleg földrajzi piaci korlátozások miatt.\n\nA Winhance le tudja tölteni ezt a csomagot közvetlenül a Microsoft szervereiről egy alternatív módszerrel (store.rg-adguard.net).\n\n• A csomagfájlok közvetlenül a Microsoft hivatalos CDN-jéről érkeznek\n• Ez a módszer teljesen legális és biztonságos\n• Csak a regionális korlátozásokat kerüli meg\n\nSzeretné folytatni az alternatív letöltési móddal?",
   "WindowsApps_Checkbox_DontAskAgain": "Ne kérdezze meg újra a jövőbeli telepítésekről",
   "Progress_RemovingOldFile": "Régi kép fájl eltávolítása...",
-  "Progress_WarningCouldNotDeleteFile": "Figyelmeztetés: Nem sikerült törölni a régi fájlt",
   "Progress_ConversionCompleted": "Átalakítás sikeresen befejeződött",
   "Progress_ConversionFailed": "Átalakítás sikertelen",
   "Progress_PreparingInstallAdk": "A Windows ADK telepítésére készül...",
@@ -1351,13 +1326,11 @@
   "Progress_CheckingRestoreStatus": "Rendszer-visszaállítás állapotának ellenőrzése...",
   "Progress_EnablingRestore": "Rendszer-visszaállítás engedélyezése...",
   "Progress_CreatingRestorePoint": "Rendszer-visszaállítási pont létrehozása...",
-  "Progress_BackingUpRegistry": "{0} rendszerleíró adatbázis biztonsági mentése...",
   "Progress_CheckingInstallStatus": "A telepítés állapotának ellenőrzése...",
   "Progress_WaitForInitialLoad": "Kérjük, várja meg az első betöltés befejeződését",
   "Progress_RefreshingStatus": "A telepítés állapotának frissítése...",
   "Progress_SelectionsCleared": "Minden kijelölés törölve",
   "Progress_NoInternetConnection": "Nincs internetkapcsolat. A telepítés nem folytatható.",
-  "Progress_WingetInstalledSuccess": "A WinGet sikeresen telepítve",
   "Progress_ConvertingFormat": "{0} átalakítása erre: {1} ...",
   "Progress_ConvertingEdition": "{1}./{0} kiadás konvertálása...",
   "Progress_CopyingFile": "Másolás: {0}",
@@ -1370,10 +1343,6 @@
   "Progress_WinGet_FailedInstallManager": "A WinGet telepítése nem sikerült. A(z) {0} nem telepíthető.",
   "Progress_WinGet_StartingInstallation": "{0} telepítésének megkezdése...",
   "Progress_WinGet_InstalledSuccess": "{0} sikeresen telepítve",
-  "Progress_WinGet_RepairingInstallation": "A WinGet telepítés javítása...",
-  "Progress_WinGet_FailedRepair": "Nem sikerült megjavítani a WinGetet. Nem lehet telepíteni a(z) {0}-t.",
-  "Progress_WinGet_FailedLocateAfterRepair": "A WinGet nem található a javítás után. A(z) {0} telepítése nem lehetséges.",
-  "Progress_WinGet_RetryingInstallation": "A(z) {0} telepítésének újrapróbálása...",
   "Progress_WinGet_InstallationCancelled": "{0} telepítése megszakítva",
   "Progress_WinGet_NetworkError": "Hálózati hiba történt a(z) {0} telepítése közben. Kérjük, ellenőrizze az internetkapcsolatát, és próbálja újra.",
   "Progress_WinGet_InstallationError": "{0} telepítése közben hiba történt: {1}",
@@ -1390,8 +1359,6 @@
   "Progress_WinGet_VerifyingInstallation": "A WinGet telepítésének ellenőrzése...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "A WinGet telepítésének ellenőrzése sikertelen",
-  "Progress_WinGet_InstalledNotAccessible": "A WinGet telepítve, de nem elérhető. Kérjük, indítsa újra az alkalmazást.",
-  "Progress_WinGet_InitializingSources": "WinGet források inicializálása...",
   "Progress_WinGet_InstalledSuccessfully": "A WinGet sikeresen telepítve",
   "Progress_WinGet_InstallError": "Hiba a WinGet telepítése közben: {0}",
   "Progress_Store_FetchingLinks": "Letöltési hivatkozások lekérése a(z) {0} számára...",
@@ -1400,8 +1367,6 @@
   "Progress_Store_FailedInstall": "A(z) {0} telepítése sikertelen",
   "Progress_Store_DownloadCancelled": "{0} letöltése megszakadt",
   "Progress_Store_InstallError": "Hiba a(z) {0} telepítésekor: {1}",
-  "Progress_Store_RequestingPackageInfo": "Csomaginformációk lekérése a következőhöz: {0}...",
-  "Progress_Store_DownloadingMainPackage": "{0} fő csomag letöltése...",
   "Progress_Store_DownloadingDependencies": "A(z) {0} szükséges függőségi csomag(ok) letöltése...",
   "Progress_Store_InstallingWithDependencies": "{0} telepítése {1} függőséggel...",
   "Progress_Store_Installing": "{0} telepítése...",
@@ -1410,14 +1375,8 @@
   "Progress_Store_NonRecoverableError": "A telepítés sikertelen: {0}",
   "Progress_WinGet_CheckingUpdates": "WinGet-frissítések keresése...",
   "Progress_WinGet_Updating": "WinGet frissítése...",
-  "Progress_WinGet_CheckingVersion": "WinGet verzió ellenőrzése...",
-  "Progress_WinGet_UpdateInitiated": "WinGet frissítés megkezdve a Store-on keresztül, a befejezés ellenőrzése...",
-  "Progress_WinGet_WaitingForUpdate": "A WinGet frissítés befejezésére várakozás...",
-  "Progress_WinGet_Reinstalling": "A WinGet újratelepítése...",
   "Progress_WinGet_UpdateSuccess": "A WinGet sikeresen frissítve",
-  "Progress_WinGet_UpdateCompleted": "A WinGet frissítése befejeződött",
   "Progress_WinGet_AlreadyUpToDate": "A WinGet már naprakész",
-  "Progress_WinGet_InstalledLatest": "A WinGet már a legújabb verzióban telepítve van",
   "Progress_WinGet_Ready": "A WinGet készen áll",
   "Progress_Uninstalling": "Eltávolítás: {0}...",
   "Progress_Finalizing": "Befejezés...",
@@ -1475,8 +1434,53 @@
   "Setting_taskbar-copilot_Description": "A Copilot (Előnézet) gomb megjelenítése vagy elrejtése a tálcán",
   "App_Tagline": "Javítsa Windows-élményét",
   "Loading_InitializingSettings": "Beállítások inicializálása...",
-  "Loading_CreatingRestorePoint": "Rendszer-visszaállítási pont létrehozása. Kérjük, várjon, ez eltarthat egy ideig...",
   "Loading_MigratingScripts": "Szkriptek migrálása...",
   "Loading_CheckingScripts": "Szkriptfrissítések keresése...",
-  "Loading_PreparingApp": "Alkalmazás előkészítése..."
+  "Loading_PreparingApp": "Alkalmazás előkészítése...",
+  "Tooltip_Documentation": "Dokumentáció",
+  "Tooltip_ToggleNavigation": "Navig\u00E1ci\u00F3 v\u00E1lt\u00E1sa",
+  "Dialog_ImportConfig_Option_Backup_Title": "Biztonsági mentés importálása",
+  "Dialog_ImportConfig_Option_Backup_Description": "A rendszer biztonsági mentés konfigurációjának visszaállítása",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Windows alapértékek visszaállítása",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Minden beállítás visszaállítása a Windows gyári alapértékeire",
+  "Loading_CreatingConfigBackup": "Konfigurációs biztonsági mentés létrehozása...",
+  "Config_Backup_NotFound": "Nem találhatók biztonsági mentés konfigurációs fájlok. A biztonsági mentés automatikusan létrejön az alkalmazás első indításakor.",
+  "Config_Backup_NotFound_Title": "Nem található biztonsági mentés",
+  "Config_Backup_Select_Title": "Biztonsági mentés fájl kiválasztása",
+  "Review_Mode_Title": "Konfiguráció áttekintési mód",
+  "Review_Mode_Description": "Tekintse át a változtatásokat az összes szakaszban, majd kattintson a Konfiguráció alkalmazása gombra, ha kész.",
+  "Review_Mode_Status_Format": "{0}/{1} áttekintve ({2} alkalmazásra kerül)",
+  "Review_Mode_Apply_Button": "Konfiguráció alkalmazása",
+  "Review_Mode_Cancel_Button": "Mégse",
+  "Review_Mode_Cancel_Confirmation_Title": "Konfiguráció áttekintés megszakítása",
+  "Review_Mode_Cancel_Confirmation": "Biztosan megszakítja? Semmilyen változtatás nem kerül alkalmazásra.",
+  "Review_Mode_Diff_Toggle": "Jelenlegi: {0} → Konfiguráció: {1}",
+  "Review_Mode_Select_Action": "Válasszon műveletet (Telepítés vagy Eltávolítás) a kijelölt alkalmazásokhoz a fenti gombok segítségével",
+  "Review_Mode_Action_Install": "A kijelölt alkalmazások telepítésre kerülnek a konfiguráció alkalmazásakor",
+  "Review_Mode_Action_Remove": "A kijelölt alkalmazások eltávolításra kerülnek a konfiguráció alkalmazásakor",
+  "Review_Mode_Skip_Checkbox": "Áttekintés kihagyása és azonnali alkalmazás",
+  "Review_Mode_Status_AllMatch": "Minden beállítás már megegyezik a konfigurációval",
+  "Review_Mode_Status_NoItems": "Nincsenek alkalmazandó konfigurációs elemek",
+  "Review_Mode_Action_ThemeWallpaper": "Alkalmazza az alapértelmezett háttérképet ehhez a témához?",
+  "Review_Mode_Action_CleanTaskbar": "Tálca megtisztítása a konfiguráció részeként?",
+  "Review_Mode_Action_CleanStartMenu": "Start menü megtisztítása a konfiguráció részeként?",
+  "Startup_Backup_ConfigBackup": "• Konfigurációs biztonsági mentés: Pillanatkép a jelenlegi Windows beállításairól",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Rendszer-visszaállítás: Keresse meg a 'Visszaállítási pont létrehozása' elemet a Windows beállításokban",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Biztonsági mentés: Használja a Konfiguráció importálása lehetőséget a címsorban, és válassza a 'Biztonsági mentés importálása' opciót",
+  "Help_LearnMore_WindowsApps": "Tudjon meg többet a Windows alkalmazásokról",
+  "Help_LearnMore_ExternalApps": "Tudjon meg többet a külső alkalmazásokról",
+  "WIMUtil_Tooltip_DownloadWindows10": "Windows 10 ISO letöltése",
+  "WIMUtil_Tooltip_DownloadWindows11": "Windows 11 ISO letöltése",
+  "WIMUtil_Tooltip_Schneegans": "Schneegans XML generátor megnyitása",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Alapértelmezett: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Biztosan törölni szeretné a WIM képfájlt? Ez a művelet nem vonható vissza.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Biztosan törölni szeretné az ESD képfájlt? Ez a művelet nem vonható vissza.",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM fájl sikeresen törölve.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD fájl sikeresen törölve.",
+  "WIMUtil_Msg_DeleteFailed": "A képfájl törlése sikertelen.",
+  "WIMUtil_Msg_DeleteError": "Hiba a képfájl törlésekor: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "{0} konvertálása {1} formátumba...",
+  "WIMUtil_Status_CreatingIso": "ISO létrehozása",
+  "WIMUtil_Button_OpenFolder": "Mappa megnyitása",
+  "Loading_CheckingSystemProtection": "Rendszervédelem ellenőrzése..."
 }
