--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Cambia tema di Winhance",
   "Tooltip_Donate": "Dona per sostenere lo sviluppo",
   "Tooltip_ReportBug": "Segnala un bug",
-  "Menu_ReportBug": "Segnala un bug",
   "Settings_Title": "Impostazioni di Winhance",
+  "Settings_Description": "Configura le preferenze dell'applicazione Winhance",
   "Settings_Menu_Language": "Lingua",
   "Settings_Language_Description": "Seleziona la lingua di visualizzazione dell'applicazione",
   "Settings_Theme_Title": "Tema di Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Avviso",
   "Dialog_Error": "Errore",
   "Dialog_Confirmation": "Conferma",
-  "Dialog_Question": "Domanda",
   "Dialog_ConfirmInstallation": "Conferma installazione",
   "Dialog_ConfirmRemoval": "Conferma rimozione",
   "Dialog_ConfirmOperation": "Conferma {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Seleziona un file di configurazione dal tuo computer",
   "Dialog_ImportConfig_Option_Recommended_Title": "Importa configurazione consigliata",
   "Dialog_ImportConfig_Option_Recommended_Description": "Carica il file di configurazione consigliato di Winhance",
-  "Dialog_ImportOptions_Title": "Importa configurazione",
   "Dialog_ImportOptions_Message": "Scegli come vuoi importare una configurazione:",
-  "ImportOption_Own": "Importa il mio file di configurazione",
-  "ImportOption_Recommended": "Importa configurazione consigliata di Winhance",
-  "Dialog_Button_Yes": "Sì",
-  "Dialog_Button_No": "No",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Annulla",
-  "Dialog_Button_Continue": "Continua",
-  "Dialog_Button_Close": "Chiudi",
-  "Dialog_Button_Apply": "Applica",
-  "Dialog_Button_Refresh": "Aggiorna",
-  "Dialog_Button_Help": "Aiuto",
   "Dialog_Unified_Section_SoftwareAndApps": "Software e App",
   "Dialog_Unified_Description_SoftwareAndApps": "Selezioni per pacchetti Windows e software esterno",
   "Dialog_Unified_Section_WindowsApps": "App di Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Aggiorna",
   "Button_Help": "Aiuto",
   "Button_Delete": "Elimina",
+  "Button_Download": "Scarica",
   "Common_On": "On",
   "Common_Off": "Off",
   "Common_Search_Placeholder": "Digita qui per cercare...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Nessun ISO selezionato",
   "WIMUtil_Status_WaitForConversion": "🔒 Attendi il completamento della conversione",
   "WIMUtil_Status_CompleteStep1": "🔒 Completa il passaggio 1",
-  "WIMUtil_Status_ReadyToAddXml": "Pronto per aggiungere XML",
   "WIMUtil_Status_XmlAdded": "✓ XML aggiunto",
   "WIMUtil_Status_NoXmlAdded": "Nessun XML aggiunto (facoltativo)",
   "WIMUtil_Status_DriversAdded": "✓ Driver aggiunti",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance ha protetto il tuo sistema con i backup.",
   "Startup_Backup_RestoreEnabled": "Ripristino configurazione di sistema è stato disabilitato ed è ora abilitato.",
   "Startup_Backup_Created": "Creato:",
-  "Startup_Backup_RegistryBackups": "• Backup del registro ({0} hive) in:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Punto di ripristino del sistema: 'Punto di ripristino iniziale di Winhance'",
   "Startup_Backup_ToRestore": "Per ripristinare:",
-  "Startup_Backup_RestoreInstructions_System": "• Sistema: apri 'Crea un punto di ripristino' in Impostazioni > Ripristino configurazione di sistema",
-  "Startup_Backup_RestoreInstructions_Registry": "• Registro: fai doppio clic sui file .reg nella cartella di backup",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Per ripristinare: cerca 'punto di ripristino' nelle Impostazioni di Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Per ripristinare: fai doppio clic sui file .reg nella cartella di backup",
   "Startup_Backup_Note": "Nota: Ripristino configurazione di sistema non ripristinerà le app rimosse.",
-  "Startup_Backup_Note_AdminRights": "I backup del registro sono una tantum e richiedono diritti di amministratore.",
   "Startup_Backup_Checkbox_DontCreate": "Non creare punti di ripristino in futuro",
-  "Startup_Backup_Checkbox_DontShow": "Non mostrare più questo messaggio",
   "Startup_Migration_Title": "Posizione dello script aggiornata",
   "Startup_Migration_SubTitle": "Migrazione di Winhance",
   "Startup_Migration_Intro": "Winhance ha aggiornato la posizione degli script di rimozione delle app di Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Genera un file autounattend.xml basato sulle tue selezioni Winhance correnti per personalizzare Windows durante l'installazione.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Altre opzioni di generazione in arrivo",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Ulteriori opzioni di personalizzazione XML saranno disponibili nei prossimi aggiornamenti.",
-  "Button_OpenWIMUtil": "Apri WIMUtil",
-  "Button_DoItLater": "Lo farò più tardi",
   "Dialog_FallbackDownload": "Metodo di download alternativo",
-  "Dialog_Button_Download": "Scarica",
   "WindowsApps_Msg_FallbackDownload": "Il pacchetto '{0}' non è stato trovato tramite WinGet, probabilmente a causa di restrizioni di mercato geografiche.\n\nWinhance può scaricare questo pacchetto direttamente dai server di Microsoft utilizzando un metodo alternativo (store.rg-adguard.net).\n\n• I file del pacchetto provengono direttamente dal CDN ufficiale di Microsoft\n• Questo metodo è completamente legale e sicuro\n• Bypassa solo le restrizioni regionali\n\nVuoi procedere con il metodo di download alternativo?",
   "WindowsApps_Checkbox_DontAskAgain": "Non chiedermelo di nuovo per le installazioni future",
   "Progress_RemovingOldFile": "Rimozione del vecchio file immagine in corso...",
-  "Progress_WarningCouldNotDeleteFile": "Avviso: impossibile eliminare il vecchio file",
   "Progress_ConversionCompleted": "Conversione completata correttamente",
   "Progress_ConversionFailed": "Conversione non riuscita",
   "Progress_PreparingInstallAdk": "Preparazione dell'installazione di Windows ADK in corso...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Verifica dello stato di Ripristino configurazione di sistema in corso...",
   "Progress_EnablingRestore": "Abilitazione di Ripristino configurazione di sistema in corso...",
   "Progress_CreatingRestorePoint": "Creazione del punto di ripristino del sistema in corso...",
-  "Progress_BackingUpRegistry": "Backup dell'hive del registro di {0} in corso...",
   "Progress_CheckingInstallStatus": "Verifica dello stato di installazione in corso...",
   "Progress_WaitForInitialLoad": "Attendi il completamento del caricamento iniziale",
   "Progress_RefreshingStatus": "Aggiornamento dello stato di installazione in corso...",
   "Progress_SelectionsCleared": "Tutte le selezioni cancellate",
   "Progress_NoInternetConnection": "Nessuna connessione Internet disponibile. L'installazione non può procedere.",
-  "Progress_WingetInstalledSuccess": "WinGet installato correttamente",
   "Progress_ConvertingFormat": "Conversione di {0} in {1} in corso...",
   "Progress_ConvertingEdition": "Conversione dell'edizione {0} di {1} in corso...",
   "Progress_CopyingFile": "Copia di: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Impossibile installare WinGet. Impossibile installare {0}.",
   "Progress_WinGet_StartingInstallation": "Avvio dell'installazione di {0} in corso...",
   "Progress_WinGet_InstalledSuccess": "Installato correttamente {0}",
-  "Progress_WinGet_RepairingInstallation": "Riparazione dell'installazione di WinGet in corso...",
-  "Progress_WinGet_FailedRepair": "Impossibile riparare WinGet. Impossibile installare {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Impossibile individuare WinGet dopo la riparazione. Impossibile installare {0}.",
-  "Progress_WinGet_RetryingInstallation": "Tentativo di installazione di {0} in corso...",
   "Progress_WinGet_InstallationCancelled": "L'installazione di {0} è stata annullata",
   "Progress_WinGet_NetworkError": "Errore di rete durante l'installazione di {0}. Controlla la tua connessione Internet e riprova.",
   "Progress_WinGet_InstallationError": "Errore durante l'installazione di {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Verifica dell'installazione di WinGet in corso...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Verifica dell'installazione di WinGet non riuscita",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet installato ma non accessibile. Riavvia l'applicazione.",
-  "Progress_WinGet_InitializingSources": "Inizializzazione delle origini di WinGet in corso...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet installato correttamente",
   "Progress_WinGet_InstallError": "Errore durante l'installazione di WinGet: {0}",
   "Progress_Store_FetchingLinks": "Recupero dei collegamenti per il download di {0} in corso...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Impossibile installare {0}",
   "Progress_Store_DownloadCancelled": "Il download di {0} è stato annullato",
   "Progress_Store_InstallError": "Errore durante l'installazione di {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Richiesta di informazioni sul pacchetto per {0} in corso...",
-  "Progress_Store_DownloadingMainPackage": "Download del pacchetto principale di {0} in corso...",
   "Progress_Store_DownloadingDependencies": "Download dei pacchetti di dipendenze richiesti per {0} in corso...",
   "Progress_Store_InstallingWithDependencies": "Installazione di {0} con {1} dipendenze in corso...",
   "Progress_Store_Installing": "Installazione di {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Installazione non riuscita: {0}",
   "Progress_WinGet_CheckingUpdates": "Controllo aggiornamenti WinGet...",
   "Progress_WinGet_Updating": "Aggiornamento di WinGet...",
-  "Progress_WinGet_CheckingVersion": "Controllo versione WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Aggiornamento WinGet avviato tramite Store, verifica completamento...",
-  "Progress_WinGet_WaitingForUpdate": "In attesa del completamento dell'aggiornamento WinGet...",
-  "Progress_WinGet_Reinstalling": "Reinstallazione di WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet aggiornato correttamente",
-  "Progress_WinGet_UpdateCompleted": "Aggiornamento WinGet completato",
   "Progress_WinGet_AlreadyUpToDate": "WinGet è già aggiornato",
-  "Progress_WinGet_InstalledLatest": "WinGet è già installato all'ultima versione",
   "Progress_WinGet_Ready": "WinGet è pronto",
   "Progress_Uninstalling": "Disinstallazione di {0}...",
   "Progress_Finalizing": "Finalizzazione...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet non è disponibile su questo sistema.",
   "App_Tagline": "Migliora la tua esperienza Windows",
   "Loading_InitializingSettings": "Inizializzazione delle impostazioni...",
-  "Loading_CreatingRestorePoint": "Creazione del punto di ripristino del sistema. Attendere, potrebbe richiedere un po' di tempo...",
   "Loading_MigratingScripts": "Migrazione degli script...",
   "Loading_CheckingScripts": "Verifica degli aggiornamenti degli script...",
-  "Loading_PreparingApp": "Preparazione dell'applicazione..."
+  "Loading_PreparingApp": "Preparazione dell'applicazione...",
+  "Tooltip_Documentation": "Documentazione",
+  "Tooltip_ToggleNavigation": "Attiva/disattiva navigazione",
+  "Dialog_ImportConfig_Option_Backup_Title": "Importa config di backup",
+  "Dialog_ImportConfig_Option_Backup_Description": "Ripristina la configurazione di backup del sistema",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Ripristina impostazioni predefinite di Windows",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Reimposta tutte le impostazioni ai valori predefiniti di fabbrica di Windows",
+  "Loading_CreatingConfigBackup": "Creazione del backup della configurazione...",
+  "Config_Backup_NotFound": "Nessun file di configurazione di backup trovato. Un backup viene creato automaticamente al primo avvio dell'app.",
+  "Config_Backup_NotFound_Title": "Nessun backup trovato",
+  "Config_Backup_Select_Title": "Seleziona file di backup",
+  "Review_Mode_Title": "Modalità revisione configurazione",
+  "Review_Mode_Description": "Riveda le modifiche in tutte le sezioni, quindi faccia clic su Applica configurazione quando è pronto.",
+  "Review_Mode_Status_Format": "{0} di {1} rivisti ({2} verranno applicati)",
+  "Review_Mode_Apply_Button": "Applica configurazione",
+  "Review_Mode_Cancel_Button": "Annulla",
+  "Review_Mode_Cancel_Confirmation_Title": "Annulla revisione configurazione",
+  "Review_Mode_Cancel_Confirmation": "È sicuro di voler annullare? Nessuna modifica verrà applicata.",
+  "Review_Mode_Diff_Toggle": "Attuale: {0} → Config: {1}",
+  "Review_Mode_Select_Action": "Selezioni un'azione (Installa o Disinstalla) per le app selezionate utilizzando i pulsanti sopra",
+  "Review_Mode_Action_Install": "Le app selezionate verranno installate quando applica la configurazione",
+  "Review_Mode_Action_Remove": "Le app selezionate verranno rimosse quando applica la configurazione",
+  "Review_Mode_Skip_Checkbox": "Salta la revisione e applica immediatamente",
+  "Review_Mode_Status_AllMatch": "Tutte le impostazioni corrispondono già alla configurazione",
+  "Review_Mode_Status_NoItems": "Nessun elemento di configurazione da applicare",
+  "Review_Mode_Action_ThemeWallpaper": "Applicare lo sfondo predefinito per questo tema?",
+  "Review_Mode_Action_CleanTaskbar": "Pulire la barra delle applicazioni come parte di questa configurazione?",
+  "Review_Mode_Action_CleanStartMenu": "Pulire il menu Start come parte di questa configurazione?",
+  "Startup_Backup_ConfigBackup": "• Backup configurazione: Un'istantanea delle impostazioni Windows attuali",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Ripristino di sistema: Cerchi 'Crea un punto di ripristino' nelle Impostazioni di Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Backup config: Utilizzi Importa configurazione nella barra del titolo e selezioni 'Importa config di backup'",
+  "Help_LearnMore_WindowsApps": "Ulteriori informazioni sulle app di Windows",
+  "Help_LearnMore_ExternalApps": "Ulteriori informazioni sulle app esterne",
+  "WIMUtil_Tooltip_DownloadWindows10": "Scarica ISO di Windows 10",
+  "WIMUtil_Tooltip_DownloadWindows11": "Scarica ISO di Windows 11",
+  "WIMUtil_Tooltip_Schneegans": "Apri il generatore XML Schneegans",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Predefinito: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "È sicuro di voler eliminare il file immagine WIM? Questa azione non può essere annullata.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "È sicuro di voler eliminare il file immagine ESD? Questa azione non può essere annullata.",
+  "WIMUtil_Msg_DeleteWimSuccess": "File WIM eliminato con successo.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "File ESD eliminato con successo.",
+  "WIMUtil_Msg_DeleteFailed": "Eliminazione del file immagine non riuscita.",
+  "WIMUtil_Msg_DeleteError": "Errore durante l'eliminazione del file immagine: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Conversione di {0} in {1}...",
+  "WIMUtil_Status_CreatingIso": "Creazione ISO",
+  "WIMUtil_Button_OpenFolder": "Apri cartella",
+  "Loading_CheckingSystemProtection": "Verifica della protezione di sistema..."
 }
