--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Winhanceテーマを切り替え",
   "Tooltip_Donate": "開発を支援するために寄付",
   "Tooltip_ReportBug": "バグを報告",
-  "Menu_ReportBug": "バグを報告",
   "Settings_Title": "Winhance設定",
+  "Settings_Description": "Winhance アプリケーションの設定を構成する",
   "Settings_Menu_Language": "言語",
   "Settings_Language_Description": "アプリケーションの表示言語を選択",
   "Settings_Theme_Title": "Winhanceテーマ",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "警告",
   "Dialog_Error": "エラー",
   "Dialog_Confirmation": "確認",
-  "Dialog_Question": "質問",
   "Dialog_ConfirmInstallation": "インストールを確認",
   "Dialog_ConfirmRemoval": "削除を確認",
   "Dialog_ConfirmOperation": "{0}を確認",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "コンピュータから構成ファイルを選択",
   "Dialog_ImportConfig_Option_Recommended_Title": "推奨構成をインポート",
   "Dialog_ImportConfig_Option_Recommended_Description": "Winhanceの推奨構成ファイルを読み込む",
-  "Dialog_ImportOptions_Title": "構成をインポート",
   "Dialog_ImportOptions_Message": "構成のインポート方法を選択してください：",
-  "ImportOption_Own": "自分の構成ファイルをインポート",
-  "ImportOption_Recommended": "Winhance推奨構成をインポート",
-  "Dialog_Button_Yes": "はい",
-  "Dialog_Button_No": "いいえ",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "キャンセル",
-  "Dialog_Button_Continue": "続行",
-  "Dialog_Button_Close": "閉じる",
-  "Dialog_Button_Apply": "適用",
-  "Dialog_Button_Refresh": "更新",
-  "Dialog_Button_Help": "ヘルプ",
   "Dialog_Unified_Section_SoftwareAndApps": "ソフトウェアとアプリ",
   "Dialog_Unified_Description_SoftwareAndApps": "Windowsパッケージと外部ソフトウェアの選択",
   "Dialog_Unified_Section_WindowsApps": "Windowsアプリ",
@@ -132,6 +119,7 @@
   "Button_Refresh": "更新",
   "Button_Help": "ヘルプ",
   "Button_Delete": "削除",
+  "Button_Download": "ダウンロード",
   "Common_On": "オン",
   "Common_Off": "オフ",
   "Common_Search_Placeholder": "ここで検索...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "ISOが選択されていません",
   "WIMUtil_Status_WaitForConversion": "🔒 変換完了まで待機",
   "WIMUtil_Status_CompleteStep1": "🔒 手順1を完了してください",
-  "WIMUtil_Status_ReadyToAddXml": "XML追加準備完了",
   "WIMUtil_Status_XmlAdded": "✓ XML追加済み",
   "WIMUtil_Status_NoXmlAdded": "XML追加なし（オプション）",
   "WIMUtil_Status_DriversAdded": "✓ ドライバー追加済み",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhanceはバックアップでシステムを保護しました。",
   "Startup_Backup_RestoreEnabled": "システムの復元が無効になっていましたが、有効になりました。",
   "Startup_Backup_Created": "作成日時：",
-  "Startup_Backup_RegistryBackups": "• レジストリバックアップ（{0}ハイブ）の場所：",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• システムの復元ポイント：「Winhance初期復元ポイント」",
   "Startup_Backup_ToRestore": "復元するには：",
-  "Startup_Backup_RestoreInstructions_System": "• システム：設定 > システムの復元で「復元ポイントの作成」を開く",
-  "Startup_Backup_RestoreInstructions_Registry": "• レジストリ：バックアップフォルダー内の.regファイルをダブルクリック",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "復元するには：Windows設定で「復元ポイント」を検索",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "復元するには：バックアップフォルダー内の.regファイルをダブルクリック",
   "Startup_Backup_Note": "注：システムの復元では削除されたアプリは復元されません。",
-  "Startup_Backup_Note_AdminRights": "レジストリバックアップは1回限りで、管理者権限が必要です。",
   "Startup_Backup_Checkbox_DontCreate": "今後復元ポイントを作成しない",
-  "Startup_Backup_Checkbox_DontShow": "今後は表示しない",
   "Startup_Migration_Title": "スクリプトの場所が更新されました",
   "Startup_Migration_SubTitle": "Winhance移行",
   "Startup_Migration_Intro": "WinhanceはWindowsアプリ削除スクリプトの場所を更新しました。",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "現在のWinhanceの選択に基づいてautounattend.xmlファイルを生成し、インストール時にWindowsをカスタマイズします。",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "その他の生成オプションは近日公開予定",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "追加のXMLカスタマイズオプションは今後のアップデートで利用可能になります。",
-  "Button_OpenWIMUtil": "WIMUtilを開く",
-  "Button_DoItLater": "後でやる",
   "Dialog_FallbackDownload": "代替ダウンロード方法",
-  "Dialog_Button_Download": "ダウンロード",
   "WindowsApps_Msg_FallbackDownload": "パッケージ「{0}」は、地理的な市場制限が原因でWinGet経由で見つかりませんでした。\n\nWinhanceは、代替方法（store.rg-adguard.net）を使用してMicrosoftのサーバーからこのパッケージを直接ダウンロードできます。\n\n• パッケージファイルはMicrosoftの公式CDNから直接提供されます\n• この方法は完全に合法で安全です\n• 地域制限のみをバイパスします\n\n代替ダウンロード方法で続行しますか？",
   "WindowsApps_Checkbox_DontAskAgain": "今後のインストールでは再度尋ねないでください",
   "Progress_RemovingOldFile": "古いイメージファイルを削除中...",
-  "Progress_WarningCouldNotDeleteFile": "警告：古いファイルを削除できませんでした",
   "Progress_ConversionCompleted": "変換が正常に完了しました",
   "Progress_ConversionFailed": "変換に失敗しました",
   "Progress_PreparingInstallAdk": "Windows ADKのインストールを準備中...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "システムの復元の状態を確認中...",
   "Progress_EnablingRestore": "システムの復元を有効にしています...",
   "Progress_CreatingRestorePoint": "システムの復元ポイントを作成中...",
-  "Progress_BackingUpRegistry": "{0}レジストリハイブをバックアップ中...",
   "Progress_CheckingInstallStatus": "インストール状況を確認中...",
   "Progress_WaitForInitialLoad": "初期読み込みが完了するまでお待ちください",
   "Progress_RefreshingStatus": "インストール状況を更新中...",
   "Progress_SelectionsCleared": "すべての選択がクリアされました",
   "Progress_NoInternetConnection": "インターネット接続がありません。インストールを続行できません。",
-  "Progress_WingetInstalledSuccess": "WinGetが正常にインストールされました",
   "Progress_ConvertingFormat": "{0}を{1}に変換中...",
   "Progress_ConvertingEdition": "{1}のエディション{0}を変換中...",
   "Progress_CopyingFile": "コピー中：{0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "WinGetのインストールに失敗しました。{0}をインストールできません。",
   "Progress_WinGet_StartingInstallation": "{0}のインストールを開始中...",
   "Progress_WinGet_InstalledSuccess": "{0}が正常にインストールされました",
-  "Progress_WinGet_RepairingInstallation": "WinGetのインストールを修復中...",
-  "Progress_WinGet_FailedRepair": "WinGetの修復に失敗しました。{0}をインストールできません。",
-  "Progress_WinGet_FailedLocateAfterRepair": "修復後にWinGetを見つけられませんでした。{0}をインストールできません。",
-  "Progress_WinGet_RetryingInstallation": "{0}のインストールを再試行中...",
   "Progress_WinGet_InstallationCancelled": "{0}のインストールがキャンセルされました",
   "Progress_WinGet_NetworkError": "{0}のインストール中にネットワークエラーが発生しました。インターネット接続を確認して、もう一度お試しください。",
   "Progress_WinGet_InstallationError": "{0}のインストール中にエラーが発生しました：{1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "WinGetのインストールを確認中...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "WinGetのインストール確認に失敗しました",
-  "Progress_WinGet_InstalledNotAccessible": "WinGetはインストールされていますが、アクセスできません。アプリケーションを再起動してください。",
-  "Progress_WinGet_InitializingSources": "WinGetソースを初期化中...",
   "Progress_WinGet_InstalledSuccessfully": "WinGetが正常にインストールされました",
   "Progress_WinGet_InstallError": "WinGetのインストール中にエラーが発生しました：{0}",
   "Progress_Store_FetchingLinks": "{0}のダウンロードリンクを取得中...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "{0}のインストールに失敗しました",
   "Progress_Store_DownloadCancelled": "{0}のダウンロードがキャンセルされました",
   "Progress_Store_InstallError": "{0}のインストール中にエラーが発生しました：{1}",
-  "Progress_Store_RequestingPackageInfo": "{0}のパッケージ情報を要求中...",
-  "Progress_Store_DownloadingMainPackage": "{0}のメインパッケージをダウンロード中...",
   "Progress_Store_DownloadingDependencies": "{0}の必要な依存関係パッケージをダウンロード中...",
   "Progress_Store_InstallingWithDependencies": "{1}個の依存関係とともに{0}をインストール中...",
   "Progress_Store_Installing": "{0} をインストールしています...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "インストールに失敗しました: {0}",
   "Progress_WinGet_CheckingUpdates": "WinGet の更新を確認しています...",
   "Progress_WinGet_Updating": "WinGet を更新しています...",
-  "Progress_WinGet_CheckingVersion": "WinGet のバージョンを確認しています...",
-  "Progress_WinGet_UpdateInitiated": "Store 経由で WinGet の更新が開始されました。完了を確認しています...",
-  "Progress_WinGet_WaitingForUpdate": "WinGet の更新が完了するのを待っています...",
-  "Progress_WinGet_Reinstalling": "WinGet を再インストールしています...",
   "Progress_WinGet_UpdateSuccess": "WinGet が正常に更新されました",
-  "Progress_WinGet_UpdateCompleted": "WinGet の更新が完了しました",
   "Progress_WinGet_AlreadyUpToDate": "WinGet はすでに最新の状態です",
-  "Progress_WinGet_InstalledLatest": "WinGet はすでに最新バージョンがインストールされています",
   "Progress_WinGet_Ready": "WinGet の準備ができました",
   "Progress_Uninstalling": "{0} をアンインストールしています...",
   "Progress_Finalizing": "完了しています...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet はこのシステムでは利用できません。",
   "App_Tagline": "Windows エクスペリエンスを向上させる",
   "Loading_InitializingSettings": "設定を初期化中...",
-  "Loading_CreatingRestorePoint": "システムの復元ポイントを作成しています。しばらくお待ちください...",
   "Loading_MigratingScripts": "スクリプトを移行中...",
   "Loading_CheckingScripts": "スクリプトの更新を確認中...",
-  "Loading_PreparingApp": "アプリケーションを準備中..."
+  "Loading_PreparingApp": "アプリケーションを準備中...",
+  "Tooltip_Documentation": "ドキュメント",
+  "Tooltip_ToggleNavigation": "\u30CA\u30D3\u30B2\u30FC\u30B7\u30E7\u30F3\u306E\u5207\u308A\u66FF\u3048",
+  "Dialog_ImportConfig_Option_Backup_Title": "バックアップ設定をインポート",
+  "Dialog_ImportConfig_Option_Backup_Description": "システムバックアップ設定を復元します",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Windows の既定値に戻す",
+  "Dialog_ImportConfig_Option_Defaults_Description": "すべての設定を Windows の工場出荷時の既定値にリセットします",
+  "Loading_CreatingConfigBackup": "設定のバックアップを作成中...",
+  "Config_Backup_NotFound": "バックアップ設定ファイルが見つかりません。バックアップはアプリの初回起動時に自動的に作成されます。",
+  "Config_Backup_NotFound_Title": "バックアップが見つかりません",
+  "Config_Backup_Select_Title": "バックアップファイルを選択",
+  "Review_Mode_Title": "設定レビューモード",
+  "Review_Mode_Description": "すべてのセクションの変更を確認し、準備ができたら「設定を適用」をクリックしてください。",
+  "Review_Mode_Status_Format": "{0}/{1} 確認済み（{2} が適用されます）",
+  "Review_Mode_Apply_Button": "設定を適用",
+  "Review_Mode_Cancel_Button": "キャンセル",
+  "Review_Mode_Cancel_Confirmation_Title": "設定レビューをキャンセル",
+  "Review_Mode_Cancel_Confirmation": "キャンセルしてもよろしいですか？変更は適用されません。",
+  "Review_Mode_Diff_Toggle": "現在: {0} → 設定: {1}",
+  "Review_Mode_Select_Action": "上のボタンを使用して、チェックしたアプリのアクション（インストールまたはアンインストール）を選択してください",
+  "Review_Mode_Action_Install": "チェックしたアプリは設定適用時にインストールされます",
+  "Review_Mode_Action_Remove": "チェックしたアプリは設定適用時に削除されます",
+  "Review_Mode_Skip_Checkbox": "レビューをスキップしてすぐに適用する",
+  "Review_Mode_Status_AllMatch": "すべての設定が既に設定と一致しています",
+  "Review_Mode_Status_NoItems": "適用する設定項目がありません",
+  "Review_Mode_Action_ThemeWallpaper": "このテーマの既定の壁紙を適用しますか？",
+  "Review_Mode_Action_CleanTaskbar": "この設定の一部としてタスクバーをクリーンアップしますか？",
+  "Review_Mode_Action_CleanStartMenu": "この設定の一部としてスタートメニューをクリーンアップしますか？",
+  "Startup_Backup_ConfigBackup": "• 設定バックアップ: 現在の Windows 設定のスナップショット",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• システムの復元: Windows の設定で「復元ポイントの作成」を検索してください",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• バックアップ設定: タイトルバーの「設定のインポート」を使用して「バックアップ設定をインポート」を選択してください",
+  "Help_LearnMore_WindowsApps": "Windows アプリについて詳しく見る",
+  "Help_LearnMore_ExternalApps": "外部アプリについて詳しく見る",
+  "WIMUtil_Tooltip_DownloadWindows10": "Windows 10 ISO をダウンロード",
+  "WIMUtil_Tooltip_DownloadWindows11": "Windows 11 ISO をダウンロード",
+  "WIMUtil_Tooltip_Schneegans": "Schneegans XML ジェネレーターを開く",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "既定: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "WIM イメージファイルを削除してもよろしいですか？この操作は元に戻せません。",
+  "WIMUtil_Msg_DeleteEsdConfirm": "ESD イメージファイルを削除してもよろしいですか？この操作は元に戻せません。",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM ファイルが正常に削除されました。",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD ファイルが正常に削除されました。",
+  "WIMUtil_Msg_DeleteFailed": "イメージファイルの削除に失敗しました。",
+  "WIMUtil_Msg_DeleteError": "イメージファイルの削除中にエラーが発生しました: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "{0} を {1} に変換中...",
+  "WIMUtil_Status_CreatingIso": "ISO を作成中",
+  "WIMUtil_Button_OpenFolder": "フォルダーを開く",
+  "Loading_CheckingSystemProtection": "システム保護を確認中..."
 }
