--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Perjungti Winhance temą",
   "Tooltip_Donate": "Paaukokite, kad paremtumėte plėtrą",
   "Tooltip_ReportBug": "Pranešti apie klaidą",
-  "Menu_ReportBug": "Pranešti apie klaidą",
   "Settings_Title": "Winhance nustatymai",
+  "Settings_Description": "Konfigūruoti Winhance programos nuostatas",
   "Settings_Menu_Language": "Kalba",
   "Settings_Language_Description": "Pasirinkite programos rodymo kalbą",
   "Settings_Theme_Title": "Winhance tema",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Įspėjimas",
   "Dialog_Error": "Klaida",
   "Dialog_Confirmation": "Patvirtinimas",
-  "Dialog_Question": "Klausimas",
   "Dialog_ConfirmInstallation": "Patvirtinti diegimą",
   "Dialog_ConfirmRemoval": "Patvirtinti pašalinimą",
   "Dialog_ConfirmOperation": "Patvirtinti {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Pasirinkite konfigūracijos failą iš savo kompiuterio",
   "Dialog_ImportConfig_Option_Recommended_Title": "Importuoti rekomenduojamą konfigūraciją",
   "Dialog_ImportConfig_Option_Recommended_Description": "Įkelti Winhance rekomenduojamą konfigūracijos failą",
-  "Dialog_ImportOptions_Title": "Importuoti konfigūraciją",
   "Dialog_ImportOptions_Message": "Pasirinkite, kaip norite importuoti konfigūraciją:",
-  "ImportOption_Own": "Importuoti savo konfigūracijos failą",
-  "ImportOption_Recommended": "Importuoti Winhance rekomenduojamą konfigūraciją",
-  "Dialog_Button_Yes": "Taip",
-  "Dialog_Button_No": "Ne",
-  "Dialog_Button_OK": "Gerai",
-  "Dialog_Button_Cancel": "Atšaukti",
-  "Dialog_Button_Continue": "Tęsti",
-  "Dialog_Button_Close": "Uždaryti",
-  "Dialog_Button_Apply": "Taikyti",
-  "Dialog_Button_Refresh": "Atnaujinti",
-  "Dialog_Button_Help": "Pagalba",
   "Dialog_Unified_Section_SoftwareAndApps": "Programinė įranga ir programos",
   "Dialog_Unified_Description_SoftwareAndApps": "Windows paketų ir išorinės programinės įrangos pasirinkimai",
   "Dialog_Unified_Section_WindowsApps": "Windows programos",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Atnaujinti",
   "Button_Help": "Pagalba",
   "Button_Delete": "Ištrinti",
+  "Button_Download": "Atsisiųsti",
   "Common_On": "Įjungta",
   "Common_Off": "Išjungta",
   "Common_Search_Placeholder": "Įveskite tekstą paieškai...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Nepasirinktas joks ISO",
   "WIMUtil_Status_WaitForConversion": "🔒 Palaukite, kol bus baigtas konvertavimas",
   "WIMUtil_Status_CompleteStep1": "🔒 Užbaikite 1 žingsnį",
-  "WIMUtil_Status_ReadyToAddXml": "Paruošta pridėti XML",
   "WIMUtil_Status_XmlAdded": "✓ XML pridėtas",
   "WIMUtil_Status_NoXmlAdded": "XML nepridėtas (pasirinktinai)",
   "WIMUtil_Status_DriversAdded": "✓ Tvarkyklės pridėtos",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance apsaugojo jūsų sistemą atsarginėmis kopijomis.",
   "Startup_Backup_RestoreEnabled": "Sistemos atkūrimas buvo išjungtas ir dabar yra įjungtas.",
   "Startup_Backup_Created": "Sukurta:",
-  "Startup_Backup_RegistryBackups": "• Registro atsarginės kopijos ({0} šakų) adresu:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Sistemos atkūrimo taškas: 'Winhance pradinis atkūrimo taškas'.",
   "Startup_Backup_ToRestore": "Norėdami atkurti:",
-  "Startup_Backup_RestoreInstructions_System": "• Sistema: atidarykite „Sukurti atkūrimo tašką“ Nustatymuose > Sistemos atkūrimas",
-  "Startup_Backup_RestoreInstructions_Registry": "• Registras: dukart spustelėkite .reg failus atsarginių kopijų aplanke",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Norėdami atkurti: ieškokite „atkūrimo taškas“ Windows nustatymuose",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Norėdami atkurti: dukart spustelėkite .reg failus atsarginių kopijų aplanke",
   "Startup_Backup_Note": "Pastaba: sistemos atkūrimas neatkurs pašalintų programų.",
-  "Startup_Backup_Note_AdminRights": "Registro atsarginės kopijos yra vienkartinės ir reikalauja administratoriaus teisių.",
   "Startup_Backup_Checkbox_DontCreate": "Ateityje nekurti atkūrimo taškų",
-  "Startup_Backup_Checkbox_DontShow": "Daugiau to nerodyti",
   "Startup_Migration_Title": "Scenarijaus vieta atnaujinta",
   "Startup_Migration_SubTitle": "Winhance migracija",
   "Startup_Migration_Intro": "Winhance atnaujino Windows programų pašalinimo scenarijų vietą.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Sukurkite autounattend.xml failą pagal dabartinius „Winhance“ pasirinkimus, kad pritaikytumėte „Windows“ diegimo metu.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Daugiau generavimo parinkčių netrukus",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Papildomos XML tinkinimo parinktys bus prieinamos būsimuose atnaujinimuose.",
-  "Button_OpenWIMUtil": "Atidaryti WIMUtil",
-  "Button_DoItLater": "Padarysiu vėliau",
   "Dialog_FallbackDownload": "Alternatyvus atsisiuntimo metodas",
-  "Dialog_Button_Download": "Atsisiųsti",
   "WindowsApps_Msg_FallbackDownload": "Paketo „{0}“ nepavyko rasti per WinGet, greičiausiai dėl geografinių rinkos apribojimų.\n\nWinhance gali atsisiųsti šį paketą tiesiogiai iš Microsoft serverių, naudodama alternatyvų metodą (store.rg-adguard.net).\n\n• Paketo failai gaunami tiesiogiai iš oficialaus Microsoft CDN\n• Šis metodas yra visiškai legalus ir saugus\n• Jis apeina tik regioninius apribojimus\n\nAr norėtumėte tęsti alternatyviu atsisiuntimo metodu?",
   "WindowsApps_Checkbox_DontAskAgain": "Daugiau neklausti manęs dėl būsimų diegimų",
   "Progress_RemovingOldFile": "Šalinamas senas vaizdo failas...",
-  "Progress_WarningCouldNotDeleteFile": "Įspėjimas: nepavyko ištrinti seno failo",
   "Progress_ConversionCompleted": "Konvertavimas sėkmingai baigtas",
   "Progress_ConversionFailed": "Konvertavimas nepavyko",
   "Progress_PreparingInstallAdk": "Ruošiamasi diegti Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Tikrinama sistemos atkūrimo būsena...",
   "Progress_EnablingRestore": "Įjungiamas sistemos atkūrimas...",
   "Progress_CreatingRestorePoint": "Kuriamas sistemos atkūrimo taškas...",
-  "Progress_BackingUpRegistry": "Kuriama atsarginė {0} registro šakos kopija...",
   "Progress_CheckingInstallStatus": "Tikrinama diegimo būsena...",
   "Progress_WaitForInitialLoad": "Palaukite, kol bus baigtas pradinis įkėlimas",
   "Progress_RefreshingStatus": "Atnaujinama diegimo būsena...",
   "Progress_SelectionsCleared": "Visi pasirinkimai išvalyti",
   "Progress_NoInternetConnection": "Nėra interneto ryšio. Diegimas negali būti tęsiamas.",
-  "Progress_WingetInstalledSuccess": "WinGet sėkmingai įdiegtas",
   "Progress_ConvertingFormat": "Konvertuojama {0} į {1}...",
   "Progress_ConvertingEdition": "Konvertuojamas leidimas {0} iš {1}...",
   "Progress_CopyingFile": "Kopijuojama: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Nepavyko įdiegti WinGet. Negalima įdiegti {0}.",
   "Progress_WinGet_StartingInstallation": "Pradedamas diegimas {0}...",
   "Progress_WinGet_InstalledSuccess": "Sėkmingai įdiegta {0}",
-  "Progress_WinGet_RepairingInstallation": "Taisomas WinGet diegimas...",
-  "Progress_WinGet_FailedRepair": "Nepavyko pataisyti WinGet. Negalima įdiegti {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Nepavyko rasti WinGet po taisymo. Negalima įdiegti {0}.",
-  "Progress_WinGet_RetryingInstallation": "Bandoma iš naujo įdiegti {0}...",
   "Progress_WinGet_InstallationCancelled": "Diegimas {0} buvo atšauktas",
   "Progress_WinGet_NetworkError": "Tinklo klaida diegiant {0}. Patikrinkite interneto ryšį ir bandykite dar kartą.",
   "Progress_WinGet_InstallationError": "Klaida diegiant {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Tikrinamas WinGet diegimas...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "WinGet diegimo patikrinimas nepavyko",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet įdiegtas, bet nepasiekiamas. Paleiskite programą iš naujo.",
-  "Progress_WinGet_InitializingSources": "Inicijuojami WinGet šaltiniai...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet sėkmingai įdiegtas",
   "Progress_WinGet_InstallError": "Klaida diegiant WinGet: {0}",
   "Progress_Store_FetchingLinks": "Gaunami atsisiuntimo saitai {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Nepavyko įdiegti {0}",
   "Progress_Store_DownloadCancelled": "Atsisiuntimas {0} buvo atšauktas",
   "Progress_Store_InstallError": "Klaida diegiant {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Prašoma paketo informacijos {0}...",
-  "Progress_Store_DownloadingMainPackage": "Atsisiunčiamas pagrindinis paketas {0}...",
   "Progress_Store_DownloadingDependencies": "Atsisiunčiami {0} reikalingi priklausomybės paketai...",
   "Progress_Store_InstallingWithDependencies": "Diegiama {0} su {1} priklausomybėmis...",
   "Progress_Store_Installing": "Įdiegiama {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Įdiegti nepavyko: {0}",
   "Progress_WinGet_CheckingUpdates": "Tikrinami „WinGet“ atnaujinimai...",
   "Progress_WinGet_Updating": "Atnaujinama „WinGet“...",
-  "Progress_WinGet_CheckingVersion": "Tikrinama „WinGet“ versija...",
-  "Progress_WinGet_UpdateInitiated": "„WinGet“ atnaujinimas pradėtas per „Store“, tikrinamas užbaigimas...",
-  "Progress_WinGet_WaitingForUpdate": "Laukiama, kol bus baigtas „WinGet“ atnaujinimas...",
-  "Progress_WinGet_Reinstalling": "Iš naujo įdiegiamas „WinGet“...",
   "Progress_WinGet_UpdateSuccess": "„WinGet“ sėkmingai atnaujintas",
-  "Progress_WinGet_UpdateCompleted": "„WinGet“ atnaujinimas baigtas",
   "Progress_WinGet_AlreadyUpToDate": "„WinGet“ jau yra naujausios versijos",
-  "Progress_WinGet_InstalledLatest": "„WinGet“ jau įdiegtas su naujausia versija",
   "Progress_WinGet_Ready": "„WinGet“ paruoštas",
   "Progress_Uninstalling": "Šalinama {0}...",
   "Progress_Finalizing": "Baigiama...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "„WinGet“ šioje sistemoje nepasiekiama.",
   "App_Tagline": "Pagerinkite savo „Windows“ patirtį",
   "Loading_InitializingSettings": "Inicializuojami nustatymai...",
-  "Loading_CreatingRestorePoint": "Kuriamas sistemos atkūrimo taškas. Palaukite, tai gali užtrukti...",
   "Loading_MigratingScripts": "Perkeliami scenarijai...",
   "Loading_CheckingScripts": "Tikrinami scenarijų atnaujinimai...",
-  "Loading_PreparingApp": "Ruošiama programa..."
+  "Loading_PreparingApp": "Ruošiama programa...",
+  "Tooltip_Documentation": "Dokumentacija",
+  "Tooltip_ToggleNavigation": "Perjungti navigacij\u0105",
+  "Dialog_ImportConfig_Option_Backup_Title": "Importuoti atsarginę konfigūraciją",
+  "Dialog_ImportConfig_Option_Backup_Description": "Atkurti sistemos atsarginę konfigūraciją",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Atkurti Windows numatytuosius nustatymus",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Atstatyti visus nustatymus į Windows gamyklinius numatytuosius",
+  "Loading_CreatingConfigBackup": "Kuriama konfigūracijos atsarginė kopija...",
+  "Config_Backup_NotFound": "Nerasta atsarginių konfigūracijos failų. Atsarginė kopija automatiškai sukuriama pirmą kartą paleidus programą.",
+  "Config_Backup_NotFound_Title": "Atsarginė kopija nerasta",
+  "Config_Backup_Select_Title": "Pasirinkti atsarginės kopijos failą",
+  "Review_Mode_Title": "Konfigūracijos peržiūros režimas",
+  "Review_Mode_Description": "Peržiūrėkite pakeitimus visuose skyriuose, tada spustelėkite „Taikyti konfigūraciją“, kai būsite pasiruošę.",
+  "Review_Mode_Status_Format": "{0} iš {1} peržiūrėta ({2} bus pritaikyta)",
+  "Review_Mode_Apply_Button": "Taikyti konfigūraciją",
+  "Review_Mode_Cancel_Button": "Atšaukti",
+  "Review_Mode_Cancel_Confirmation_Title": "Atšaukti konfigūracijos peržiūrą",
+  "Review_Mode_Cancel_Confirmation": "Ar tikrai norite atšaukti? Jokie pakeitimai nebus pritaikyti.",
+  "Review_Mode_Diff_Toggle": "Dabartinis: {0} → Konfigūracija: {1}",
+  "Review_Mode_Select_Action": "Pasirinkite veiksmą (Įdiegti arba Pašalinti) pažymėtoms programoms naudodami aukščiau esančius mygtukus",
+  "Review_Mode_Action_Install": "Pažymėtos programos bus įdiegtos, kai pritaikysite konfigūraciją",
+  "Review_Mode_Action_Remove": "Pažymėtos programos bus pašalintos, kai pritaikysite konfigūraciją",
+  "Review_Mode_Skip_Checkbox": "Praleisti peržiūrą ir taikyti iš karto",
+  "Review_Mode_Status_AllMatch": "Visi nustatymai jau atitinka konfigūraciją",
+  "Review_Mode_Status_NoItems": "Nėra konfigūracijos elementų, kuriuos būtų galima pritaikyti",
+  "Review_Mode_Action_ThemeWallpaper": "Pritaikyti numatytąjį šios temos darbalaukio foną?",
+  "Review_Mode_Action_CleanTaskbar": "Išvalyti užduočių juostą kaip šios konfigūracijos dalį?",
+  "Review_Mode_Action_CleanStartMenu": "Išvalyti pradžios meniu kaip šios konfigūracijos dalį?",
+  "Startup_Backup_ConfigBackup": "• Konfigūracijos atsarginė kopija: dabartinių Windows nustatymų momentinė kopija",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Sistemos atkūrimas: Windows nustatymuose ieškokite „Sukurti atkūrimo tašką“",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Atsarginė konfigūracija: pavadinimo juostoje naudokite „Importuoti konfigūraciją“ ir pasirinkite „Importuoti atsarginę konfigūraciją“",
+  "Help_LearnMore_WindowsApps": "Sužinokite daugiau apie Windows programas",
+  "Help_LearnMore_ExternalApps": "Sužinokite daugiau apie išorines programas",
+  "WIMUtil_Tooltip_DownloadWindows10": "Atsisiųsti Windows 10 ISO",
+  "WIMUtil_Tooltip_DownloadWindows11": "Atsisiųsti Windows 11 ISO",
+  "WIMUtil_Tooltip_Schneegans": "Atidaryti Schneegans XML generatorių",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Numatytasis: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Ar tikrai norite ištrinti WIM vaizdo failą? Šio veiksmo negalima atšaukti.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Ar tikrai norite ištrinti ESD vaizdo failą? Šio veiksmo negalima atšaukti.",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM failas sėkmingai ištrintas.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD failas sėkmingai ištrintas.",
+  "WIMUtil_Msg_DeleteFailed": "Nepavyko ištrinti vaizdo failo.",
+  "WIMUtil_Msg_DeleteError": "Klaida trinant vaizdo failą: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Konvertuojama {0} į {1}...",
+  "WIMUtil_Status_CreatingIso": "Kuriamas ISO",
+  "WIMUtil_Button_OpenFolder": "Atidaryti aplanką",
+  "Loading_CheckingSystemProtection": "Tikrinama sistemos apsauga..."
 }
