--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Pārslēgt Winhance motīvu",
   "Tooltip_Donate": "Ziedot, lai atbalstītu izstrādi",
   "Tooltip_ReportBug": "Ziņot par kļūdu",
-  "Menu_ReportBug": "Ziņot par kļūdu",
   "Settings_Title": "Winhance iestatījumi",
+  "Settings_Description": "Konfigurēt Winhance lietojumprogrammas iestatījumus",
   "Settings_Menu_Language": "Valoda",
   "Settings_Language_Description": "Izvēlieties lietojumprogrammas attēlojuma valodu",
   "Settings_Theme_Title": "Winhance motīvs",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Brīdinājums",
   "Dialog_Error": "Kļūda",
   "Dialog_Confirmation": "Apstiprinājums",
-  "Dialog_Question": "Jautājums",
   "Dialog_ConfirmInstallation": "Apstiprināt instalāciju",
   "Dialog_ConfirmRemoval": "Apstiprināt noņemšanu",
   "Dialog_ConfirmOperation": "Apstiprināt {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Izvēlieties konfigurācijas failu no sava datora",
   "Dialog_ImportConfig_Option_Recommended_Title": "Importēt ieteicamo konfigurāciju",
   "Dialog_ImportConfig_Option_Recommended_Description": "Ielādēt Winhance ieteicamo konfigurācijas failu",
-  "Dialog_ImportOptions_Title": "Importēt konfigurāciju",
   "Dialog_ImportOptions_Message": "Izvēlieties, kā vēlaties importēt konfigurāciju:",
-  "ImportOption_Own": "Importēt savu konfigurācijas failu",
-  "ImportOption_Recommended": "Importēt Winhance ieteicamo konfigurāciju",
-  "Dialog_Button_Yes": "Jā",
-  "Dialog_Button_No": "Nē",
-  "Dialog_Button_OK": "Labi",
-  "Dialog_Button_Cancel": "Atcelt",
-  "Dialog_Button_Continue": "Turpināt",
-  "Dialog_Button_Close": "Aizvērt",
-  "Dialog_Button_Apply": "Lietot",
-  "Dialog_Button_Refresh": "Atsvaidzināt",
-  "Dialog_Button_Help": "Palīdzība",
   "Dialog_Unified_Section_SoftwareAndApps": "Programmatūra un lietotnes",
   "Dialog_Unified_Description_SoftwareAndApps": "Windows pakotņu un ārējās programmatūras izvēles",
   "Dialog_Unified_Section_WindowsApps": "Windows lietotnes",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Atsvaidzināt",
   "Button_Help": "Palīdzība",
   "Button_Delete": "Dzēst",
+  "Button_Download": "Lejupielādēt",
   "Common_On": "Ieslēgts",
   "Common_Off": "Izslēgts",
   "Common_Search_Placeholder": "Rakstiet šeit, lai meklētu...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Nav atlasīts ISO",
   "WIMUtil_Status_WaitForConversion": "Gaidiet konversijas pabeigšanu",
   "WIMUtil_Status_CompleteStep1": "Pabeidziet 1. soli",
-  "WIMUtil_Status_ReadyToAddXml": "Gatavs pievienot XML",
   "WIMUtil_Status_XmlAdded": "✓ XML pievienots",
   "WIMUtil_Status_NoXmlAdded": "Nav pievienots XML (neobligāti)",
   "WIMUtil_Status_DriversAdded": "✓ Draiveri pievienoti",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance ir aizsargājis jūsu sistēmu ar dublējumkopijām.",
   "Startup_Backup_RestoreEnabled": "Sistēmas atjaunošana bija atspējota un tagad ir iespējota.",
   "Startup_Backup_Created": "Izveidots:",
-  "Startup_Backup_RegistryBackups": "• Reģistra dublējumkopijas ({0} stropi) šeit:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Sistēmas atjaunošanas punkts: 'Winhance sākotnējais atjaunošanas punkts'",
   "Startup_Backup_ToRestore": "Lai atjaunotu:",
-  "Startup_Backup_RestoreInstructions_System": "• Sistēma: atveriet 'Izveidot atjaunošanas punktu' sadaļā Iestatījumi > Sistēmas atjaunošana",
-  "Startup_Backup_RestoreInstructions_Registry": "• Reģistrs: veiciet dubultklikšķi uz .reg failiem dublējuma mapē",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Lai atjaunotu: meklējiet 'atjaunošanas punkts' Windows iestatījumos",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Lai atjaunotu: veiciet dubultklikšķi uz .reg failiem dublējuma mapē",
   "Startup_Backup_Note": "Piezīme: Sistēmas atjaunošana neatjaunos noņemtās lietotnes.",
-  "Startup_Backup_Note_AdminRights": "Reģistra dublējumkopijas ir vienreizējas un prasa administratora tiesības.",
   "Startup_Backup_Checkbox_DontCreate": "Nākotnē neveidot atjaunošanas punktus",
-  "Startup_Backup_Checkbox_DontShow": "Vairs nerādīt šo",
   "Startup_Migration_Title": "Skriptu atrašanās vieta atjaunināta",
   "Startup_Migration_SubTitle": "Winhance migrācija",
   "Startup_Migration_Intro": "Winhance ir atjauninājis Windows lietotņu noņemšanas skriptu atrašanās vietu.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Izveidojiet autounattend.xml failu, pamatojoties uz jūsu pašreizējām „Winhance“ izvēlēm, lai pielāgotu „Windows“ instalēšanas laikā.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Vairāk ģenerēšanas iespēju drīzumā",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Papildu XML pielāgošanas iespējas būs pieejamas turpmākajos atjauninājumos.",
-  "Button_OpenWIMUtil": "Atvērt WIMUtil",
-  "Button_DoItLater": "Es to izdarīšu vēlāk",
   "Dialog_FallbackDownload": "Alternatīva lejupielādes metode",
-  "Dialog_Button_Download": "Lejupielādēt",
   "WindowsApps_Msg_FallbackDownload": "Pakotni '{0}' nevarēja atrast, izmantojot WinGet, visticamāk, ģeogrāfisko tirgus ierobežojumu dēļ.\n\nWinhance var lejupielādēt šo pakotni tieši no Microsoft serveriem, izmantojot alternatīvu metodi (store.rg-adguard.net).\n\n• Pakotnes faili nāk tieši no Microsoft oficiālā CDN\n• Šī metode ir pilnīgi legāla un droša\n• Tā apiet tikai reģionālos ierobežojumus\n\nVai vēlaties turpināt ar alternatīvo lejupielādes metodi?",
   "WindowsApps_Checkbox_DontAskAgain": "Vairs nejautāt man par turpmākām instalācijām",
   "Progress_RemovingOldFile": "Noņem veco attēla failu...",
-  "Progress_WarningCouldNotDeleteFile": "Brīdinājums: nevarēja izdzēst veco failu",
   "Progress_ConversionCompleted": "Konversija veiksmīgi pabeigta",
   "Progress_ConversionFailed": "Konversija neizdevās",
   "Progress_PreparingInstallAdk": "Sagatavo Windows ADK instalēšanu...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Pārbauda sistēmas atjaunošanas statusu...",
   "Progress_EnablingRestore": "Iespējo sistēmas atjaunošanu...",
   "Progress_CreatingRestorePoint": "Izveido sistēmas atjaunošanas punktu...",
-  "Progress_BackingUpRegistry": "Dublē {0} reģistra stropu...",
   "Progress_CheckingInstallStatus": "Pārbauda instalācijas statusu...",
   "Progress_WaitForInitialLoad": "Lūdzu, uzgaidiet sākotnējās ielādes pabeigšanu",
   "Progress_RefreshingStatus": "Atsvaidzina instalācijas statusu...",
   "Progress_SelectionsCleared": "Visas atlases notīrītas",
   "Progress_NoInternetConnection": "Nav pieejams interneta savienojums. Instalēšanu nevar turpināt.",
-  "Progress_WingetInstalledSuccess": "WinGet veiksmīgi instalēts",
   "Progress_ConvertingFormat": "Konvertē {0} uz {1}...",
   "Progress_ConvertingEdition": "Konvertē izdevumu {0} no {1}...",
   "Progress_CopyingFile": "Kopē: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Neizdevās instalēt WinGet. Nevar instalēt {0}.",
   "Progress_WinGet_StartingInstallation": "Sāk instalēt {0}...",
   "Progress_WinGet_InstalledSuccess": "Veiksmīgi instalēts {0}",
-  "Progress_WinGet_RepairingInstallation": "Remontē WinGet instalāciju...",
-  "Progress_WinGet_FailedRepair": "Neizdevās salabot WinGet. Nevar instalēt {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Neizdevās atrast WinGet pēc remonta. Nevar instalēt {0}.",
-  "Progress_WinGet_RetryingInstallation": "Atkārtoti mēģina instalēt {0}...",
   "Progress_WinGet_InstallationCancelled": "Instalēšana {0} tika atcelta",
   "Progress_WinGet_NetworkError": "Tīkla kļūda, instalējot {0}. Lūdzu, pārbaudiet interneta savienojumu un mēģiniet vēlreiz.",
   "Progress_WinGet_InstallationError": "Kļūda, instalējot {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Pārbauda WinGet instalāciju...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "WinGet instalācijas pārbaude neizdevās",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet instalēts, bet nav pieejams. Lūdzu, restartējiet lietojumprogrammu.",
-  "Progress_WinGet_InitializingSources": "Inicializē WinGet avotus...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet veiksmīgi instalēts",
   "Progress_WinGet_InstallError": "Kļūda, instalējot WinGet: {0}",
   "Progress_Store_FetchingLinks": "Iegūst lejupielādes saites {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Neizdevās instalēt {0}",
   "Progress_Store_DownloadCancelled": "Lejupielāde {0} tika atcelta",
   "Progress_Store_InstallError": "Kļūda, instalējot {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Pieprasa pakotnes informāciju {0}...",
-  "Progress_Store_DownloadingMainPackage": "Lejupielādē {0} galveno pakotni...",
   "Progress_Store_DownloadingDependencies": "Lejupielādē {0} nepieciešamo atkarību pakotni(-es)...",
   "Progress_Store_InstallingWithDependencies": "Instalē {0} ar {1} atkarībām...",
   "Progress_Store_Installing": "Instalē {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Instalēšana neizdevās: {0}",
   "Progress_WinGet_CheckingUpdates": "Pārbauda „WinGet“ atjauninājumus...",
   "Progress_WinGet_Updating": "Atjaunina „WinGet“...",
-  "Progress_WinGet_CheckingVersion": "Pārbauda „WinGet“ versiju...",
-  "Progress_WinGet_UpdateInitiated": "„WinGet“ atjaunināšana sākta caur „Store“, pārbauda pabeigšanu...",
-  "Progress_WinGet_WaitingForUpdate": "Gaida „WinGet“ atjaunināšanas pabeigšanu...",
-  "Progress_WinGet_Reinstalling": "Pārinstalē „WinGet“...",
   "Progress_WinGet_UpdateSuccess": "„WinGet“ veiksmīgi atjaunināts",
-  "Progress_WinGet_UpdateCompleted": "„WinGet“ atjaunināšana pabeigta",
   "Progress_WinGet_AlreadyUpToDate": "„WinGet“ jau ir atjaunināts",
-  "Progress_WinGet_InstalledLatest": "„WinGet“ jau ir instalēta jaunākā versija",
   "Progress_WinGet_Ready": "„WinGet“ ir gatavs",
   "Progress_Uninstalling": "Atinstalē {0}...",
   "Progress_Finalizing": "Pabeidz...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet šajā sistēmā nav pieejams.",
   "App_Tagline": "Uzlabojiet savu Windows pieredzi",
   "Loading_InitializingSettings": "Inicializē iestatījumus...",
-  "Loading_CreatingRestorePoint": "Veido sistēmas atjaunošanas punktu. Lūdzu, uzgaidiet, tas var aizņemt kādu laiku...",
   "Loading_MigratingScripts": "Migrē skriptus...",
   "Loading_CheckingScripts": "Pārbauda skriptu atjauninājumus...",
-  "Loading_PreparingApp": "Sagatavo lietotni..."
+  "Loading_PreparingApp": "Sagatavo lietotni...",
+  "Tooltip_Documentation": "Dokumentācija",
+  "Tooltip_ToggleNavigation": "P\u0101rsl\u0113gt navig\u0101ciju",
+  "Dialog_ImportConfig_Option_Backup_Title": "Importēt rezerves konfigurāciju",
+  "Dialog_ImportConfig_Option_Backup_Description": "Atjaunot sistēmas rezerves konfigurāciju",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Atjaunot Windows noklusējuma iestatījumus",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Atiestatīt visus iestatījumus uz Windows rūpnīcas noklusējuma vērtībām",
+  "Loading_CreatingConfigBackup": "Veido konfigurācijas rezerves kopiju...",
+  "Config_Backup_NotFound": "Nav atrasti rezerves konfigurācijas faili. Rezerves kopija tiek automātiski izveidota, pirmo reizi palaižot lietotni.",
+  "Config_Backup_NotFound_Title": "Rezerves kopija nav atrasta",
+  "Config_Backup_Select_Title": "Izvēlēties rezerves kopijas failu",
+  "Review_Mode_Title": "Konfigurācijas pārskatīšanas režīms",
+  "Review_Mode_Description": "Pārskatiet izmaiņas visās sadaļās, pēc tam noklikšķiniet „Lietot konfigurāciju“, kad esat gatavs.",
+  "Review_Mode_Status_Format": "{0} no {1} pārskatīts ({2} tiks lietots)",
+  "Review_Mode_Apply_Button": "Lietot konfigurāciju",
+  "Review_Mode_Cancel_Button": "Atcelt",
+  "Review_Mode_Cancel_Confirmation_Title": "Atcelt konfigurācijas pārskatīšanu",
+  "Review_Mode_Cancel_Confirmation": "Vai tiešām vēlaties atcelt? Nekādas izmaiņas netiks lietotas.",
+  "Review_Mode_Diff_Toggle": "Pašreizējais: {0} → Konfigurācija: {1}",
+  "Review_Mode_Select_Action": "Izvēlieties darbību (Instalēt vai Atinstalēt) atzīmētajām lietotnēm, izmantojot augstāk esošās pogas",
+  "Review_Mode_Action_Install": "Atzīmētās lietotnes tiks instalētas, kad lietosiet konfigurāciju",
+  "Review_Mode_Action_Remove": "Atzīmētās lietotnes tiks noņemtas, kad lietosiet konfigurāciju",
+  "Review_Mode_Skip_Checkbox": "Izlaist pārskatīšanu un lietot nekavējoties",
+  "Review_Mode_Status_AllMatch": "Visi iestatījumi jau atbilst konfigurācijai",
+  "Review_Mode_Status_NoItems": "Nav konfigurācijas vienumu, ko lietot",
+  "Review_Mode_Action_ThemeWallpaper": "Lietot šīs tēmas noklusējuma fona attēlu?",
+  "Review_Mode_Action_CleanTaskbar": "Iztīrīt uzdevumjoslu kā daļu no šīs konfigurācijas?",
+  "Review_Mode_Action_CleanStartMenu": "Iztīrīt sākuma izvēlni kā daļu no šīs konfigurācijas?",
+  "Startup_Backup_ConfigBackup": "• Konfigurācijas rezerves kopija: pašreizējo Windows iestatījumu momentuzņēmums",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Sistēmas atjaunošana: Windows iestatījumos meklējiet „Izveidot atjaunošanas punktu“",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Rezerves konfigurācija: izmantojiet „Importēt konfigurāciju“ virsrakstjoslā un izvēlieties „Importēt rezerves konfigurāciju“",
+  "Help_LearnMore_WindowsApps": "Uzzināt vairāk par Windows lietotnēm",
+  "Help_LearnMore_ExternalApps": "Uzzināt vairāk par ārējām lietotnēm",
+  "WIMUtil_Tooltip_DownloadWindows10": "Lejupielādēt Windows 10 ISO",
+  "WIMUtil_Tooltip_DownloadWindows11": "Lejupielādēt Windows 11 ISO",
+  "WIMUtil_Tooltip_Schneegans": "Atvērt Schneegans XML ģeneratoru",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Noklusējums: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Vai tiešām vēlaties dzēst WIM attēla failu? Šo darbību nevar atsaukt.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Vai tiešām vēlaties dzēst ESD attēla failu? Šo darbību nevar atsaukt.",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM fails veiksmīgi dzēsts.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD fails veiksmīgi dzēsts.",
+  "WIMUtil_Msg_DeleteFailed": "Neizdevās dzēst attēla failu.",
+  "WIMUtil_Msg_DeleteError": "Kļūda, dzēšot attēla failu: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Konvertē {0} uz {1}...",
+  "WIMUtil_Status_CreatingIso": "Veido ISO",
+  "WIMUtil_Button_OpenFolder": "Atvērt mapi",
+  "Loading_CheckingSystemProtection": "Pārbauda sistēmas aizsardzību..."
 }
