--- a/src/Winhance.UI/Features/Common/Localization/nl-BE.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl-BE.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Winhance Thema wisselen",
   "Tooltip_Donate": "Doneer om ontwikkeling te steunen",
   "Tooltip_ReportBug": "Een bug melden",
-  "Menu_ReportBug": "Een bug melden",
   "Settings_Title": "Winhance Instellingen",
+  "Settings_Description": "Winhance-toepassingsvoorkeuren configureren",
   "Settings_Menu_Language": "Taal",
   "Settings_Language_Description": "Selecteer de weergavetaal van de applicatie",
   "Settings_Theme_Title": "Winhance Thema",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Waarschuwing",
   "Dialog_Error": "Fout",
   "Dialog_Confirmation": "Bevestiging",
-  "Dialog_Question": "Vraag",
   "Dialog_ConfirmInstallation": "Installatie Bevestigen",
   "Dialog_ConfirmRemoval": "Verwijdering Bevestigen",
   "Dialog_ConfirmOperation": "Bevestig {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Selecteer een configuratiebestand van uw computer",
   "Dialog_ImportConfig_Option_Recommended_Title": "Aanbevolen config importeren",
   "Dialog_ImportConfig_Option_Recommended_Description": "Laad het aanbevolen Winhance configuratiebestand",
-  "Dialog_ImportOptions_Title": "Configuratie importeren",
   "Dialog_ImportOptions_Message": "Kies hoe u een configuratie wilt importeren:",
-  "ImportOption_Own": "Mijn eigen configuratiebestand importeren",
-  "ImportOption_Recommended": "Winhance aanbevolen configuratie importeren",
-  "Dialog_Button_Yes": "Ja",
-  "Dialog_Button_No": "Nee",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Annuleren",
-  "Dialog_Button_Continue": "Doorgaan",
-  "Dialog_Button_Close": "Sluiten",
-  "Dialog_Button_Apply": "Toepassen",
-  "Dialog_Button_Refresh": "Vernieuwen",
-  "Dialog_Button_Help": "Help",
   "Dialog_Unified_Section_SoftwareAndApps": "Software \u0026 Apps",
   "Dialog_Unified_Description_SoftwareAndApps": "Selecties voor Windows Pakketten en Externe Software",
   "Dialog_Unified_Section_WindowsApps": "Windows Apps",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Vernieuwen",
   "Button_Help": "Help",
   "Button_Delete": "Verwijderen",
+  "Button_Download": "Downloaden",
   "Common_On": "Aan",
   "Common_Off": "Uit",
   "Common_Search_Placeholder": "Typ hier om te zoeken...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Geen ISO Geselecteerd",
   "WIMUtil_Status_WaitForConversion": "🔒 Wacht op conversie om te voltooien",
   "WIMUtil_Status_CompleteStep1": "🔒 Voltooi Stap 1",
-  "WIMUtil_Status_ReadyToAddXml": "Klaar om XML toe te voegen",
   "WIMUtil_Status_XmlAdded": "✓ XML Toegevoegd",
   "WIMUtil_Status_NoXmlAdded": "Geen XML Toegevoegd (Optioneel)",
   "WIMUtil_Status_DriversAdded": "✓ Stuurprogramma\u0027s Toegevoegd",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance heeft uw systeem beschermd met back-ups.",
   "Startup_Backup_RestoreEnabled": "Systeemherstel was uitgeschakeld en is nu ingeschakeld.",
   "Startup_Backup_Created": "Gemaakt:",
-  "Startup_Backup_RegistryBackups": "• Registerback-ups ({0} hives) op:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Systeemherstelpunt: \u0027Winhance Initiële Herstelpunt\u0027",
   "Startup_Backup_ToRestore": "Om te herstellen:",
-  "Startup_Backup_RestoreInstructions_System": "• Systeem: Open \u0027Een herstelpunt maken\u0027 in Instellingen \u003e Systeemherstel",
-  "Startup_Backup_RestoreInstructions_Registry": "• Register: Dubbelklik op .reg bestanden in de back-upmap",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Om te herstellen: Zoek \u0027herstelpunt\u0027 in Windows Instellingen",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Om te herstellen: Dubbelklik op .reg bestanden in de back-upmap",
   "Startup_Backup_Note": "Opmerking: Systeemherstel herstelt geen verwijderde apps.",
-  "Startup_Backup_Note_AdminRights": "Registerback-ups zijn eenmalig en vereisen beheerdersrechten.",
   "Startup_Backup_Checkbox_DontCreate": "Geen herstelpunten maken in de toekomst",
-  "Startup_Backup_Checkbox_DontShow": "Dit niet meer weergeven",
   "Startup_Migration_Title": "Scriptlocatie Bijgewerkt",
   "Startup_Migration_SubTitle": "Winhance Migratie",
   "Startup_Migration_Intro": "Winhance heeft de locatie van Windows App-verwijderscripts bijgewerkt.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Genereer een autounattend.xml-bestand op basis van uw huidige Winhance-selecties om Windows aan te passen tijdens de installatie.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Meer generatieopties binnenkort beschikbaar",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Extra XML-aanpassingsopties worden beschikbaar in toekomstige updates.",
-  "Button_OpenWIMUtil": "WIMUtil Openen",
-  "Button_DoItLater": "Ik Doe Het Later",
   "Dialog_FallbackDownload": "Alternatieve Downloadmethode",
-  "Dialog_Button_Download": "Downloaden",
   "WindowsApps_Msg_FallbackDownload": "Het pakket \u0027{0}\u0027 kon niet worden gevonden via WinGet, waarschijnlijk vanwege geografische marktbeperkingen.\n\nWinhance kan dit pakket rechtstreeks van de servers van Microsoft downloaden met behulp van een alternatieve methode (store.rg-adguard.net).\n\n• De pakketbestanden komen rechtstreeks van de officiële CDN van Microsoft\n• Deze methode is volledig legaal en veilig\n• Het omzeilt alleen regionale beperkingen\n\nWilt u doorgaan met de alternatieve downloadmethode?",
   "WindowsApps_Checkbox_DontAskAgain": "Vraag me dit niet opnieuw voor toekomstige installaties",
   "Progress_RemovingOldFile": "Oud beeldbestand verwijderen...",
-  "Progress_WarningCouldNotDeleteFile": "Waarschuwing: Kon oud bestand niet verwijderen",
   "Progress_ConversionCompleted": "Conversie succesvol voltooid",
   "Progress_ConversionFailed": "Conversie mislukt",
   "Progress_PreparingInstallAdk": "Voorbereiden om Windows ADK te installeren...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Systeemherstelstatus controleren...",
   "Progress_EnablingRestore": "Systeemherstel inschakelen...",
   "Progress_CreatingRestorePoint": "Systeemherstelpunt maken...",
-  "Progress_BackingUpRegistry": "{0} register hive back-uppen...",
   "Progress_CheckingInstallStatus": "Installatiestatus controleren...",
   "Progress_WaitForInitialLoad": "Wacht tot initiële lading is voltooid",
   "Progress_RefreshingStatus": "Installatiestatus vernieuwen...",
   "Progress_SelectionsCleared": "Alle selecties gewist",
   "Progress_NoInternetConnection": "Geen internetverbinding beschikbaar. Installatie kan niet doorgaan.",
-  "Progress_WingetInstalledSuccess": "WinGet succesvol geïnstalleerd",
   "Progress_ConvertingFormat": "{0} converteren naar {1}...",
   "Progress_ConvertingEdition": "Editie {0} van {1} converteren...",
   "Progress_CopyingFile": "Kopiëren: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Mislukt om WinGet te installeren. Kan {0} niet installeren.",
   "Progress_WinGet_StartingInstallation": "Installatie starten van {0}...",
   "Progress_WinGet_InstalledSuccess": "{0} succesvol geïnstalleerd",
-  "Progress_WinGet_RepairingInstallation": "WinGet-installatie repareren...",
-  "Progress_WinGet_FailedRepair": "Mislukt om WinGet te repareren. Kan {0} niet installeren.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Mislukt om WinGet te vinden na reparatie. Kan {0} niet installeren.",
-  "Progress_WinGet_RetryingInstallation": "Installatie van {0} opnieuw proberen...",
   "Progress_WinGet_InstallationCancelled": "Installatie van {0} was geannuleerd",
   "Progress_WinGet_NetworkError": "Netwerkfout tijdens installeren van {0}. Controleer uw internetverbinding en probeer het opnieuw.",
   "Progress_WinGet_InstallationError": "Fout bij installeren {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "WinGet-installatie verifiëren...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "WinGet-installatieverificatie mislukt",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet geïnstalleerd maar niet toegankelijk. Herstart de applicatie.",
-  "Progress_WinGet_InitializingSources": "WinGet-bronnen initialiseren...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet succesvol geïnstalleerd",
   "Progress_WinGet_InstallError": "Fout bij installeren WinGet: {0}",
   "Progress_Store_FetchingLinks": "Downloadlinks ophalen voor {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Mislukt om {0} te installeren",
   "Progress_Store_DownloadCancelled": "Download van {0} was geannuleerd",
   "Progress_Store_InstallError": "Fout bij installeren {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Pakketinformatie aanvragen voor {0}...",
-  "Progress_Store_DownloadingMainPackage": "{0} hoofdpakket downloaden...",
   "Progress_Store_DownloadingDependencies": "{0} vereiste afhankelijkheidspakket(ten) downloaden...",
   "Progress_Store_InstallingWithDependencies": "{0} installeren met {1} afhankelijkheden...",
   "Progress_Store_Installing": "{0} installeren...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Installatie mislukt: {0}",
   "Progress_WinGet_CheckingUpdates": "Controleren op WinGet-updates...",
   "Progress_WinGet_Updating": "WinGet bijwerken...",
-  "Progress_WinGet_CheckingVersion": "WinGet-versie controleren...",
-  "Progress_WinGet_UpdateInitiated": "WinGet-update gestart via Store, voltooiing verifiëren...",
-  "Progress_WinGet_WaitingForUpdate": "Wachten tot de WinGet-update is voltooid...",
-  "Progress_WinGet_Reinstalling": "WinGet opnieuw installeren...",
   "Progress_WinGet_UpdateSuccess": "WinGet succesvol bijgewerkt",
-  "Progress_WinGet_UpdateCompleted": "WinGet-update voltooid",
   "Progress_WinGet_AlreadyUpToDate": "WinGet is al up-to-date",
-  "Progress_WinGet_InstalledLatest": "WinGet is al geïnstalleerd in de nieuwste versie",
   "Progress_WinGet_Ready": "WinGet is klaar",
   "Progress_Uninstalling": "Verwijderen van {0}...",
   "Progress_Finalizing": "Afronden...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet is niet beschikbaar op dit systeem.",
   "App_Tagline": "Verbeter uw Windows-ervaring",
   "Loading_InitializingSettings": "Instellingen initialiseren...",
-  "Loading_CreatingRestorePoint": "Systeemherstelpunt wordt aangemaakt. Even geduld, dit kan even duren...",
   "Loading_MigratingScripts": "Scripts migreren...",
   "Loading_CheckingScripts": "Controleren op scriptupdates...",
-  "Loading_PreparingApp": "Toepassing voorbereiden..."
+  "Loading_PreparingApp": "Toepassing voorbereiden...",
+  "Tooltip_Documentation": "Documentatie",
+  "Tooltip_ToggleNavigation": "Navigatie wisselen",
+  "Dialog_ImportConfig_Option_Backup_Title": "Back-upconfiguratie importeren",
+  "Dialog_ImportConfig_Option_Backup_Description": "Uw systeemback-upconfiguratie terugzetten",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Windows-standaardinstellingen herstellen",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Alle instellingen terugzetten naar de Windows-fabrieksinstellingen",
+  "Loading_CreatingConfigBackup": "Configuratieback-up aanmaken...",
+  "Config_Backup_NotFound": "Er werden geen back-upconfiguratiebestanden gevonden. Er wordt automatisch een back-up aangemaakt bij de eerste keer dat de app wordt opgestart.",
+  "Config_Backup_NotFound_Title": "Geen back-up gevonden",
+  "Config_Backup_Select_Title": "Back-upbestand selecteren",
+  "Review_Mode_Title": "Configuratie-controlemodus",
+  "Review_Mode_Description": "Bekijk de wijzigingen in alle secties en klik op Configuratie toepassen wanneer u klaar bent.",
+  "Review_Mode_Status_Format": "{0} van {1} nagekeken ({2} worden toegepast)",
+  "Review_Mode_Apply_Button": "Configuratie toepassen",
+  "Review_Mode_Cancel_Button": "Annuleren",
+  "Review_Mode_Cancel_Confirmation_Title": "Configuratiecontrole annuleren",
+  "Review_Mode_Cancel_Confirmation": "Bent u zeker dat u wilt annuleren? Er worden geen wijzigingen toegepast.",
+  "Review_Mode_Diff_Toggle": "Huidig: {0} → Configuratie: {1}",
+  "Review_Mode_Select_Action": "Selecteer een actie (Installeren of Verwijderen) voor aangevinkte apps met de knoppen hierboven",
+  "Review_Mode_Action_Install": "Aangevinkte apps worden geïnstalleerd wanneer u de configuratie toepast",
+  "Review_Mode_Action_Remove": "Aangevinkte apps worden verwijderd wanneer u de configuratie toepast",
+  "Review_Mode_Skip_Checkbox": "Controle overslaan en onmiddellijk toepassen",
+  "Review_Mode_Status_AllMatch": "Alle instellingen komen al overeen met de configuratie",
+  "Review_Mode_Status_NoItems": "Geen configuratie-items om toe te passen",
+  "Review_Mode_Action_ThemeWallpaper": "De standaardachtergrond voor dit thema toepassen?",
+  "Review_Mode_Action_CleanTaskbar": "De taakbalk opkuisen als onderdeel van deze configuratie?",
+  "Review_Mode_Action_CleanStartMenu": "Het startmenu opkuisen als onderdeel van deze configuratie?",
+  "Startup_Backup_ConfigBackup": "• Configuratieback-up: Een momentopname van uw huidige Windows-instellingen",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Systeemherstel: Zoek naar 'Een herstelpunt maken' in Windows-instellingen",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Back-upconfiguratie: Gebruik Configuratie importeren in de titelbalk en selecteer 'Back-upconfiguratie importeren'",
+  "Help_LearnMore_WindowsApps": "Meer informatie over Windows-apps",
+  "Help_LearnMore_ExternalApps": "Meer informatie over externe apps",
+  "WIMUtil_Tooltip_DownloadWindows10": "Windows 10 ISO downloaden",
+  "WIMUtil_Tooltip_DownloadWindows11": "Windows 11 ISO downloaden",
+  "WIMUtil_Tooltip_Schneegans": "Schneegans XML-generator openen",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Standaard: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Bent u zeker dat u het WIM-imagebestand wilt verwijderen? Deze actie kan niet ongedaan worden gemaakt.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Bent u zeker dat u het ESD-imagebestand wilt verwijderen? Deze actie kan niet ongedaan worden gemaakt.",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM-bestand succesvol verwijderd.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD-bestand succesvol verwijderd.",
+  "WIMUtil_Msg_DeleteFailed": "Kan het imagebestand niet verwijderen.",
+  "WIMUtil_Msg_DeleteError": "Fout bij het verwijderen van imagebestand: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "{0} converteren naar {1}...",
+  "WIMUtil_Status_CreatingIso": "ISO aanmaken",
+  "WIMUtil_Button_OpenFolder": "Map openen",
+  "Loading_CheckingSystemProtection": "Systeembeveiliging controleren..."
 }
