--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Zmień motyw Winhance",
   "Tooltip_Donate": "Wesprzyj rozwój projektu",
   "Tooltip_ReportBug": "Zgłoś błąd",
-  "Menu_ReportBug": "Zgłoś błąd",
   "Settings_Title": "Ustawienia Winhance",
+  "Settings_Description": "Konfiguruj preferencje aplikacji Winhance",
   "Settings_Menu_Language": "Język",
   "Settings_Language_Description": "Wybierz język wyświetlania aplikacji",
   "Settings_Theme_Title": "Motyw Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Ostrzeżenie",
   "Dialog_Error": "Błąd",
   "Dialog_Confirmation": "Potwierdzenie",
-  "Dialog_Question": "Pytanie",
   "Dialog_ConfirmInstallation": "Potwierdź instalację",
   "Dialog_ConfirmRemoval": "Potwierdź usunięcie",
   "Dialog_ConfirmOperation": "Potwierdź {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Wybierz plik konfiguracji z komputera",
   "Dialog_ImportConfig_Option_Recommended_Title": "Importuj zalecaną konfigurację",
   "Dialog_ImportConfig_Option_Recommended_Description": "Załaduj zalecany plik konfiguracyjny Winhance",
-  "Dialog_ImportOptions_Title": "Importuj konfigurację",
   "Dialog_ImportOptions_Message": "Wybierz sposób importu konfiguracji:",
-  "ImportOption_Own": "Importuj własny plik konfiguracyjny",
-  "ImportOption_Recommended": "Importuj zalecaną konfigurację Winhance",
-  "Dialog_Button_Yes": "Tak",
-  "Dialog_Button_No": "Nie",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Anuluj",
-  "Dialog_Button_Continue": "Kontynuuj",
-  "Dialog_Button_Close": "Zamknij",
-  "Dialog_Button_Apply": "Zastosuj",
-  "Dialog_Button_Refresh": "Odśwież",
-  "Dialog_Button_Help": "Pomoc",
   "Dialog_Unified_Section_SoftwareAndApps": "Oprogramowanie i Aplikacje",
   "Dialog_Unified_Description_SoftwareAndApps": "Wybór pakietów Windows i oprogramowania zewnętrznego",
   "Dialog_Unified_Section_WindowsApps": "Aplikacje Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Odśwież",
   "Button_Help": "Pomoc",
   "Button_Delete": "Usuń",
+  "Button_Download": "Pobierz",
   "Common_On": "Włączone",
   "Common_Off": "Wyłączone",
   "Common_Search_Placeholder": "Wpisz, aby wyszukać...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Nie wybrano obrazu ISO",
   "WIMUtil_Status_WaitForConversion": "🔒 Poczekaj na zakończenie konwersji",
   "WIMUtil_Status_CompleteStep1": "🔒 Ukończ Krok 1",
-  "WIMUtil_Status_ReadyToAddXml": "Gotowy do dodania XML",
   "WIMUtil_Status_XmlAdded": "✓ XML dodano",
   "WIMUtil_Status_NoXmlAdded": "Nie dodano XML (opcjonalnie)",
   "WIMUtil_Status_DriversAdded": "✓ Sterowniki dodano",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance chroni Twój system za pomocą kopii zapasowych.",
   "Startup_Backup_RestoreEnabled": "Przywracanie systemu było wyłączone i jest teraz włączone.",
   "Startup_Backup_Created": "Utworzono:",
-  "Startup_Backup_RegistryBackups": "• Kopie zapasowe rejestru ({0} gałęzi) w:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Punkt przywracania systemu: 'Winhance Initial Restore Point'",
   "Startup_Backup_ToRestore": "Aby przywrócić:",
-  "Startup_Backup_RestoreInstructions_System": "• System: Otwórz 'Utwórz punkt przywracania' w Ustawieniach > Przywracanie systemu",
-  "Startup_Backup_RestoreInstructions_Registry": "• Rejestr: Kliknij dwukrotnie pliki .reg w folderze kopii zapasowej",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Aby przywrócić: Wyszukaj 'punkt przywracania' w Ustawieniach systemu Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Aby przywrócić: Kliknij dwukrotnie pliki .reg w folderze kopii zapasowej",
   "Startup_Backup_Note": "Uwaga: Przywracanie systemu nie przywróci usuniętych aplikacji.",
-  "Startup_Backup_Note_AdminRights": "Kopie zapasowe rejestru są jednorazowe i wymagają uprawnień administratora.",
   "Startup_Backup_Checkbox_DontCreate": "Nie twórz punktów przywracania w przyszłości",
-  "Startup_Backup_Checkbox_DontShow": "Nie pokazuj ponownie",
   "Startup_Migration_Title": "Zaktualizowano lokalizację skryptu",
   "Startup_Migration_SubTitle": "Migracja Winhance",
   "Startup_Migration_Intro": "Winhance zaktualizowało lokalizację skryptów usuwania aplikacji Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Wygeneruj plik autounattend.xml na podstawie bieżących wyborów Winhance, aby dostosować system Windows podczas instalacji.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Więcej opcji generowania wkrótce",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Dodatkowe opcje dostosowywania XML będą dostępne w przyszłych aktualizacjach.",
-  "Button_OpenWIMUtil": "Otwórz WIMUtil",
-  "Button_DoItLater": "Zrobię to później",
   "Dialog_FallbackDownload": "Alternatywna metoda pobierania",
-  "Dialog_Button_Download": "Pobierz",
   "WindowsApps_Msg_FallbackDownload": "Nie można znaleźć pakietu '{0}' za pośrednictwem WinGet, prawdopodobnie z powodu ograniczeń regionalnych.\n\nWinhance może pobrać ten pakiet bezpośrednio z serwerów Microsoft, używając alternatywnej metody (store.rg-adguard.net).\n\n• Pliki pakietu pochodzą bezpośrednio z oficjalnego CDN firmy Microsoft\n• Ta metoda jest całkowicie legalna i bezpieczna\n• Omija tylko ograniczenia regionalne\n\nCzy chcesz kontynuować alternatywną metodą pobierania?",
   "WindowsApps_Checkbox_DontAskAgain": "Nie pytaj mnie ponownie o przyszłe instalacje",
   "Progress_RemovingOldFile": "Usuwanie starego pliku obrazu...",
-  "Progress_WarningCouldNotDeleteFile": "Ostrzeżenie: Nie można usunąć starego pliku",
   "Progress_ConversionCompleted": "Konwersja zakończona pomyślnie",
   "Progress_ConversionFailed": "Konwersja nie powiodła się",
   "Progress_PreparingInstallAdk": "Przygotowywanie do instalacji Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Sprawdzanie statusu przywracania systemu...",
   "Progress_EnablingRestore": "Włączanie przywracania systemu...",
   "Progress_CreatingRestorePoint": "Tworzenie punktu przywracania systemu...",
-  "Progress_BackingUpRegistry": "Tworzenie kopii zapasowej gałęzi rejestru {0}...",
   "Progress_CheckingInstallStatus": "Sprawdzanie statusu instalacji...",
   "Progress_WaitForInitialLoad": "Proszę czekać na zakończenie początkowego ładowania",
   "Progress_RefreshingStatus": "Odświeżanie statusu instalacji...",
   "Progress_SelectionsCleared": "Wszystkie zaznaczenia wyczyszczone",
   "Progress_NoInternetConnection": "Brak połączenia z internetem. Instalacja nie może być kontynuowana.",
-  "Progress_WingetInstalledSuccess": "WinGet zainstalowany pomyślnie",
   "Progress_ConvertingFormat": "Konwertowanie {0} na {1}...",
   "Progress_ConvertingEdition": "Konwertowanie edycji {0} z {1}...",
   "Progress_CopyingFile": "Kopiowanie: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Nie udało się zainstalować WinGet. Nie można zainstalować {0}.",
   "Progress_WinGet_StartingInstallation": "Rozpoczynanie instalacji {0}...",
   "Progress_WinGet_InstalledSuccess": "Pomyślnie zainstalowano {0}",
-  "Progress_WinGet_RepairingInstallation": "Naprawianie instalacji WinGet...",
-  "Progress_WinGet_FailedRepair": "Nie udało się naprawić WinGet. Nie można zainstalować {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Nie udało się zlokalizować WinGet po naprawie. Nie można zainstalować {0}.",
-  "Progress_WinGet_RetryingInstallation": "Ponawianie instalacji {0}...",
   "Progress_WinGet_InstallationCancelled": "Instalacja {0} została anulowana",
   "Progress_WinGet_NetworkError": "Błąd sieci podczas instalacji {0}. Sprawdź połączenie internetowe i spróbuj ponownie.",
   "Progress_WinGet_InstallationError": "Błąd instalacji {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Weryfikacja instalacji WinGet...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Weryfikacja instalacji WinGet nie powiodła się",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet zainstalowany, ale niedostępny. Uruchom ponownie aplikację.",
-  "Progress_WinGet_InitializingSources": "Inicjowanie źródeł WinGet...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet zainstalowany pomyślnie",
   "Progress_WinGet_InstallError": "Błąd instalacji WinGet: {0}",
   "Progress_Store_FetchingLinks": "Pobieranie linków pobierania dla {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Nie udało się zainstalować {0}",
   "Progress_Store_DownloadCancelled": "Pobieranie {0} zostało anulowane",
   "Progress_Store_InstallError": "Błąd instalacji {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Pobieranie informacji o pakiecie dla {0}...",
-  "Progress_Store_DownloadingMainPackage": "Pobieranie głównego pakietu {0}...",
   "Progress_Store_DownloadingDependencies": "Pobieranie {0} wymaganego pakietu(ów) zależności...",
   "Progress_Store_InstallingWithDependencies": "Instalowanie {0} z {1} zależnościami...",
   "Progress_Store_Installing": "Instalowanie {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Instalacja nie powiodła się: {0}",
   "Progress_WinGet_CheckingUpdates": "Sprawdzanie aktualizacji WinGet...",
   "Progress_WinGet_Updating": "Aktualizowanie WinGet...",
-  "Progress_WinGet_CheckingVersion": "Sprawdzanie wersji WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Aktualizacja WinGet zainicjowana przez Store, weryfikacja ukończenia...",
-  "Progress_WinGet_WaitingForUpdate": "Oczekiwanie na zakończenie aktualizacji WinGet...",
-  "Progress_WinGet_Reinstalling": "Ponowne instalowanie WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet został pomyślnie zaktualizowany",
-  "Progress_WinGet_UpdateCompleted": "Aktualizacja WinGet zakończona",
   "Progress_WinGet_AlreadyUpToDate": "WinGet jest już aktualny",
-  "Progress_WinGet_InstalledLatest": "WinGet jest już zainstalowany w najnowszej wersji",
   "Progress_WinGet_Ready": "WinGet jest gotowy",
   "Progress_Uninstalling": "Odinstalowywanie {0}...",
   "Progress_Finalizing": "Finalizowanie...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet nie jest dostępny w tym systemie.",
   "App_Tagline": "Ulepsz swoje doświadczenie z Windows",
   "Loading_InitializingSettings": "Inicjalizowanie ustawień...",
-  "Loading_CreatingRestorePoint": "Tworzenie punktu przywracania systemu. Proszę czekać, to może chwilę potrwać...",
   "Loading_MigratingScripts": "Migrowanie skryptów...",
   "Loading_CheckingScripts": "Sprawdzanie aktualizacji skryptów...",
-  "Loading_PreparingApp": "Przygotowywanie aplikacji..."
+  "Loading_PreparingApp": "Przygotowywanie aplikacji...",
+  "Tooltip_Documentation": "Dokumentacja",
+  "Tooltip_ToggleNavigation": "Prze\u0142\u0105cz nawigacj\u0119",
+  "Dialog_ImportConfig_Option_Backup_Title": "Importuj kopię zapasową konfiguracji",
+  "Dialog_ImportConfig_Option_Backup_Description": "Przywróć konfigurację z kopii zapasowej systemu",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Przywróć domyślne ustawienia Windows",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Zresetuj wszystkie ustawienia do domyślnych wartości fabrycznych Windows",
+  "Loading_CreatingConfigBackup": "Tworzenie kopii zapasowej konfiguracji...",
+  "Config_Backup_NotFound": "Nie znaleziono plików kopii zapasowej konfiguracji. Kopia zapasowa jest tworzona automatycznie przy pierwszym uruchomieniu aplikacji.",
+  "Config_Backup_NotFound_Title": "Nie znaleziono kopii zapasowej",
+  "Config_Backup_Select_Title": "Wybierz plik kopii zapasowej",
+  "Review_Mode_Title": "Tryb przeglądu konfiguracji",
+  "Review_Mode_Description": "Przejrzyj zmiany we wszystkich sekcjach, a następnie kliknij Zastosuj konfigurację, gdy będziesz gotowy.",
+  "Review_Mode_Status_Format": "{0} z {1} sprawdzonych ({2} zostanie zastosowanych)",
+  "Review_Mode_Apply_Button": "Zastosuj konfigurację",
+  "Review_Mode_Cancel_Button": "Anuluj",
+  "Review_Mode_Cancel_Confirmation_Title": "Anuluj przegląd konfiguracji",
+  "Review_Mode_Cancel_Confirmation": "Czy na pewno chcesz anulować? Żadne zmiany nie zostaną zastosowane.",
+  "Review_Mode_Diff_Toggle": "Obecne: {0} → Konfiguracja: {1}",
+  "Review_Mode_Select_Action": "Wybierz akcję (Zainstaluj lub Odinstaluj) dla zaznaczonych aplikacji za pomocą przycisków powyżej",
+  "Review_Mode_Action_Install": "Zaznaczone aplikacje zostaną zainstalowane po zastosowaniu konfiguracji",
+  "Review_Mode_Action_Remove": "Zaznaczone aplikacje zostaną usunięte po zastosowaniu konfiguracji",
+  "Review_Mode_Skip_Checkbox": "Pomiń przegląd i zastosuj natychmiast",
+  "Review_Mode_Status_AllMatch": "Wszystkie ustawienia już odpowiadają konfiguracji",
+  "Review_Mode_Status_NoItems": "Brak elementów konfiguracji do zastosowania",
+  "Review_Mode_Action_ThemeWallpaper": "Zastosować domyślną tapetę dla tego motywu?",
+  "Review_Mode_Action_CleanTaskbar": "Wyczyścić pasek zadań w ramach tej konfiguracji?",
+  "Review_Mode_Action_CleanStartMenu": "Wyczyścić menu Start w ramach tej konfiguracji?",
+  "Startup_Backup_ConfigBackup": "• Kopia zapasowa konfiguracji: Migawka bieżących ustawień Windows",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Przywracanie systemu: Wyszukaj 'Utwórz punkt przywracania' w ustawieniach Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Kopia zapasowa konfiguracji: Użyj opcji Importuj konfigurację na pasku tytułu i wybierz 'Importuj kopię zapasową konfiguracji'",
+  "Help_LearnMore_WindowsApps": "Dowiedz się więcej o aplikacjach Windows",
+  "Help_LearnMore_ExternalApps": "Dowiedz się więcej o aplikacjach zewnętrznych",
+  "WIMUtil_Tooltip_DownloadWindows10": "Pobierz ISO Windows 10",
+  "WIMUtil_Tooltip_DownloadWindows11": "Pobierz ISO Windows 11",
+  "WIMUtil_Tooltip_Schneegans": "Otwórz generator XML Schneegans",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Domyślnie: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Czy na pewno chcesz usunąć plik obrazu WIM? Tej operacji nie można cofnąć.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Czy na pewno chcesz usunąć plik obrazu ESD? Tej operacji nie można cofnąć.",
+  "WIMUtil_Msg_DeleteWimSuccess": "Plik WIM został pomyślnie usunięty.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "Plik ESD został pomyślnie usunięty.",
+  "WIMUtil_Msg_DeleteFailed": "Nie udało się usunąć pliku obrazu.",
+  "WIMUtil_Msg_DeleteError": "Błąd podczas usuwania pliku obrazu: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Konwertowanie {0} na {1}...",
+  "WIMUtil_Status_CreatingIso": "Tworzenie ISO",
+  "WIMUtil_Button_OpenFolder": "Otwórz folder",
+  "Loading_CheckingSystemProtection": "Sprawdzanie ochrony systemu..."
 }
