--- a/src/Winhance.UI/Features/Common/Localization/pt-BR.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt-BR.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Alternar Tema do Winhance",
   "Tooltip_Donate": "Doar para Apoiar o Desenvolvimento",
   "Tooltip_ReportBug": "Relatar um Bug",
-  "Menu_ReportBug": "Relatar um Bug",
   "Settings_Title": "Configurações do Winhance",
+  "Settings_Description": "Configurar as preferências do aplicativo Winhance",
   "Settings_Menu_Language": "Idioma",
   "Settings_Language_Description": "Selecione o idioma de exibição do aplicativo",
   "Settings_Theme_Title": "Tema do Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Aviso",
   "Dialog_Error": "Erro",
   "Dialog_Confirmation": "Confirmação",
-  "Dialog_Question": "Pergunta",
   "Dialog_ConfirmInstallation": "Confirmar Instalação",
   "Dialog_ConfirmRemoval": "Confirmar Remoção",
   "Dialog_ConfirmOperation": "Confirmar {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Selecione um arquivo de configuração do seu computador",
   "Dialog_ImportConfig_Option_Recommended_Title": "Importar configuração recomendada",
   "Dialog_ImportConfig_Option_Recommended_Description": "Carregar o arquivo de configuração recomendado do Winhance",
-  "Dialog_ImportOptions_Title": "Importar Configuração",
   "Dialog_ImportOptions_Message": "Escolha como você deseja importar uma configuração:",
-  "ImportOption_Own": "Importar meu próprio arquivo de configuração",
-  "ImportOption_Recommended": "Importar configuração recomendada do Winhance",
-  "Dialog_Button_Yes": "Sim",
-  "Dialog_Button_No": "Não",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Cancelar",
-  "Dialog_Button_Continue": "Continuar",
-  "Dialog_Button_Close": "Fechar",
-  "Dialog_Button_Apply": "Aplicar",
-  "Dialog_Button_Refresh": "Atualizar",
-  "Dialog_Button_Help": "Ajuda",
   "Dialog_Unified_Section_SoftwareAndApps": "Software e Aplicativos",
   "Dialog_Unified_Description_SoftwareAndApps": "Seleções para Pacotes do Windows e Software Externo",
   "Dialog_Unified_Section_WindowsApps": "Aplicativos do Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Atualizar",
   "Button_Help": "Ajuda",
   "Button_Delete": "Excluir",
+  "Button_Download": "Baixar",
   "Common_On": "Ligado",
   "Common_Off": "Desligado",
   "Common_Search_Placeholder": "Digite aqui para pesquisar...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Nenhum ISO Selecionado",
   "WIMUtil_Status_WaitForConversion": "🔒 Aguarde a conclusão da conversão",
   "WIMUtil_Status_CompleteStep1": "🔒 Conclua a Etapa 1",
-  "WIMUtil_Status_ReadyToAddXml": "Pronto para adicionar XML",
   "WIMUtil_Status_XmlAdded": "✓ XML Adicionado",
   "WIMUtil_Status_NoXmlAdded": "Nenhum XML Adicionado (Opcional)",
   "WIMUtil_Status_DriversAdded": "✓ Drivers Adicionados",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "O Winhance protegeu seu sistema com backups.",
   "Startup_Backup_RestoreEnabled": "A Restauração do Sistema estava desativada e agora está ativada.",
   "Startup_Backup_Created": "Criado:",
-  "Startup_Backup_RegistryBackups": "• Backups do Registro ({0} hives) em:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Ponto de Restauração do Sistema: 'Ponto de Restauração Inicial do Winhance'",
   "Startup_Backup_ToRestore": "Para restaurar:",
-  "Startup_Backup_RestoreInstructions_System": "• Sistema: Abra 'Criar um ponto de restauração' em Configurações > Restauração do Sistema",
-  "Startup_Backup_RestoreInstructions_Registry": "• Registro: Dê um duplo clique nos arquivos .reg na pasta de backup",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Para restaurar: Pesquise 'ponto de restauração' nas Configurações do Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Para restaurar: Dê um duplo clique nos arquivos .reg na pasta de backup",
   "Startup_Backup_Note": "Nota: A Restauração do Sistema não restaurará aplicativos removidos.",
-  "Startup_Backup_Note_AdminRights": "Os backups do registro são únicos e requerem direitos de administrador.",
   "Startup_Backup_Checkbox_DontCreate": "Não criar pontos de restauração no futuro",
-  "Startup_Backup_Checkbox_DontShow": "Não mostrar isso novamente",
   "Startup_Migration_Title": "Localização do Script Atualizada",
   "Startup_Migration_SubTitle": "Migração do Winhance",
   "Startup_Migration_Intro": "O Winhance atualizou a localização dos scripts de remoção de aplicativos do Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Gere um arquivo autounattend.xml com base nas suas seleções atuais do Winhance para personalizar o Windows durante a instalação.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Mais opções de geração em breve",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Opções adicionais de personalização XML estarão disponíveis em atualizações futuras.",
-  "Button_OpenWIMUtil": "Abrir WIMUtil",
-  "Button_DoItLater": "Farei Isso Mais Tarde",
   "Dialog_FallbackDownload": "Método de Download Alternativo",
-  "Dialog_Button_Download": "Baixar",
   "WindowsApps_Msg_FallbackDownload": "O pacote '{0}' não pôde ser encontrado via WinGet, provavelmente devido a restrições de mercado geográfico.\n\nO Winhance pode baixar este pacote diretamente dos servidores da Microsoft usando um método alternativo (store.rg-adguard.net).\n\n• Os arquivos do pacote vêm diretamente do CDN oficial da Microsoft\n• Este método é completamente legal e seguro\n• Ele contorna apenas as restrições regionais\n\nDeseja prosseguir com o método de download alternativo?",
   "WindowsApps_Checkbox_DontAskAgain": "Não me pergunte novamente para futuras instalações",
   "Progress_RemovingOldFile": "Removendo arquivo de imagem antigo...",
-  "Progress_WarningCouldNotDeleteFile": "Aviso: Não foi possível excluir o arquivo antigo",
   "Progress_ConversionCompleted": "Conversão concluída com sucesso",
   "Progress_ConversionFailed": "Falha na conversão",
   "Progress_PreparingInstallAdk": "Preparando para instalar o Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Verificando o status da Restauração do Sistema...",
   "Progress_EnablingRestore": "Ativando a Restauração do Sistema...",
   "Progress_CreatingRestorePoint": "Criando ponto de restauração do sistema...",
-  "Progress_BackingUpRegistry": "Fazendo backup da colmeia do registro {0}...",
   "Progress_CheckingInstallStatus": "Verificando o status da instalação...",
   "Progress_WaitForInitialLoad": "Aguarde a conclusão do carregamento inicial",
   "Progress_RefreshingStatus": "Atualizando o status da instalação...",
   "Progress_SelectionsCleared": "Todas as seleções foram limpas",
   "Progress_NoInternetConnection": "Nenhuma conexão com a internet disponível. A instalação não pode prosseguir.",
-  "Progress_WingetInstalledSuccess": "WinGet instalado com sucesso",
   "Progress_ConvertingFormat": "Convertendo {0} para {1}...",
   "Progress_ConvertingEdition": "Convertendo edição {0} de {1}...",
   "Progress_CopyingFile": "Copiando: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Falha ao instalar o WinGet. Não é possível instalar {0}.",
   "Progress_WinGet_StartingInstallation": "Iniciando a instalação de {0}...",
   "Progress_WinGet_InstalledSuccess": "Instalado com sucesso {0}",
-  "Progress_WinGet_RepairingInstallation": "Reparando a instalação do WinGet...",
-  "Progress_WinGet_FailedRepair": "Falha ao reparar o WinGet. Não é possível instalar {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Falha ao localizar o WinGet após o reparo. Não é possível instalar {0}.",
-  "Progress_WinGet_RetryingInstallation": "Tentando novamente a instalação de {0}...",
   "Progress_WinGet_InstallationCancelled": "A instalação de {0} foi cancelada",
   "Progress_WinGet_NetworkError": "Erro de rede ao instalar {0}. Verifique sua conexão com a internet e tente novamente.",
   "Progress_WinGet_InstallationError": "Erro ao instalar {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Verificando a instalação do WinGet...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "A verificação da instalação do WinGet falhou",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet instalado, mas não acessível. Reinicie o aplicativo.",
-  "Progress_WinGet_InitializingSources": "Inicializando fontes do WinGet...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet instalado com sucesso",
   "Progress_WinGet_InstallError": "Erro ao instalar o WinGet: {0}",
   "Progress_Store_FetchingLinks": "Buscando links de download para {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Falha ao instalar {0}",
   "Progress_Store_DownloadCancelled": "O download de {0} foi cancelado",
   "Progress_Store_InstallError": "Erro ao instalar {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Solicitando informações do pacote para {0}...",
-  "Progress_Store_DownloadingMainPackage": "Baixando o pacote principal de {0}...",
   "Progress_Store_DownloadingDependencies": "Baixando {0} pacote(s) de dependência necessário(s)...",
   "Progress_Store_InstallingWithDependencies": "Instalando {0} com {1} dependências...",
   "Progress_Store_Installing": "Instalando {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Falha na instalação: {0}",
   "Progress_WinGet_CheckingUpdates": "Verificando atualizações do WinGet...",
   "Progress_WinGet_Updating": "Atualizando o WinGet...",
-  "Progress_WinGet_CheckingVersion": "Verificando versão do WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Atualização do WinGet iniciada via Store, verificando conclusão...",
-  "Progress_WinGet_WaitingForUpdate": "Aguardando a conclusão da atualização do WinGet...",
-  "Progress_WinGet_Reinstalling": "Reinstalando o WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet atualizado com sucesso",
-  "Progress_WinGet_UpdateCompleted": "Atualização do WinGet concluída",
   "Progress_WinGet_AlreadyUpToDate": "WinGet já está atualizado",
-  "Progress_WinGet_InstalledLatest": "WinGet já está instalado na versão mais recente",
   "Progress_WinGet_Ready": "WinGet está pronto",
   "Progress_Uninstalling": "Desinstalando {0}...",
   "Progress_Finalizing": "Finalizando...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "O WinGet não está disponível neste sistema.",
   "App_Tagline": "Melhore sua experiência no Windows",
   "Loading_InitializingSettings": "Inicializando configurações...",
-  "Loading_CreatingRestorePoint": "Criando ponto de restauração do sistema. Por favor aguarde, isso pode demorar um pouco...",
   "Loading_MigratingScripts": "Migrando scripts...",
   "Loading_CheckingScripts": "Verificando atualizações de scripts...",
-  "Loading_PreparingApp": "Preparando o aplicativo..."
+  "Loading_PreparingApp": "Preparando o aplicativo...",
+  "Tooltip_Documentation": "Documentação",
+  "Tooltip_ToggleNavigation": "Alternar navega\u00E7\u00E3o",
+  "Dialog_ImportConfig_Option_Backup_Title": "Importar configuração de backup",
+  "Dialog_ImportConfig_Option_Backup_Description": "Restaurar a configuração de backup do seu sistema",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Restaurar padrões do Windows",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Redefinir todas as configurações para os padrões de fábrica do Windows",
+  "Loading_CreatingConfigBackup": "Criando backup da configuração...",
+  "Config_Backup_NotFound": "Nenhum arquivo de configuração de backup foi encontrado. Um backup é criado automaticamente na primeira execução do aplicativo.",
+  "Config_Backup_NotFound_Title": "Backup Não Encontrado",
+  "Config_Backup_Select_Title": "Selecionar Arquivo de Backup",
+  "Review_Mode_Title": "Modo de Revisão de Configuração",
+  "Review_Mode_Description": "Revise as alterações em todas as seções e depois clique em Aplicar Configuração quando estiver pronto.",
+  "Review_Mode_Status_Format": "{0} de {1} revisadas ({2} serão aplicadas)",
+  "Review_Mode_Apply_Button": "Aplicar Configuração",
+  "Review_Mode_Cancel_Button": "Cancelar",
+  "Review_Mode_Cancel_Confirmation_Title": "Cancelar Revisão de Configuração",
+  "Review_Mode_Cancel_Confirmation": "Você tem certeza que deseja cancelar? Nenhuma alteração será aplicada.",
+  "Review_Mode_Diff_Toggle": "Atual: {0} → Config: {1}",
+  "Review_Mode_Select_Action": "Selecione uma ação (Instalar ou Desinstalar) para os aplicativos marcados usando os botões acima",
+  "Review_Mode_Action_Install": "Os aplicativos marcados serão instalados quando você aplicar a configuração",
+  "Review_Mode_Action_Remove": "Os aplicativos marcados serão removidos quando você aplicar a configuração",
+  "Review_Mode_Skip_Checkbox": "Pular revisão e aplicar imediatamente",
+  "Review_Mode_Status_AllMatch": "Todas as configurações já correspondem à configuração",
+  "Review_Mode_Status_NoItems": "Sem itens de configuração para aplicar",
+  "Review_Mode_Action_ThemeWallpaper": "Aplicar o papel de parede padrão para este tema?",
+  "Review_Mode_Action_CleanTaskbar": "Limpar a barra de tarefas como parte desta configuração?",
+  "Review_Mode_Action_CleanStartMenu": "Limpar o menu Iniciar como parte desta configuração?",
+  "Startup_Backup_ConfigBackup": "• Backup da Configuração: Uma cópia das suas configurações atuais do Windows",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Restauração do Sistema: Pesquise 'Criar um ponto de restauração' nas Configurações do Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Backup da Configuração: Use Importar Configuração na barra de título e selecione 'Importar Configuração de Backup'",
+  "Help_LearnMore_WindowsApps": "Saiba mais sobre Aplicativos do Windows",
+  "Help_LearnMore_ExternalApps": "Saiba mais sobre Aplicativos Externos",
+  "WIMUtil_Tooltip_DownloadWindows10": "Baixar ISO do Windows 10",
+  "WIMUtil_Tooltip_DownloadWindows11": "Baixar ISO do Windows 11",
+  "WIMUtil_Tooltip_Schneegans": "Abrir Gerador XML Schneegans",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Padrão: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Você tem certeza que deseja excluir o arquivo de imagem WIM? Esta ação não pode ser desfeita.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Você tem certeza que deseja excluir o arquivo de imagem ESD? Esta ação não pode ser desfeita.",
+  "WIMUtil_Msg_DeleteWimSuccess": "Arquivo WIM excluído com sucesso.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "Arquivo ESD excluído com sucesso.",
+  "WIMUtil_Msg_DeleteFailed": "Falha ao excluir o arquivo de imagem.",
+  "WIMUtil_Msg_DeleteError": "Erro ao excluir o arquivo de imagem: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Convertendo {0} para {1}...",
+  "WIMUtil_Status_CreatingIso": "Criando ISO",
+  "WIMUtil_Button_OpenFolder": "Abrir Pasta",
+  "Loading_CheckingSystemProtection": "Verificando proteção do sistema..."
 }
