--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Alternar Tema do Winhance",
   "Tooltip_Donate": "Doar para Apoiar o Desenvolvimento",
   "Tooltip_ReportBug": "Reportar um Erro",
-  "Menu_ReportBug": "Reportar um Erro",
   "Settings_Title": "Definições do Winhance",
+  "Settings_Description": "Configurar as preferências da aplicação Winhance",
   "Settings_Menu_Language": "Idioma",
   "Settings_Language_Description": "Selecione o idioma de exibição da aplicação",
   "Settings_Theme_Title": "Tema do Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Aviso",
   "Dialog_Error": "Erro",
   "Dialog_Confirmation": "Confirmação",
-  "Dialog_Question": "Pergunta",
   "Dialog_ConfirmInstallation": "Confirmar Instalação",
   "Dialog_ConfirmRemoval": "Confirmar Remoção",
   "Dialog_ConfirmOperation": "Confirmar {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Selecione um ficheiro de configuração do seu computador",
   "Dialog_ImportConfig_Option_Recommended_Title": "Importar configuração recomendada",
   "Dialog_ImportConfig_Option_Recommended_Description": "Carregar o ficheiro de configuração recomendado do Winhance",
-  "Dialog_ImportOptions_Title": "Importar Configuração",
   "Dialog_ImportOptions_Message": "Escolha como pretende importar uma configuração:",
-  "ImportOption_Own": "Importar o meu próprio ficheiro de configuração",
-  "ImportOption_Recommended": "Importar configuração recomendada do Winhance",
-  "Dialog_Button_Yes": "Sim",
-  "Dialog_Button_No": "Não",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Cancelar",
-  "Dialog_Button_Continue": "Continuar",
-  "Dialog_Button_Close": "Fechar",
-  "Dialog_Button_Apply": "Aplicar",
-  "Dialog_Button_Refresh": "Atualizar",
-  "Dialog_Button_Help": "Ajuda",
   "Dialog_Unified_Section_SoftwareAndApps": "Software e Aplicações",
   "Dialog_Unified_Description_SoftwareAndApps": "Seleções para Pacotes do Windows e Software Externo",
   "Dialog_Unified_Section_WindowsApps": "Aplicações do Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Atualizar",
   "Button_Help": "Ajuda",
   "Button_Delete": "Eliminar",
+  "Button_Download": "Descarregar",
   "Common_On": "Ligado",
   "Common_Off": "Desligado",
   "Common_Search_Placeholder": "Escreva aqui para procurar...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Nenhum ISO Selecionado",
   "WIMUtil_Status_WaitForConversion": "⚒ Aguarde pela conclusão da conversão",
   "WIMUtil_Status_CompleteStep1": "⚒ Conclua o Passo 1",
-  "WIMUtil_Status_ReadyToAddXml": "Pronto para adicionar XML",
   "WIMUtil_Status_XmlAdded": "✓ XML Adicionado",
   "WIMUtil_Status_NoXmlAdded": "Nenhum XML Adicionado (Opcional)",
   "WIMUtil_Status_DriversAdded": "✓ Controladores Adicionados",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "O Winhance protegeu o seu sistema com cópias de segurança.",
   "Startup_Backup_RestoreEnabled": "O Restauro do Sistema estava desativado e agora está ativado.",
   "Startup_Backup_Created": "Criado:",
-  "Startup_Backup_RegistryBackups": "• Cópias de segurança do Registo ({0} hives) em:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Ponto de Restauro do Sistema: 'Ponto de Restauro Inicial do Winhance'",
   "Startup_Backup_ToRestore": "Para restaurar:",
-  "Startup_Backup_RestoreInstructions_System": "• Sistema: Abra 'Criar um ponto de restauro' nas Definições > Restauro do Sistema",
-  "Startup_Backup_RestoreInstructions_Registry": "• Registo: Duplo clique nos ficheiros .reg na pasta de cópia de segurança",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Para restaurar: Pesquise 'ponto de restauro' nas Definições do Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Para restaurar: Duplo clique nos ficheiros .reg na pasta de cópia de segurança",
   "Startup_Backup_Note": "Nota: O Restauro do Sistema não restaurará aplicações removidas.",
-  "Startup_Backup_Note_AdminRights": "As cópias de segurança do Registo são únicas e requerem direitos de administrador.",
   "Startup_Backup_Checkbox_DontCreate": "Não criar pontos de restauro no futuro",
-  "Startup_Backup_Checkbox_DontShow": "Não mostrar isto novamente",
   "Startup_Migration_Title": "Localização do Script Atualizada",
   "Startup_Migration_SubTitle": "Migração do Winhance",
   "Startup_Migration_Intro": "O Winhance atualizou a localização dos scripts de remoção de Aplicações do Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Gere um ficheiro autounattend.xml com base nas suas seleções atuais do Winhance para personalizar o Windows durante a instalação.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Mais opções de geração em breve",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Opções adicionais de personalização XML estarão disponíveis em atualizações futuras.",
-  "Button_OpenWIMUtil": "Abrir WIMUtil",
-  "Button_DoItLater": "Farei Mais Tarde",
   "Dialog_FallbackDownload": "Método de Transferência Alternativo",
-  "Dialog_Button_Download": "Descarregar",
   "WindowsApps_Msg_FallbackDownload": "O pacote '{0}' não pôde ser encontrado via WinGet, provavelmente devido a restrições de mercado geográfico.\n\nO Winhance pode descarregar este pacote diretamente dos servidores da Microsoft usando um método alternativo (store.rg-adguard.net).\n\n• Os ficheiros do pacote vêm diretamente do CDN oficial da Microsoft\n• Este método é completamente legal e seguro\n• Apenas contorna as restrições regionais\n\nGostaria de prosseguir com o método de transferência alternativo?",
   "WindowsApps_Checkbox_DontAskAgain": "Não me perguntar novamente para futuras instalações",
   "Progress_RemovingOldFile": "A remover ficheiro de imagem antigo...",
-  "Progress_WarningCouldNotDeleteFile": "Aviso: Não foi possível eliminar o ficheiro antigo",
   "Progress_ConversionCompleted": "Conversão concluída com sucesso",
   "Progress_ConversionFailed": "A conversão falhou",
   "Progress_PreparingInstallAdk": "A preparar a instalação do ADK do Windows...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "A verificar o estado do Restauro do Sistema...",
   "Progress_EnablingRestore": "A ativar o Restauro do Sistema...",
   "Progress_CreatingRestorePoint": "A criar ponto de restauro do sistema...",
-  "Progress_BackingUpRegistry": "A fazer cópia de segurança do hive do registo {0}...",
   "Progress_CheckingInstallStatus": "A verificar o estado da instalação...",
   "Progress_WaitForInitialLoad": "Por favor, aguarde pela conclusão do carregamento inicial",
   "Progress_RefreshingStatus": "A atualizar o estado da instalação...",
   "Progress_SelectionsCleared": "Todas as seleções foram limpas",
   "Progress_NoInternetConnection": "Não há ligação à internet disponível. A instalação não pode prosseguir.",
-  "Progress_WingetInstalledSuccess": "WinGet instalado com sucesso",
   "Progress_ConvertingFormat": "A converter {0} para {1}...",
   "Progress_ConvertingEdition": "A converter a edição {0} de {1}...",
   "Progress_CopyingFile": "A copiar: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Falha ao instalar o WinGet. Não é possível instalar {0}.",
   "Progress_WinGet_StartingInstallation": "A iniciar a instalação de {0}...",
   "Progress_WinGet_InstalledSuccess": "Instalado com sucesso {0}",
-  "Progress_WinGet_RepairingInstallation": "A reparar a instalação do WinGet...",
-  "Progress_WinGet_FailedRepair": "Falha ao reparar o WinGet. Não é possível instalar {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Falha ao localizar o WinGet após a reparação. Não é possível instalar {0}.",
-  "Progress_WinGet_RetryingInstallation": "A tentar novamente a instalação de {0}...",
   "Progress_WinGet_InstallationCancelled": "A instalação de {0} foi cancelada",
   "Progress_WinGet_NetworkError": "Erro de rede ao instalar {0}. Por favor, verifique a sua ligação à internet e tente novamente.",
   "Progress_WinGet_InstallationError": "Erro ao instalar {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "A verificar a instalação do WinGet...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "A verificação da instalação do WinGet falhou",
-  "Progress_WinGet_InstalledNotAccessible": "O WinGet está instalado mas não está acessível. Por favor, reinicie a aplicação.",
-  "Progress_WinGet_InitializingSources": "A inicializar as fontes do WinGet...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet instalado com sucesso",
   "Progress_WinGet_InstallError": "Erro ao instalar o WinGet: {0}",
   "Progress_Store_FetchingLinks": "A obter links de transferência para {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Falha ao instalar {0}",
   "Progress_Store_DownloadCancelled": "A transferência de {0} foi cancelada",
   "Progress_Store_InstallError": "Erro ao instalar {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "A solicitar informação do pacote para {0}...",
-  "Progress_Store_DownloadingMainPackage": "A descarregar o pacote principal de {0}...",
   "Progress_Store_DownloadingDependencies": "A descarregar o(s) pacote(s) de dependência necessário(s) para {0}...",
   "Progress_Store_InstallingWithDependencies": "A instalar {0} com {1} dependências...",
   "Progress_Store_Installing": "A instalar {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "A instalação falhou: {0}",
   "Progress_WinGet_CheckingUpdates": "A verificar atualizações do WinGet...",
   "Progress_WinGet_Updating": "A atualizar o WinGet...",
-  "Progress_WinGet_CheckingVersion": "A verificar a versão do WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Atualização do WinGet iniciada via Store, a verificar conclusão...",
-  "Progress_WinGet_WaitingForUpdate": "A aguardar a conclusão da atualização do WinGet...",
-  "Progress_WinGet_Reinstalling": "A reinstalar o WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet atualizado com sucesso",
-  "Progress_WinGet_UpdateCompleted": "Atualização do WinGet concluída",
   "Progress_WinGet_AlreadyUpToDate": "O WinGet já está atualizado",
-  "Progress_WinGet_InstalledLatest": "O WinGet já está instalado na versão mais recente",
   "Progress_WinGet_Ready": "O WinGet está pronto",
   "Progress_Uninstalling": "A desinstalar {0}...",
   "Progress_Finalizing": "A finalizar...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "O WinGet não está disponível neste sistema.",
   "App_Tagline": "Melhore a sua experiência no Windows",
   "Loading_InitializingSettings": "A inicializar definições...",
-  "Loading_CreatingRestorePoint": "A criar ponto de restauro do sistema. Por favor aguarde, isto pode demorar um pouco...",
   "Loading_MigratingScripts": "A migrar scripts...",
   "Loading_CheckingScripts": "A verificar atualizações de scripts...",
-  "Loading_PreparingApp": "A preparar a aplicação..."
+  "Loading_PreparingApp": "A preparar a aplicação...",
+  "Tooltip_Documentation": "Documentação",
+  "Tooltip_ToggleNavigation": "Alternar navega\u00E7\u00E3o",
+  "Dialog_ImportConfig_Option_Backup_Title": "Importar configuração de cópia de segurança",
+  "Dialog_ImportConfig_Option_Backup_Description": "Restaurar a configuração de cópia de segurança do sistema",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Restaurar predefinições do Windows",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Repor todas as definições para os valores de fábrica do Windows",
+  "Loading_CreatingConfigBackup": "A criar cópia de segurança da configuração...",
+  "Config_Backup_NotFound": "Não foram encontrados ficheiros de configuração de cópia de segurança. Uma cópia de segurança é criada automaticamente no primeiro arranque da aplicação.",
+  "Config_Backup_NotFound_Title": "Cópia de Segurança Não Encontrada",
+  "Config_Backup_Select_Title": "Selecionar Ficheiro de Cópia de Segurança",
+  "Review_Mode_Title": "Modo de Revisão de Configuração",
+  "Review_Mode_Description": "Reveja as alterações em todas as secções e depois clique em Aplicar Configuração quando estiver pronto.",
+  "Review_Mode_Status_Format": "{0} de {1} revistas ({2} serão aplicadas)",
+  "Review_Mode_Apply_Button": "Aplicar Configuração",
+  "Review_Mode_Cancel_Button": "Cancelar",
+  "Review_Mode_Cancel_Confirmation_Title": "Cancelar Revisão de Configuração",
+  "Review_Mode_Cancel_Confirmation": "Tem a certeza de que pretende cancelar? Nenhuma alteração será aplicada.",
+  "Review_Mode_Diff_Toggle": "Atual: {0} → Config: {1}",
+  "Review_Mode_Select_Action": "Selecione uma ação (Instalar ou Desinstalar) para as aplicações selecionadas usando os botões acima",
+  "Review_Mode_Action_Install": "As aplicações selecionadas serão instaladas quando aplicar a configuração",
+  "Review_Mode_Action_Remove": "As aplicações selecionadas serão removidas quando aplicar a configuração",
+  "Review_Mode_Skip_Checkbox": "Ignorar revisão e aplicar imediatamente",
+  "Review_Mode_Status_AllMatch": "Todas as definições já correspondem à configuração",
+  "Review_Mode_Status_NoItems": "Sem itens de configuração para aplicar",
+  "Review_Mode_Action_ThemeWallpaper": "Aplicar o papel de parede predefinido para este tema?",
+  "Review_Mode_Action_CleanTaskbar": "Limpar a barra de tarefas como parte desta configuração?",
+  "Review_Mode_Action_CleanStartMenu": "Limpar o menu Iniciar como parte desta configuração?",
+  "Startup_Backup_ConfigBackup": "• Cópia de Segurança da Configuração: Um instantâneo das suas definições atuais do Windows",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Restauro do Sistema: Pesquise 'Criar um ponto de restauro' nas Definições do Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Cópia de Segurança: Utilize Importar Configuração na barra de título e selecione 'Importar Configuração de Cópia de Segurança'",
+  "Help_LearnMore_WindowsApps": "Saber mais sobre Aplicações do Windows",
+  "Help_LearnMore_ExternalApps": "Saber mais sobre Aplicações Externas",
+  "WIMUtil_Tooltip_DownloadWindows10": "Transferir ISO do Windows 10",
+  "WIMUtil_Tooltip_DownloadWindows11": "Transferir ISO do Windows 11",
+  "WIMUtil_Tooltip_Schneegans": "Abrir Gerador XML Schneegans",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Predefinição: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Tem a certeza de que pretende eliminar o ficheiro de imagem WIM? Esta ação não pode ser revertida.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Tem a certeza de que pretende eliminar o ficheiro de imagem ESD? Esta ação não pode ser revertida.",
+  "WIMUtil_Msg_DeleteWimSuccess": "Ficheiro WIM eliminado com sucesso.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "Ficheiro ESD eliminado com sucesso.",
+  "WIMUtil_Msg_DeleteFailed": "Falha ao eliminar o ficheiro de imagem.",
+  "WIMUtil_Msg_DeleteError": "Erro ao eliminar o ficheiro de imagem: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "A converter {0} para {1}...",
+  "WIMUtil_Status_CreatingIso": "A criar ISO",
+  "WIMUtil_Button_OpenFolder": "Abrir Pasta",
+  "Loading_CheckingSystemProtection": "A verificar proteção do sistema..."
 }
