--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Växla Winhance-tema",
   "Tooltip_Donate": "Donera för att stödja utvecklingen",
   "Tooltip_ReportBug": "Rapportera ett fel",
-  "Menu_ReportBug": "Rapportera ett fel",
   "Settings_Title": "Winhance-inställningar",
+  "Settings_Description": "Konfigurera Winhance-programinställningar",
   "Settings_Menu_Language": "Språk",
   "Settings_Language_Description": "Välj programmets visningsspråk",
   "Settings_Theme_Title": "Winhance-tema",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Varning",
   "Dialog_Error": "Fel",
   "Dialog_Confirmation": "Bekräftelse",
-  "Dialog_Question": "Fråga",
   "Dialog_ConfirmInstallation": "Bekräfta installation",
   "Dialog_ConfirmRemoval": "Bekräfta borttagning",
   "Dialog_ConfirmOperation": "Bekräfta {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Välj en konfigurationsfil från din dator",
   "Dialog_ImportConfig_Option_Recommended_Title": "Importera rekommenderad konfiguration",
   "Dialog_ImportConfig_Option_Recommended_Description": "Läs in Winhances rekommenderade konfigurationsfil",
-  "Dialog_ImportOptions_Title": "Importera konfiguration",
   "Dialog_ImportOptions_Message": "Välj hur du vill importera en konfiguration:",
-  "ImportOption_Own": "Importera min egen konfigurationsfil",
-  "ImportOption_Recommended": "Importera Winhances rekommenderade konfiguration",
-  "Dialog_Button_Yes": "Ja",
-  "Dialog_Button_No": "Nej",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Avbryt",
-  "Dialog_Button_Continue": "Fortsätt",
-  "Dialog_Button_Close": "Stäng",
-  "Dialog_Button_Apply": "Verkställ",
-  "Dialog_Button_Refresh": "Uppdatera",
-  "Dialog_Button_Help": "Hjälp",
   "Dialog_Unified_Section_SoftwareAndApps": "Programvara och appar",
   "Dialog_Unified_Description_SoftwareAndApps": "Val för Windows-paket och extern programvara",
   "Dialog_Unified_Section_WindowsApps": "Windows-appar",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Uppdatera",
   "Button_Help": "Hjälp",
   "Button_Delete": "Ta bort",
+  "Button_Download": "Ladda ner",
   "Common_On": "På",
   "Common_Off": "Av",
   "Common_Search_Placeholder": "Skriv här för att söka...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Ingen ISO vald",
   "WIMUtil_Status_WaitForConversion": "🔒 Vänta tills konverteringen är klar",
   "WIMUtil_Status_CompleteStep1": "🔒 Slutför steg 1",
-  "WIMUtil_Status_ReadyToAddXml": "Redo att lägga till XML",
   "WIMUtil_Status_XmlAdded": "✓ XML tillagd",
   "WIMUtil_Status_NoXmlAdded": "Ingen XML tillagd (valfritt)",
   "WIMUtil_Status_DriversAdded": "✓ Drivrutiner tillagda",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance har skyddat ditt system med säkerhetskopior.",
   "Startup_Backup_RestoreEnabled": "Systemåterställning var inaktiverad och är nu aktiverad.",
   "Startup_Backup_Created": "Skapad:",
-  "Startup_Backup_RegistryBackups": "• Register säkerhetskopior ({0} hives) på:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Systemåterställningspunkt: 'Winhance initial återställningspunkt'",
   "Startup_Backup_ToRestore": "För att återställa:",
-  "Startup_Backup_RestoreInstructions_System": "• System: Öppna 'Skapa en återställningspunkt' i Inställningar > Systemåterställning",
-  "Startup_Backup_RestoreInstructions_Registry": "• Register: Dubbelklicka på .reg-filer i säkerhetskopieringsmappen",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "För att återställa: Sök efter 'återställningspunkt' i Windows-inställningar",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "För att återställa: Dubbelklicka på .reg-filer i säkerhetskopieringsmappen",
   "Startup_Backup_Note": "Obs: Systemåterställning återställer inte borttagna appar.",
-  "Startup_Backup_Note_AdminRights": "Registersäkerhetskopior är engångsföreteelser och kräver administratörsbehörighet.",
   "Startup_Backup_Checkbox_DontCreate": "Skapa inte återställningspunkter i framtiden",
-  "Startup_Backup_Checkbox_DontShow": "Visa inte detta igen",
   "Startup_Migration_Title": "Skriptplats uppdaterad",
   "Startup_Migration_SubTitle": "Winhance-migrering",
   "Startup_Migration_Intro": "Winhance har uppdaterat platsen för skript för borttagning av Windows-appar.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Generera en autounattend.xml-fil baserad på dina aktuella Winhance-val för att anpassa Windows under installationen.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Fler genereringsalternativ kommer snart",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Ytterligare XML-anpassningsalternativ kommer att finnas tillgängliga i framtida uppdateringar.",
-  "Button_OpenWIMUtil": "Öppna WIMUtil",
-  "Button_DoItLater": "Jag gör det senare",
   "Dialog_FallbackDownload": "Alternativ nedladdningsmetod",
-  "Dialog_Button_Download": "Ladda ner",
   "WindowsApps_Msg_FallbackDownload": "Paketet '{0}' kunde inte hittas via WinGet, troligen på grund av geografiska marknadsbegränsningar.\n\nWinhance kan ladda ner detta paket direkt från Microsofts servrar med en alternativ metod (store.rg-adguard.net).\n\n• Paketfilerna kommer direkt från Microsofts officiella CDN\n• Denna metod är helt laglig och säker\n• Den kringgår endast regionala begränsningar\n\nVill du fortsätta med den alternativa nedladdningsmetoden?",
   "WindowsApps_Checkbox_DontAskAgain": "Fråga mig inte igen för framtida installationer",
   "Progress_RemovingOldFile": "Tar bort gammal bildfil...",
-  "Progress_WarningCouldNotDeleteFile": "Varning: Kunde inte ta bort gammal fil",
   "Progress_ConversionCompleted": "Konvertering slutförd framgångsrikt",
   "Progress_ConversionFailed": "Konvertering misslyckades",
   "Progress_PreparingInstallAdk": "Förbereder installation av Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Kontrollerar status för systemåterställning...",
   "Progress_EnablingRestore": "Aktiverar systemåterställning...",
   "Progress_CreatingRestorePoint": "Skapar systemåterställningspunkt...",
-  "Progress_BackingUpRegistry": "Säkerhetskopierar {0} registernyckel...",
   "Progress_CheckingInstallStatus": "Kontrollerar installationsstatus...",
   "Progress_WaitForInitialLoad": "Vänta tills den initiala laddningen är klar",
   "Progress_RefreshingStatus": "Uppdaterar installationsstatus...",
   "Progress_SelectionsCleared": "Alla val rensade",
   "Progress_NoInternetConnection": "Ingen internetanslutning tillgänglig. Installationen kan inte fortsätta.",
-  "Progress_WingetInstalledSuccess": "WinGet installerades framgångsrikt",
   "Progress_ConvertingFormat": "Konverterar {0} till {1}...",
   "Progress_ConvertingEdition": "Konverterar utgåva {0} av {1}...",
   "Progress_CopyingFile": "Kopierar: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Misslyckades med att installera WinGet. Kan inte installera {0}.",
   "Progress_WinGet_StartingInstallation": "Startar installation av {0}...",
   "Progress_WinGet_InstalledSuccess": "Installerad {0}",
-  "Progress_WinGet_RepairingInstallation": "Reparerar WinGet-installation...",
-  "Progress_WinGet_FailedRepair": "Misslyckades med att reparera WinGet. Kan inte installera {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Misslyckades med att hitta WinGet efter reparation. Kan inte installera {0}.",
-  "Progress_WinGet_RetryingInstallation": "Försöker installera {0} igen...",
   "Progress_WinGet_InstallationCancelled": "Installation av {0} avbröts",
   "Progress_WinGet_NetworkError": "Nätverksfel vid installation av {0}. Kontrollera din internetanslutning och försök igen.",
   "Progress_WinGet_InstallationError": "Fel vid installation av {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Verifierar WinGet-installation...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Verifiering av WinGet-installation misslyckades",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet installerat men inte tillgängligt. Starta om programmet.",
-  "Progress_WinGet_InitializingSources": "Initierar WinGet-källor...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet installerades framgångsrikt",
   "Progress_WinGet_InstallError": "Fel vid installation av WinGet: {0}",
   "Progress_Store_FetchingLinks": "Hämtar nedladdningslänkar för {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Misslyckades med att installera {0}",
   "Progress_Store_DownloadCancelled": "Nedladdning av {0} avbröts",
   "Progress_Store_InstallError": "Fel vid installation av {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Begär paketinformation för {0}...",
-  "Progress_Store_DownloadingMainPackage": "Laddar ner huvudpaketet {0}...",
   "Progress_Store_DownloadingDependencies": "Laddar ner {0} nödvändiga beroendepaket...",
   "Progress_Store_InstallingWithDependencies": "Installerar {0} med {1} beroenden...",
   "Progress_Store_Installing": "Installerar {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Installationen misslyckades: {0}",
   "Progress_WinGet_CheckingUpdates": "Söker efter WinGet-uppdateringar...",
   "Progress_WinGet_Updating": "Uppdaterar WinGet...",
-  "Progress_WinGet_CheckingVersion": "Kontrollerar WinGet-version...",
-  "Progress_WinGet_UpdateInitiated": "WinGet-uppdatering initierad via Store, verifierar slutförande...",
-  "Progress_WinGet_WaitingForUpdate": "Väntar på att WinGet-uppdateringen ska slutföras...",
-  "Progress_WinGet_Reinstalling": "Ominstallerar WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet har uppdaterats",
-  "Progress_WinGet_UpdateCompleted": "WinGet-uppdatering slutförd",
   "Progress_WinGet_AlreadyUpToDate": "WinGet är redan uppdaterat",
-  "Progress_WinGet_InstalledLatest": "WinGet är redan installerat i den senaste versionen",
   "Progress_WinGet_Ready": "WinGet är redo",
   "Progress_Uninstalling": "Avinstallerar {0}...",
   "Progress_Finalizing": "Slutför...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet är inte tillgängligt på detta system.",
   "App_Tagline": "Förbättra din Windows-upplevelse",
   "Loading_InitializingSettings": "Initierar inställningar...",
-  "Loading_CreatingRestorePoint": "Skapar systemåterställningspunkt. Vänta, detta kan ta en stund...",
   "Loading_MigratingScripts": "Migrerar skript...",
   "Loading_CheckingScripts": "Söker efter skriptuppdateringar...",
-  "Loading_PreparingApp": "Förbereder programmet..."
+  "Loading_PreparingApp": "Förbereder programmet...",
+  "Tooltip_Documentation": "Dokumentation",
+  "Tooltip_ToggleNavigation": "V\u00E4xla navigering",
+  "Dialog_ImportConfig_Option_Backup_Title": "Importera säkerhetskopia",
+  "Dialog_ImportConfig_Option_Backup_Description": "Återställ din systemsäkerhetskopia",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Återställ Windows-standardinställningar",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Återställ alla inställningar till Windows fabriksinställningar",
+  "Loading_CreatingConfigBackup": "Skapar konfigurationssäkerhetskopia...",
+  "Config_Backup_NotFound": "Inga säkerhetskopior hittades. En säkerhetskopia skapas automatiskt vid första programstarten.",
+  "Config_Backup_NotFound_Title": "Ingen säkerhetskopia hittades",
+  "Config_Backup_Select_Title": "Välj säkerhetskopia",
+  "Review_Mode_Title": "Granskningsläge för konfiguration",
+  "Review_Mode_Description": "Granska ändringarna i alla sektioner och klicka sedan på Tillämpa konfiguration när du är klar.",
+  "Review_Mode_Status_Format": "{0} av {1} granskade ({2} kommer att tillämpas)",
+  "Review_Mode_Apply_Button": "Tillämpa konfiguration",
+  "Review_Mode_Cancel_Button": "Avbryt",
+  "Review_Mode_Cancel_Confirmation_Title": "Avbryt konfigurationsgranskning",
+  "Review_Mode_Cancel_Confirmation": "Är du säker på att du vill avbryta? Inga ändringar kommer att tillämpas.",
+  "Review_Mode_Diff_Toggle": "Nuvarande: {0} → Konfiguration: {1}",
+  "Review_Mode_Select_Action": "Välj en åtgärd (Installera eller Avinstallera) för markerade appar med knapparna ovan",
+  "Review_Mode_Action_Install": "Markerade appar kommer att installeras när du tillämpar konfigurationen",
+  "Review_Mode_Action_Remove": "Markerade appar kommer att tas bort när du tillämpar konfigurationen",
+  "Review_Mode_Skip_Checkbox": "Hoppa över granskning och tillämpa direkt",
+  "Review_Mode_Status_AllMatch": "Alla inställningar matchar redan konfigurationen",
+  "Review_Mode_Status_NoItems": "Inga konfigurationsobjekt att tillämpa",
+  "Review_Mode_Action_ThemeWallpaper": "Tillämpa standardbakgrunden för detta tema?",
+  "Review_Mode_Action_CleanTaskbar": "Rensa aktivitetsfältet som en del av denna konfiguration?",
+  "Review_Mode_Action_CleanStartMenu": "Rensa startmenyn som en del av denna konfiguration?",
+  "Startup_Backup_ConfigBackup": "• Konfigurationssäkerhetskopia: En ögonblicksbild av dina nuvarande Windows-inställningar",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Systemåterställning: Sök efter 'Skapa en återställningspunkt' i Windows-inställningar",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Konfigurationssäkerhetskopia: Använd Importera konfiguration i namnlisten och välj 'Importera säkerhetskopia'",
+  "Help_LearnMore_WindowsApps": "Läs mer om Windows-appar",
+  "Help_LearnMore_ExternalApps": "Läs mer om externa appar",
+  "WIMUtil_Tooltip_DownloadWindows10": "Ladda ner Windows 10 ISO",
+  "WIMUtil_Tooltip_DownloadWindows11": "Ladda ner Windows 11 ISO",
+  "WIMUtil_Tooltip_Schneegans": "Öppna Schneegans XML-generator",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Standard: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Är du säker på att du vill ta bort WIM-avbildningsfilen? Denna åtgärd kan inte ångras.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Är du säker på att du vill ta bort ESD-avbildningsfilen? Denna åtgärd kan inte ångras.",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM-filen har tagits bort.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD-filen har tagits bort.",
+  "WIMUtil_Msg_DeleteFailed": "Kunde inte ta bort avbildningsfilen.",
+  "WIMUtil_Msg_DeleteError": "Fel vid borttagning av avbildningsfil: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Konverterar {0} till {1}...",
+  "WIMUtil_Status_CreatingIso": "Skapar ISO",
+  "WIMUtil_Button_OpenFolder": "Öppna mapp",
+  "Loading_CheckingSystemProtection": "Kontrollerar systemskydd..."
 }
