--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Перемкнути тему Winhance",
   "Tooltip_Donate": "Пожертвувати на підтримку розробки",
   "Tooltip_ReportBug": "Повідомити про помилку",
-  "Menu_ReportBug": "Повідомити про помилку",
   "Settings_Title": "Параметри Winhance",
+  "Settings_Description": "Налаштування параметрів застосунку Winhance",
   "Settings_Menu_Language": "Мова",
   "Settings_Language_Description": "Виберіть мову інтерфейсу програми",
   "Settings_Theme_Title": "Тема Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Попередження",
   "Dialog_Error": "Помилка",
   "Dialog_Confirmation": "Підтвердження",
-  "Dialog_Question": "Питання",
   "Dialog_ConfirmInstallation": "Підтвердити встановлення",
   "Dialog_ConfirmRemoval": "Підтвердити видалення",
   "Dialog_ConfirmOperation": "Підтвердити {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Виберіть файл конфігурації з вашого комп'ютера",
   "Dialog_ImportConfig_Option_Recommended_Title": "Імпортувати рекомендовану конфігурацію",
   "Dialog_ImportConfig_Option_Recommended_Description": "Завантажити рекомендований файл конфігурації Winhance",
-  "Dialog_ImportOptions_Title": "Імпортувати конфігурацію",
   "Dialog_ImportOptions_Message": "Виберіть спосіб імпорту конфігурації:",
-  "ImportOption_Own": "Імпортувати власний файл конфігурації",
-  "ImportOption_Recommended": "Імпортувати рекомендовану конфігурацію Winhance",
-  "Dialog_Button_Yes": "Так",
-  "Dialog_Button_No": "Ні",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Скасувати",
-  "Dialog_Button_Continue": "Продовжити",
-  "Dialog_Button_Close": "Закрити",
-  "Dialog_Button_Apply": "Застосувати",
-  "Dialog_Button_Refresh": "Оновити",
-  "Dialog_Button_Help": "Допомога",
   "Dialog_Unified_Section_SoftwareAndApps": "Програми та додатки",
   "Dialog_Unified_Description_SoftwareAndApps": "Вибір для пакетів Windows та зовнішнього програмного забезпечення",
   "Dialog_Unified_Section_WindowsApps": "Додатки Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Оновити",
   "Button_Help": "Допомога",
   "Button_Delete": "Видалити",
+  "Button_Download": "Завантажити",
   "Common_On": "Увімк",
   "Common_Off": "Вимк",
   "Common_Search_Placeholder": "Введіть тут для пошуку...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "ISO не вибрано",
   "WIMUtil_Status_WaitForConversion": "🔒 Зачекайте завершення перетворення",
   "WIMUtil_Status_CompleteStep1": "🔒 Завершіть крок 1",
-  "WIMUtil_Status_ReadyToAddXml": "Готово до додавання XML",
   "WIMUtil_Status_XmlAdded": "✓ XML додано",
   "WIMUtil_Status_NoXmlAdded": "XML не додано (необов'язково)",
   "WIMUtil_Status_DriversAdded": "✓ Драйвери додано",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance захистив вашу систему за допомогою резервних копій.",
   "Startup_Backup_RestoreEnabled": "Відновлення системи було вимкнено, а тепер увімкнено.",
   "Startup_Backup_Created": "Створено:",
-  "Startup_Backup_RegistryBackups": "• Резервні копії реєстру ({0} кущів) за адресою:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Точка відновлення системи: 'Початкова точка відновлення Winhance'",
   "Startup_Backup_ToRestore": "Для відновлення:",
-  "Startup_Backup_RestoreInstructions_System": "• Система: Відкрийте 'Створити точку відновлення' в Налаштуваннях > Відновлення системи",
-  "Startup_Backup_RestoreInstructions_Registry": "• Реєстр: Двічі клацніть .reg-файли в папці резервного копіювання",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Для відновлення: Знайдіть 'точку відновлення' в налаштуваннях Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Для відновлення: Двічі клацніть .reg-файли в папці резервного копіювання",
   "Startup_Backup_Note": "Примітка: Відновлення системи не відновить видалені програми.",
-  "Startup_Backup_Note_AdminRights": "Резервні копії реєстру є одноразовими та вимагають прав адміністратора.",
   "Startup_Backup_Checkbox_DontCreate": "Не створювати точки відновлення в майбутньому",
-  "Startup_Backup_Checkbox_DontShow": "Більше не показувати",
   "Startup_Migration_Title": "Розташування скрипту оновлено",
   "Startup_Migration_SubTitle": "Міграція Winhance",
   "Startup_Migration_Intro": "Winhance оновив розташування скриптів видалення додатків Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Створіть файл autounattend.xml на основі поточних налаштувань Winhance для автоматизації встановлення Windows.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Додаткові параметри генерації незабаром",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Додаткові параметри налаштування XML будуть доступні в майбутніх оновленнях.",
-  "Button_OpenWIMUtil": "Відкрити WIMUtil",
-  "Button_DoItLater": "Я зроблю це пізніше",
   "Dialog_FallbackDownload": "Альтернативний метод завантаження",
-  "Dialog_Button_Download": "Завантажити",
   "WindowsApps_Msg_FallbackDownload": "Пакет '{0}' не вдалося знайти через WinGet, ймовірно, через географічні обмеження ринку.\n\nWinhance може завантажити цей пакет безпосередньо з серверів Microsoft за допомогою альтернативного методу (store.rg-adguard.net).\n\n• Файли пакета надходять безпосередньо з офіційного CDN Microsoft\n• Цей метод є абсолютно легальним і безпечним\n• Він лише обходить регіональні обмеження\n\nБажаєте продовжити з альтернативним методом завантаження?",
   "WindowsApps_Checkbox_DontAskAgain": "Не питати мене знову для майбутніх інсталяцій",
   "Progress_RemovingOldFile": "Видалення старого файлу зображення...",
-  "Progress_WarningCouldNotDeleteFile": "Попередження: не вдалося видалити старий файл",
   "Progress_ConversionCompleted": "Перетворення успішно завершено",
   "Progress_ConversionFailed": "Не вдалося перетворити",
   "Progress_PreparingInstallAdk": "Підготовка до встановлення Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Перевірка статусу відновлення системи...",
   "Progress_EnablingRestore": "Увімкнення відновлення системи...",
   "Progress_CreatingRestorePoint": "Створення точки відновлення системи...",
-  "Progress_BackingUpRegistry": "Резервне копіювання куща реєстру {0}...",
   "Progress_CheckingInstallStatus": "Перевірка статусу встановлення...",
   "Progress_WaitForInitialLoad": "Будь ласка, зачекайте завершення початкового завантаження",
   "Progress_RefreshingStatus": "Оновлення статусу встановлення...",
   "Progress_SelectionsCleared": "Усі вибори очищено",
   "Progress_NoInternetConnection": "Немає підключення до Інтернету. Встановлення не може бути продовжено.",
-  "Progress_WingetInstalledSuccess": "WinGet успішно встановлено",
   "Progress_ConvertingFormat": "Перетворення {0} на {1}...",
   "Progress_ConvertingEdition": "Перетворення редакції {0} з {1}...",
   "Progress_CopyingFile": "Копіювання: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Не вдалося встановити WinGet. Неможливо встановити {0}.",
   "Progress_WinGet_StartingInstallation": "Початок встановлення {0}...",
   "Progress_WinGet_InstalledSuccess": "Успішно встановлено {0}",
-  "Progress_WinGet_RepairingInstallation": "Відновлення встановлення WinGet...",
-  "Progress_WinGet_FailedRepair": "Не вдалося відновити WinGet. Неможливо встановити {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Не вдалося знайти WinGet після відновлення. Неможливо встановити {0}.",
-  "Progress_WinGet_RetryingInstallation": "Повторна спроба встановлення {0}...",
   "Progress_WinGet_InstallationCancelled": "Встановлення {0} було скасовано",
   "Progress_WinGet_NetworkError": "Мережева помилка під час встановлення {0}. Перевірте ваше інтернет-з'єднання та спробуйте ще раз.",
   "Progress_WinGet_InstallationError": "Помилка встановлення {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Перевірка встановлення WinGet...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Не вдалося перевірити встановлення WinGet",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet встановлено, але недоступний. Будь ласка, перезапустіть програму.",
-  "Progress_WinGet_InitializingSources": "Ініціалізація джерел WinGet...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet успішно встановлено",
   "Progress_WinGet_InstallError": "Помилка встановлення WinGet: {0}",
   "Progress_Store_FetchingLinks": "Отримання посилань для завантаження {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Не вдалося встановити {0}",
   "Progress_Store_DownloadCancelled": "Завантаження {0} було скасовано",
   "Progress_Store_InstallError": "Помилка встановлення {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Запит інформації про пакет для {0}...",
-  "Progress_Store_DownloadingMainPackage": "Завантаження основного пакета {0}...",
   "Progress_Store_DownloadingDependencies": "Завантаження {0} необхідних пакетів залежностей...",
   "Progress_Store_InstallingWithDependencies": "Встановлення {0} з {1} залежностями...",
   "Progress_Store_Installing": "Встановлення {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Помилка встановлення: {0}",
   "Progress_WinGet_CheckingUpdates": "Перевірка оновлень WinGet...",
   "Progress_WinGet_Updating": "Оновлення WinGet...",
-  "Progress_WinGet_CheckingVersion": "Перевірка версії WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Оновлення WinGet розпочато через Store, перевірка завершення...",
-  "Progress_WinGet_WaitingForUpdate": "Очікування завершення оновлення WinGet...",
-  "Progress_WinGet_Reinstalling": "Перевстановлення WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet успішно оновлено",
-  "Progress_WinGet_UpdateCompleted": "Оновлення WinGet завершено",
   "Progress_WinGet_AlreadyUpToDate": "WinGet уже оновлено",
-  "Progress_WinGet_InstalledLatest": "WinGet вже встановлено останньої версії",
   "Progress_WinGet_Ready": "WinGet готовий",
   "Progress_Uninstalling": "Видалення {0}...",
   "Progress_Finalizing": "Завершення...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet недоступний у цій системі.",
   "App_Tagline": "Покращте ваш досвід роботи з Windows",
   "Loading_InitializingSettings": "Ініціалізація налаштувань...",
-  "Loading_CreatingRestorePoint": "Створення точки відновлення системи. Будь ласка, зачекайте, це може зайняти деякий час...",
   "Loading_MigratingScripts": "Міграція скриптів...",
   "Loading_CheckingScripts": "Перевірка оновлень скриптів...",
-  "Loading_PreparingApp": "Підготовка застосунку..."
+  "Loading_PreparingApp": "Підготовка застосунку...",
+  "Tooltip_Documentation": "Документація",
+  "Tooltip_ToggleNavigation": "\u041F\u0435\u0440\u0435\u043C\u043A\u043D\u0443\u0442\u0438 \u043D\u0430\u0432\u0456\u0433\u0430\u0446\u0456\u044E",
+  "Dialog_ImportConfig_Option_Backup_Title": "Імпортувати резервну конфігурацію",
+  "Dialog_ImportConfig_Option_Backup_Description": "Відновити резервну конфігурацію системи",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Відновити стандартні налаштування Windows",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Скинути всі налаштування до заводських значень Windows",
+  "Loading_CreatingConfigBackup": "Створення резервної копії конфігурації...",
+  "Config_Backup_NotFound": "Файли резервної конфігурації не знайдено. Резервна копія автоматично створюється при першому запуску програми.",
+  "Config_Backup_NotFound_Title": "Резервну копію не знайдено",
+  "Config_Backup_Select_Title": "Виберіть файл резервної копії",
+  "Review_Mode_Title": "Режим перегляду конфігурації",
+  "Review_Mode_Description": "Перегляньте зміни у всіх розділах, а потім натисніть Застосувати конфігурацію, коли будете готові.",
+  "Review_Mode_Status_Format": "{0} з {1} переглянуто ({2} буде застосовано)",
+  "Review_Mode_Apply_Button": "Застосувати конфігурацію",
+  "Review_Mode_Cancel_Button": "Скасувати",
+  "Review_Mode_Cancel_Confirmation_Title": "Скасувати перегляд конфігурації",
+  "Review_Mode_Cancel_Confirmation": "Ви впевнені, що хочете скасувати? Жодних змін не буде застосовано.",
+  "Review_Mode_Diff_Toggle": "Поточне: {0} → Конфігурація: {1}",
+  "Review_Mode_Select_Action": "Виберіть дію (Встановити або Видалити) для позначених програм за допомогою кнопок вище",
+  "Review_Mode_Action_Install": "Позначені програми будуть встановлені при застосуванні конфігурації",
+  "Review_Mode_Action_Remove": "Позначені програми будуть видалені при застосуванні конфігурації",
+  "Review_Mode_Skip_Checkbox": "Пропустити перегляд і застосувати одразу",
+  "Review_Mode_Status_AllMatch": "Усі налаштування вже відповідають конфігурації",
+  "Review_Mode_Status_NoItems": "Немає елементів конфігурації для застосування",
+  "Review_Mode_Action_ThemeWallpaper": "Застосувати стандартні шпалери для цієї теми?",
+  "Review_Mode_Action_CleanTaskbar": "Очистити панель завдань як частину цієї конфігурації?",
+  "Review_Mode_Action_CleanStartMenu": "Очистити меню Пуск як частину цієї конфігурації?",
+  "Startup_Backup_ConfigBackup": "• Резервна копія конфігурації: Знімок ваших поточних налаштувань Windows",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Відновлення системи: Знайдіть 'Створити точку відновлення' в налаштуваннях Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Резервна конфігурація: Використовуйте Імпорт конфігурації у заголовку вікна та виберіть 'Імпортувати резервну конфігурацію'",
+  "Help_LearnMore_WindowsApps": "Дізнатися більше про програми Windows",
+  "Help_LearnMore_ExternalApps": "Дізнатися більше про зовнішні програми",
+  "WIMUtil_Tooltip_DownloadWindows10": "Завантажити Windows 10 ISO",
+  "WIMUtil_Tooltip_DownloadWindows11": "Завантажити Windows 11 ISO",
+  "WIMUtil_Tooltip_Schneegans": "Відкрити генератор Schneegans XML",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "За замовчуванням: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Ви впевнені, що хочете видалити файл образу WIM? Цю дію неможливо скасувати.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Ви впевнені, що хочете видалити файл образу ESD? Цю дію неможливо скасувати.",
+  "WIMUtil_Msg_DeleteWimSuccess": "Файл WIM успішно видалено.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "Файл ESD успішно видалено.",
+  "WIMUtil_Msg_DeleteFailed": "Не вдалося видалити файл образу.",
+  "WIMUtil_Msg_DeleteError": "Помилка видалення файлу образу: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Конвертація {0} у {1}...",
+  "WIMUtil_Status_CreatingIso": "Створення ISO",
+  "WIMUtil_Button_OpenFolder": "Відкрити папку",
+  "Loading_CheckingSystemProtection": "Перевірка захисту системи..."
 }
