--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Chuyển đổi chủ đề Winhance",
   "Tooltip_Donate": "Quyên góp để hỗ trợ phát triển",
   "Tooltip_ReportBug": "Báo cáo lỗi",
-  "Menu_ReportBug": "Báo cáo lỗi",
   "Settings_Title": "Cài đặt Winhance",
+  "Settings_Description": "Cấu hình tùy chọn ứng dụng Winhance",
   "Settings_Menu_Language": "Ngôn ngữ",
   "Settings_Language_Description": "Chọn ngôn ngữ hiển thị ứng dụng",
   "Settings_Theme_Title": "Chủ đề Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Cảnh báo",
   "Dialog_Error": "Lỗi",
   "Dialog_Confirmation": "Xác nhận",
-  "Dialog_Question": "Câu hỏi",
   "Dialog_ConfirmInstallation": "Xác nhận cài đặt",
   "Dialog_ConfirmRemoval": "Xác nhận xóa",
   "Dialog_ConfirmOperation": "Xác nhận {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Chọn một tệp cấu hình từ máy tính của bạn",
   "Dialog_ImportConfig_Option_Recommended_Title": "Nhập cấu hình được đề xuất",
   "Dialog_ImportConfig_Option_Recommended_Description": "Tải tệp cấu hình được đề xuất của Winhance",
-  "Dialog_ImportOptions_Title": "Nhập cấu hình",
   "Dialog_ImportOptions_Message": "Chọn cách bạn muốn nhập cấu hình:",
-  "ImportOption_Own": "Nhập tệp cấu hình của riêng tôi",
-  "ImportOption_Recommended": "Nhập cấu hình được đề xuất của Winhance",
-  "Dialog_Button_Yes": "Có",
-  "Dialog_Button_No": "Không",
-  "Dialog_Button_OK": "OK",
-  "Dialog_Button_Cancel": "Hủy",
-  "Dialog_Button_Continue": "Tiếp tục",
-  "Dialog_Button_Close": "Đóng",
-  "Dialog_Button_Apply": "Áp dụng",
-  "Dialog_Button_Refresh": "Làm mới",
-  "Dialog_Button_Help": "Trợ giúp",
   "Dialog_Unified_Section_SoftwareAndApps": "Phần mềm & Ứng dụng",
   "Dialog_Unified_Description_SoftwareAndApps": "Các lựa chọn cho Gói Windows và Phần mềm bên ngoài",
   "Dialog_Unified_Section_WindowsApps": "Ứng dụng Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Làm mới",
   "Button_Help": "Trợ giúp",
   "Button_Delete": "Xóa",
+  "Button_Download": "Tải xuống",
   "Common_On": "Bật",
   "Common_Off": "Tắt",
   "Common_Search_Placeholder": "Nhập vào đây để tìm kiếm...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "Không có ISO nào được chọn",
   "WIMUtil_Status_WaitForConversion": "🔒 Chờ chuyển đổi hoàn tất",
   "WIMUtil_Status_CompleteStep1": "🔒 Hoàn thành bước 1",
-  "WIMUtil_Status_ReadyToAddXml": "Sẵn sàng để thêm XML",
   "WIMUtil_Status_XmlAdded": "✓ XML đã được thêm",
   "WIMUtil_Status_NoXmlAdded": "Không có XML nào được thêm (Tùy chọn)",
   "WIMUtil_Status_DriversAdded": "✓ Trình điều khiển đã được thêm",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance đã bảo vệ hệ thống của bạn bằng các bản sao lưu.",
   "Startup_Backup_RestoreEnabled": "Khôi phục Hệ thống đã bị tắt và hiện đã được bật.",
   "Startup_Backup_Created": "Đã tạo:",
-  "Startup_Backup_RegistryBackups": "• Sao lưu sổ đăng ký ({0} hives) tại:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Điểm khôi phục hệ thống: 'Điểm khôi phục ban đầu của Winhance'",
   "Startup_Backup_ToRestore": "Để khôi phục:",
-  "Startup_Backup_RestoreInstructions_System": "• Hệ thống: Mở 'Tạo điểm khôi phục' trong Cài đặt > Khôi phục Hệ thống",
-  "Startup_Backup_RestoreInstructions_Registry": "• Sổ đăng ký: Nhấp đúp vào các tệp .reg trong thư mục sao lưu",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Để khôi phục: Tìm kiếm 'điểm khôi phục' trong Cài đặt Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Để khôi phục: Nhấp đúp vào các tệp .reg trong thư mục sao lưu",
   "Startup_Backup_Note": "Lưu ý: Khôi phục Hệ thống sẽ không khôi phục các ứng dụng đã bị xóa.",
-  "Startup_Backup_Note_AdminRights": "Sao lưu sổ đăng ký là một lần và yêu cầu quyền quản trị.",
   "Startup_Backup_Checkbox_DontCreate": "Không tạo điểm khôi phục trong tương lai",
-  "Startup_Backup_Checkbox_DontShow": "Không hiển thị lại",
   "Startup_Migration_Title": "Đã cập nhật vị trí tập lệnh",
   "Startup_Migration_SubTitle": "Di chuyển Winhance",
   "Startup_Migration_Intro": "Winhance đã cập nhật vị trí của các tập lệnh xóa Ứng dụng Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Tạo tệp autounattend.xml dựa trên các lựa chọn Winhance hiện tại của bạn để tùy chỉnh Windows trong quá trình cài đặt.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Thêm tùy chọn tạo sẽ sớm có mặt",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Các tùy chọn tùy chỉnh XML bổ sung sẽ có sẵn trong các bản cập nhật tương lai.",
-  "Button_OpenWIMUtil": "Mở WIMUtil",
-  "Button_DoItLater": "Tôi sẽ làm sau",
   "Dialog_FallbackDownload": "Phương pháp tải xuống thay thế",
-  "Dialog_Button_Download": "Tải xuống",
   "WindowsApps_Msg_FallbackDownload": "Không thể tìm thấy gói '{0}' qua WinGet, có thể do các hạn chế về thị trường địa lý.\n\nWinhance có thể tải xuống gói này trực tiếp từ các máy chủ của Microsoft bằng một phương pháp thay thế (store.rg-adguard.net).\n\n• Các tệp gói đến trực tiếp từ CDN chính thức của Microsoft\n• Phương pháp này hoàn toàn hợp pháp và an toàn\n• Nó chỉ bỏ qua các hạn chế khu vực\n\nBạn có muốn tiếp tục với phương pháp tải xuống thay thế không?",
   "WindowsApps_Checkbox_DontAskAgain": "Không hỏi lại tôi cho các lần cài đặt trong tương lai",
   "Progress_RemovingOldFile": "Đang xóa tệp hình ảnh cũ...",
-  "Progress_WarningCouldNotDeleteFile": "Cảnh báo: Không thể xóa tệp cũ",
   "Progress_ConversionCompleted": "Chuyển đổi hoàn tất thành công",
   "Progress_ConversionFailed": "Chuyển đổi không thành công",
   "Progress_PreparingInstallAdk": "Đang chuẩn bị cài đặt Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Đang kiểm tra trạng thái Khôi phục Hệ thống...",
   "Progress_EnablingRestore": "Đang bật Khôi phục Hệ thống...",
   "Progress_CreatingRestorePoint": "Đang tạo điểm khôi phục hệ thống...",
-  "Progress_BackingUpRegistry": "Đang sao lưu {0} hive sổ đăng ký...",
   "Progress_CheckingInstallStatus": "Đang kiểm tra trạng thái cài đặt...",
   "Progress_WaitForInitialLoad": "Vui lòng đợi quá trình tải ban đầu hoàn tất",
   "Progress_RefreshingStatus": "Đang làm mới trạng thái cài đặt...",
   "Progress_SelectionsCleared": "Tất cả các lựa chọn đã được xóa",
   "Progress_NoInternetConnection": "Không có kết nối internet. Không thể tiếp tục cài đặt.",
-  "Progress_WingetInstalledSuccess": "WinGet đã được cài đặt thành công",
   "Progress_ConvertingFormat": "Đang chuyển đổi {0} sang {1}...",
   "Progress_ConvertingEdition": "Đang chuyển đổi phiên bản {0} của {1}...",
   "Progress_CopyingFile": "Đang sao chép: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Không thể cài đặt WinGet. Không thể cài đặt {0}.",
   "Progress_WinGet_StartingInstallation": "Bắt đầu cài đặt {0}...",
   "Progress_WinGet_InstalledSuccess": "Đã cài đặt thành công {0}",
-  "Progress_WinGet_RepairingInstallation": "Đang sửa chữa cài đặt WinGet...",
-  "Progress_WinGet_FailedRepair": "Không thể sửa chữa WinGet. Không thể cài đặt {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Không thể định vị WinGet sau khi sửa chữa. Không thể cài đặt {0}.",
-  "Progress_WinGet_RetryingInstallation": "Đang thử lại cài đặt {0}...",
   "Progress_WinGet_InstallationCancelled": "Đã hủy cài đặt {0}",
   "Progress_WinGet_NetworkError": "Lỗi mạng khi cài đặt {0}. Vui lòng kiểm tra kết nối internet của bạn và thử lại.",
   "Progress_WinGet_InstallationError": "Lỗi khi cài đặt {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Đang xác minh cài đặt WinGet...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Xác minh cài đặt WinGet không thành công",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet đã được cài đặt nhưng không thể truy cập. Vui lòng khởi động lại ứng dụng.",
-  "Progress_WinGet_InitializingSources": "Đang khởi tạo các nguồn WinGet...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet đã được cài đặt thành công",
   "Progress_WinGet_InstallError": "Lỗi khi cài đặt WinGet: {0}",
   "Progress_Store_FetchingLinks": "Đang tìm nạp các liên kết tải xuống cho {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Không thể cài đặt {0}",
   "Progress_Store_DownloadCancelled": "Đã hủy tải xuống {0}",
   "Progress_Store_InstallError": "Lỗi khi cài đặt {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Đang yêu cầu thông tin gói cho {0}...",
-  "Progress_Store_DownloadingMainPackage": "Đang tải xuống gói chính {0}...",
   "Progress_Store_DownloadingDependencies": "Đang tải xuống {0} gói phụ thuộc bắt buộc...",
   "Progress_Store_InstallingWithDependencies": "Đang cài đặt {0} với {1} phụ thuộc...",
   "Progress_Store_Installing": "Đang cài đặt {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Cài đặt thất bại: {0}",
   "Progress_WinGet_CheckingUpdates": "Đang kiểm tra các bản cập nhật WinGet...",
   "Progress_WinGet_Updating": "Đang cập nhật WinGet...",
-  "Progress_WinGet_CheckingVersion": "Đang kiểm tra phiên bản WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Cập nhật WinGet đã được khởi tạo qua Store, đang xác minh hoàn tất...",
-  "Progress_WinGet_WaitingForUpdate": "Đang chờ cập nhật WinGet hoàn tất...",
-  "Progress_WinGet_Reinstalling": "Đang cài đặt lại WinGet...",
   "Progress_WinGet_UpdateSuccess": "Đã cập nhật WinGet thành công",
-  "Progress_WinGet_UpdateCompleted": "Cập nhật WinGet đã hoàn tất",
   "Progress_WinGet_AlreadyUpToDate": "WinGet đã được cập nhật",
-  "Progress_WinGet_InstalledLatest": "WinGet đã được cài đặt ở phiên bản mới nhất",
   "Progress_WinGet_Ready": "WinGet đã sẵn sàng",
   "Progress_Uninstalling": "Đang gỡ cài đặt {0}...",
   "Progress_Finalizing": "Đang hoàn tất...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet không có sẵn trên hệ thống này.",
   "App_Tagline": "Nâng cao trải nghiệm Windows của bạn",
   "Loading_InitializingSettings": "Đang khởi tạo cài đặt...",
-  "Loading_CreatingRestorePoint": "Đang tạo điểm khôi phục hệ thống. Vui lòng đợi, quá trình này có thể mất một lúc...",
   "Loading_MigratingScripts": "Đang di chuyển tập lệnh...",
   "Loading_CheckingScripts": "Đang kiểm tra bản cập nhật tập lệnh...",
-  "Loading_PreparingApp": "Đang chuẩn bị ứng dụng..."
+  "Loading_PreparingApp": "Đang chuẩn bị ứng dụng...",
+  "Tooltip_Documentation": "Tài liệu",
+  "Tooltip_ToggleNavigation": "Chuy\u1EC3n \u0111\u1ED5i \u0111i\u1EC1u h\u01B0\u1EDBng",
+  "Dialog_ImportConfig_Option_Backup_Title": "Nhập cấu hình sao lưu",
+  "Dialog_ImportConfig_Option_Backup_Description": "Khôi phục cấu hình sao lưu hệ thống của bạn",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Khôi phục mặc định Windows",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Đặt lại tất cả cài đặt về mặc định gốc của Windows",
+  "Loading_CreatingConfigBackup": "Đang tạo bản sao lưu cấu hình...",
+  "Config_Backup_NotFound": "Không tìm thấy tệp cấu hình sao lưu. Bản sao lưu được tạo tự động khi khởi chạy ứng dụng lần đầu.",
+  "Config_Backup_NotFound_Title": "Không tìm thấy bản sao lưu",
+  "Config_Backup_Select_Title": "Chọn tệp sao lưu",
+  "Review_Mode_Title": "Chế độ xem lại cấu hình",
+  "Review_Mode_Description": "Xem lại các thay đổi trên tất cả các mục, sau đó nhấp Áp dụng cấu hình khi sẵn sàng.",
+  "Review_Mode_Status_Format": "{0} trong {1} đã xem lại ({2} sẽ được áp dụng)",
+  "Review_Mode_Apply_Button": "Áp dụng cấu hình",
+  "Review_Mode_Cancel_Button": "Hủy",
+  "Review_Mode_Cancel_Confirmation_Title": "Hủy xem lại cấu hình",
+  "Review_Mode_Cancel_Confirmation": "Bạn có chắc chắn muốn hủy không? Không có thay đổi nào sẽ được áp dụng.",
+  "Review_Mode_Diff_Toggle": "Hiện tại: {0} → Cấu hình: {1}",
+  "Review_Mode_Select_Action": "Chọn hành động (Cài đặt hoặc Gỡ cài đặt) cho các ứng dụng đã chọn bằng các nút ở trên",
+  "Review_Mode_Action_Install": "Các ứng dụng đã chọn sẽ được cài đặt khi bạn áp dụng cấu hình",
+  "Review_Mode_Action_Remove": "Các ứng dụng đã chọn sẽ bị gỡ bỏ khi bạn áp dụng cấu hình",
+  "Review_Mode_Skip_Checkbox": "Bỏ qua xem lại và áp dụng ngay",
+  "Review_Mode_Status_AllMatch": "Tất cả cài đặt đã khớp với cấu hình",
+  "Review_Mode_Status_NoItems": "Không có mục cấu hình nào để áp dụng",
+  "Review_Mode_Action_ThemeWallpaper": "Áp dụng hình nền mặc định cho chủ đề này?",
+  "Review_Mode_Action_CleanTaskbar": "Dọn dẹp thanh tác vụ như một phần của cấu hình này?",
+  "Review_Mode_Action_CleanStartMenu": "Dọn dẹp menu Bắt đầu như một phần của cấu hình này?",
+  "Startup_Backup_ConfigBackup": "• Sao lưu cấu hình: Bản chụp nhanh cài đặt Windows hiện tại của bạn",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Khôi phục hệ thống: Tìm 'Tạo điểm khôi phục' trong Cài đặt Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Cấu hình sao lưu: Sử dụng Nhập cấu hình trên thanh tiêu đề và chọn 'Nhập cấu hình sao lưu'",
+  "Help_LearnMore_WindowsApps": "Tìm hiểu thêm về Ứng dụng Windows",
+  "Help_LearnMore_ExternalApps": "Tìm hiểu thêm về Ứng dụng bên ngoài",
+  "WIMUtil_Tooltip_DownloadWindows10": "Tải xuống Windows 10 ISO",
+  "WIMUtil_Tooltip_DownloadWindows11": "Tải xuống Windows 11 ISO",
+  "WIMUtil_Tooltip_Schneegans": "Mở trình tạo Schneegans XML",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "Mặc định: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Bạn có chắc chắn muốn xóa tệp hình ảnh WIM không? Hành động này không thể hoàn tác.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Bạn có chắc chắn muốn xóa tệp hình ảnh ESD không? Hành động này không thể hoàn tác.",
+  "WIMUtil_Msg_DeleteWimSuccess": "Đã xóa tệp WIM thành công.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "Đã xóa tệp ESD thành công.",
+  "WIMUtil_Msg_DeleteFailed": "Không thể xóa tệp hình ảnh.",
+  "WIMUtil_Msg_DeleteError": "Lỗi khi xóa tệp hình ảnh: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Đang chuyển đổi {0} sang {1}...",
+  "WIMUtil_Status_CreatingIso": "Đang tạo ISO",
+  "WIMUtil_Button_OpenFolder": "Mở thư mục",
+  "Loading_CheckingSystemProtection": "Đang kiểm tra bảo vệ hệ thống..."
 }
