--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "切换 Winhance 主题",
   "Tooltip_Donate": "捐赠以支持开发",
   "Tooltip_ReportBug": "报告错误",
-  "Menu_ReportBug": "报告错误",
   "Settings_Title": "Winhance 设置",
+  "Settings_Description": "配置 Winhance 应用程序首选项",
   "Settings_Menu_Language": "语言",
   "Settings_Language_Description": "选择应用程序显示语言",
   "Settings_Theme_Title": "Winhance 主题",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "警告",
   "Dialog_Error": "错误",
   "Dialog_Confirmation": "确认",
-  "Dialog_Question": "问题",
   "Dialog_ConfirmInstallation": "确认安装",
   "Dialog_ConfirmRemoval": "确认移除",
   "Dialog_ConfirmOperation": "确认 {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "从您的计算机中选择一个配置文件",
   "Dialog_ImportConfig_Option_Recommended_Title": "导入推荐配置",
   "Dialog_ImportConfig_Option_Recommended_Description": "加载 Winhance 的推荐配置文件",
-  "Dialog_ImportOptions_Title": "导入配置",
   "Dialog_ImportOptions_Message": "选择导入配置的方式：",
-  "ImportOption_Own": "导入我自己的配置文件",
-  "ImportOption_Recommended": "导入 Winhance 推荐配置",
-  "Dialog_Button_Yes": "是",
-  "Dialog_Button_No": "否",
-  "Dialog_Button_OK": "确定",
-  "Dialog_Button_Cancel": "取消",
-  "Dialog_Button_Continue": "继续",
-  "Dialog_Button_Close": "关闭",
-  "Dialog_Button_Apply": "应用",
-  "Dialog_Button_Refresh": "刷新",
-  "Dialog_Button_Help": "帮助",
   "Dialog_Unified_Section_SoftwareAndApps": "软件和应用",
   "Dialog_Unified_Description_SoftwareAndApps": "Windows 软件包和外部软件的选择",
   "Dialog_Unified_Section_WindowsApps": "Windows 应用",
@@ -132,6 +119,7 @@
   "Button_Refresh": "刷新",
   "Button_Help": "帮助",
   "Button_Delete": "删除",
+  "Button_Download": "下载",
   "Common_On": "开",
   "Common_Off": "关",
   "Common_Search_Placeholder": "在此处输入以搜索...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "未选择 ISO",
   "WIMUtil_Status_WaitForConversion": "🔒 等待转换完成",
   "WIMUtil_Status_CompleteStep1": "🔒 完成步骤 1",
-  "WIMUtil_Status_ReadyToAddXml": "准备添加 XML",
   "WIMUtil_Status_XmlAdded": "✓ XML 已添加",
   "WIMUtil_Status_NoXmlAdded": "未添加 XML（可选）",
   "WIMUtil_Status_DriversAdded": "✓ 驱动程序已添加",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance 已通过备份保护您的系统。",
   "Startup_Backup_RestoreEnabled": "系统还原已禁用，现已启用。",
   "Startup_Backup_Created": "已创建：",
-  "Startup_Backup_RegistryBackups": "• 注册表备份（{0} 个配置单元）位于：",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• 系统还原点：'Winhance 初始还原点'",
   "Startup_Backup_ToRestore": "要还原：",
-  "Startup_Backup_RestoreInstructions_System": "• 系统：在“设置”>“系统还原”中打开“创建还原点”",
-  "Startup_Backup_RestoreInstructions_Registry": "• 注册表：双击备份文件夹中的 .reg 文件",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "要还原：在 Windows 设置中搜索“还原点”",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "要还原：双击备份文件夹中的 .reg 文件",
   "Startup_Backup_Note": "注意：系统还原不会还原已移除的应用。",
-  "Startup_Backup_Note_AdminRights": "注册表备份是一次性的，需要管理员权限。",
   "Startup_Backup_Checkbox_DontCreate": "将来不创建还原点",
-  "Startup_Backup_Checkbox_DontShow": "不再显示此消息",
   "Startup_Migration_Title": "脚本位置已更新",
   "Startup_Migration_SubTitle": "Winhance 迁移",
   "Startup_Migration_Intro": "Winhance 已更新 Windows 应用移除脚本的位置。",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "根据您当前的 Winhance 选择生成 autounattend.xml 文件，以在安装过程中自定义 Windows。",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "更多生成选项即将推出",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "额外的 XML 自定义选项将在未来的更新中提供。",
-  "Button_OpenWIMUtil": "打开 WIMUtil",
-  "Button_DoItLater": "我稍后再做",
   "Dialog_FallbackDownload": "备用下载方法",
-  "Dialog_Button_Download": "下载",
   "WindowsApps_Msg_FallbackDownload": "由于地理市场限制，无法通过 WinGet 找到软件包‘{0}’。\n\nWinhance 可以使用备用方法（store.rg-adguard.net）直接从 Microsoft 的服务器下载此软件包。\n\n• 软件包文件直接来自 Microsoft 的官方 CDN\n• 此方法完全合法且安全\n• 它仅绕过区域限制\n\n您要继续使用备用下载方法吗？",
   "WindowsApps_Checkbox_DontAskAgain": "未来安装时不再询问我",
   "Progress_RemovingOldFile": "正在移除旧图像文件...",
-  "Progress_WarningCouldNotDeleteFile": "警告：无法删除旧文件",
   "Progress_ConversionCompleted": "转换成功完成",
   "Progress_ConversionFailed": "转换失败",
   "Progress_PreparingInstallAdk": "正在准备安装 Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "正在检查系统还原状态...",
   "Progress_EnablingRestore": "正在启用系统还原...",
   "Progress_CreatingRestorePoint": "正在创建系统还原点...",
-  "Progress_BackingUpRegistry": "正在备份 {0} 注册表配置单元...",
   "Progress_CheckingInstallStatus": "正在检查安装状态...",
   "Progress_WaitForInitialLoad": "请等待初始加载完成",
   "Progress_RefreshingStatus": "正在刷新安装状态...",
   "Progress_SelectionsCleared": "所有选择已清除",
   "Progress_NoInternetConnection": "无可用互联网连接。无法继续安装。",
-  "Progress_WingetInstalledSuccess": "WinGet 安装成功",
   "Progress_ConvertingFormat": "正在将 {0} 转换为 {1}...",
   "Progress_ConvertingEdition": "正在转换版本 {0} 的 {1}...",
   "Progress_CopyingFile": "正在复制：{0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "安装 WinGet 失败。无法安装 {0}。",
   "Progress_WinGet_StartingInstallation": "正在开始安装 {0}...",
   "Progress_WinGet_InstalledSuccess": "成功安装 {0}",
-  "Progress_WinGet_RepairingInstallation": "正在修复 WinGet 安装...",
-  "Progress_WinGet_FailedRepair": "修复 WinGet 失败。无法安装 {0}。",
-  "Progress_WinGet_FailedLocateAfterRepair": "修复后无法找到 WinGet。无法安装 {0}。",
-  "Progress_WinGet_RetryingInstallation": "正在重试安装 {0}...",
   "Progress_WinGet_InstallationCancelled": "{0} 的安装已取消",
   "Progress_WinGet_NetworkError": "安装 {0} 时出现网络错误。请检查您的互联网连接并重试。",
   "Progress_WinGet_InstallationError": "安装 {0} 时出错：{1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "正在验证 WinGet 安装...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "WinGet 安装验证失败",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet 已安装但无法访问。请重新启动应用程序。",
-  "Progress_WinGet_InitializingSources": "正在初始化 WinGet 源...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet 安装成功",
   "Progress_WinGet_InstallError": "安装 WinGet 时出错：{0}",
   "Progress_Store_FetchingLinks": "正在获取 {0} 的下载链接...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "安装 {0} 失败",
   "Progress_Store_DownloadCancelled": "{0} 的下载已取消",
   "Progress_Store_InstallError": "安装 {0} 时出错：{1}",
-  "Progress_Store_RequestingPackageInfo": "正在请求 {0} 的软件包信息...",
-  "Progress_Store_DownloadingMainPackage": "正在下载 {0} 主软件包...",
   "Progress_Store_DownloadingDependencies": "正在下载 {0} 所需的依赖软件包...",
   "Progress_Store_InstallingWithDependencies": "正在安装 {0} 以及 {1} 个依赖项...",
   "Progress_Store_Installing": "正在安装 {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "安装失败: {0}",
   "Progress_WinGet_CheckingUpdates": "正在检查 WinGet 更新...",
   "Progress_WinGet_Updating": "正在更新 WinGet...",
-  "Progress_WinGet_CheckingVersion": "正在检查 WinGet 版本...",
-  "Progress_WinGet_UpdateInitiated": "已通过 Store 启动 WinGet 更新，正在验证完成情况...",
-  "Progress_WinGet_WaitingForUpdate": "正在等待 WinGet 更新完成...",
-  "Progress_WinGet_Reinstalling": "正在重新安装 WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet 更新成功",
-  "Progress_WinGet_UpdateCompleted": "WinGet 更新已完成",
   "Progress_WinGet_AlreadyUpToDate": "WinGet 已是最新版本",
-  "Progress_WinGet_InstalledLatest": "WinGet 已安装最新版本",
   "Progress_WinGet_Ready": "WinGet 已就绪",
   "Progress_Uninstalling": "正在卸载 {0}...",
   "Progress_Finalizing": "正在完成...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "此系统上无法使用 WinGet。",
   "App_Tagline": "提升您的 Windows 体验",
   "Loading_InitializingSettings": "正在初始化设置...",
-  "Loading_CreatingRestorePoint": "正在创建系统还原点。请稍候，这可能需要一些时间...",
   "Loading_MigratingScripts": "正在迁移脚本...",
   "Loading_CheckingScripts": "正在检查脚本更新...",
-  "Loading_PreparingApp": "正在准备应用程序..."
+  "Loading_PreparingApp": "正在准备应用程序...",
+  "Tooltip_Documentation": "文档",
+  "Tooltip_ToggleNavigation": "\u5207\u6362\u5BFC\u822A",
+  "Dialog_ImportConfig_Option_Backup_Title": "导入备份配置",
+  "Dialog_ImportConfig_Option_Backup_Description": "还原您的系统备份配置",
+  "Dialog_ImportConfig_Option_Defaults_Title": "恢复 Windows 默认值",
+  "Dialog_ImportConfig_Option_Defaults_Description": "将所有设置重置为 Windows 出厂默认值",
+  "Loading_CreatingConfigBackup": "正在创建配置备份...",
+  "Config_Backup_NotFound": "未找到备份配置文件。备份会在首次启动应用时自动创建。",
+  "Config_Backup_NotFound_Title": "未找到备份",
+  "Config_Backup_Select_Title": "选择备份文件",
+  "Review_Mode_Title": "配置审查模式",
+  "Review_Mode_Description": "审查所有部分的更改，准备好后点击「应用配置」。",
+  "Review_Mode_Status_Format": "已审查 {0}/{1}（{2} 项将被应用）",
+  "Review_Mode_Apply_Button": "应用配置",
+  "Review_Mode_Cancel_Button": "取消",
+  "Review_Mode_Cancel_Confirmation_Title": "取消配置审查",
+  "Review_Mode_Cancel_Confirmation": "确定要取消吗？不会应用任何更改。",
+  "Review_Mode_Diff_Toggle": "当前：{0} → 配置：{1}",
+  "Review_Mode_Select_Action": "使用上方按钮为已勾选的应用选择操作（安装或卸载）",
+  "Review_Mode_Action_Install": "应用配置时将安装已勾选的应用",
+  "Review_Mode_Action_Remove": "应用配置时将移除已勾选的应用",
+  "Review_Mode_Skip_Checkbox": "跳过审查并立即应用",
+  "Review_Mode_Status_AllMatch": "所有设置已与配置一致",
+  "Review_Mode_Status_NoItems": "没有要应用的配置项",
+  "Review_Mode_Action_ThemeWallpaper": "是否应用此主题的默认壁纸？",
+  "Review_Mode_Action_CleanTaskbar": "是否在此配置中清理任务栏？",
+  "Review_Mode_Action_CleanStartMenu": "是否在此配置中清理开始菜单？",
+  "Startup_Backup_ConfigBackup": "• 配置备份：当前 Windows 设置的快照",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• 系统还原：在 Windows 设置中搜索「创建还原点」",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• 备份配置：使用标题栏中的「导入配置」并选择「导入备份配置」",
+  "Help_LearnMore_WindowsApps": "了解更多关于 Windows 应用",
+  "Help_LearnMore_ExternalApps": "了解更多关于外部应用",
+  "WIMUtil_Tooltip_DownloadWindows10": "下载 Windows 10 ISO",
+  "WIMUtil_Tooltip_DownloadWindows11": "下载 Windows 11 ISO",
+  "WIMUtil_Tooltip_Schneegans": "打开 Schneegans XML 生成器",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "默认：{0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "确定要删除 WIM 映像文件吗？此操作无法撤消。",
+  "WIMUtil_Msg_DeleteEsdConfirm": "确定要删除 ESD 映像文件吗？此操作无法撤消。",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM 文件已成功删除。",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD 文件已成功删除。",
+  "WIMUtil_Msg_DeleteFailed": "删除映像文件失败。",
+  "WIMUtil_Msg_DeleteError": "删除映像文件时出错：{0}",
+  "WIMUtil_Status_ConvertingToFormat": "正在将 {0} 转换为 {1}...",
+  "WIMUtil_Status_CreatingIso": "正在创建 ISO",
+  "WIMUtil_Button_OpenFolder": "打开文件夹",
+  "Loading_CheckingSystemProtection": "正在检查系统保护..."
 }
