--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "切換 Winhance 佈景主題",
   "Tooltip_Donate": "贊助以支持開發",
   "Tooltip_ReportBug": "回報錯誤",
-  "Menu_ReportBug": "回報錯誤",
   "Settings_Title": "Winhance 設定",
+  "Settings_Description": "設定 Winhance 應用程式偏好設定",
   "Settings_Menu_Language": "語言",
   "Settings_Language_Description": "選擇應用程式顯示語言",
   "Settings_Theme_Title": "Winhance 佈景主題",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "警告",
   "Dialog_Error": "錯誤",
   "Dialog_Confirmation": "確認",
-  "Dialog_Question": "問題",
   "Dialog_ConfirmInstallation": "確認安裝",
   "Dialog_ConfirmRemoval": "確認移除",
   "Dialog_ConfirmOperation": "確認 {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "從您的電腦選擇設定檔",
   "Dialog_ImportConfig_Option_Recommended_Title": "匯入推薦設定",
   "Dialog_ImportConfig_Option_Recommended_Description": "載入 Winhance 推薦的設定檔",
-  "Dialog_ImportOptions_Title": "匯入設定",
   "Dialog_ImportOptions_Message": "選擇匯入設定的方式：",
-  "ImportOption_Own": "匯入我自己的設定檔",
-  "ImportOption_Recommended": "匯入 Winhance 推薦設定",
-  "Dialog_Button_Yes": "是",
-  "Dialog_Button_No": "否",
-  "Dialog_Button_OK": "確定",
-  "Dialog_Button_Cancel": "取消",
-  "Dialog_Button_Continue": "繼續",
-  "Dialog_Button_Close": "關閉",
-  "Dialog_Button_Apply": "套用",
-  "Dialog_Button_Refresh": "重新整理",
-  "Dialog_Button_Help": "說明",
   "Dialog_Unified_Section_SoftwareAndApps": "軟體與應用程式",
   "Dialog_Unified_Description_SoftwareAndApps": "Windows 套件與外部軟體的選擇",
   "Dialog_Unified_Section_WindowsApps": "Windows 應用程式",
@@ -132,6 +119,7 @@
   "Button_Refresh": "重新整理",
   "Button_Help": "說明",
   "Button_Delete": "刪除",
+  "Button_Download": "下載",
   "Common_On": "開啟",
   "Common_Off": "關閉",
   "Common_Search_Placeholder": "在此輸入以搜尋...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "未選取 ISO",
   "WIMUtil_Status_WaitForConversion": "🔒 等待轉換完成",
   "WIMUtil_Status_CompleteStep1": "🔒 完成步驟 1",
-  "WIMUtil_Status_ReadyToAddXml": "準備加入 XML",
   "WIMUtil_Status_XmlAdded": "✓ XML 已加入",
   "WIMUtil_Status_NoXmlAdded": "未加入 XML (選用)",
   "WIMUtil_Status_DriversAdded": "✓ 驅動程式已加入",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance 已透過備份保護您的系統。",
   "Startup_Backup_RestoreEnabled": "系統還原原為停用狀態，現已啟用。",
   "Startup_Backup_Created": "建立於：",
-  "Startup_Backup_RegistryBackups": "• 登錄檔備份 ({0} 個登錄區) 位於：",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• 系統還原點：「Winhance 初始還原點」",
   "Startup_Backup_ToRestore": "若要還原：",
-  "Startup_Backup_RestoreInstructions_System": "• 系統：開啟 設定 > 系統還原 中的「建立還原點」",
-  "Startup_Backup_RestoreInstructions_Registry": "• 登錄檔：雙擊備份資料夾中的 .reg 檔案",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "若要還原：在 Windows 設定中搜尋「還原點」",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "若要還原：雙擊備份資料夾中的 .reg 檔案",
   "Startup_Backup_Note": "注意：系統還原不會還原已移除的應用程式。",
-  "Startup_Backup_Note_AdminRights": "登錄檔備份為一次性，且需要管理員權限。",
   "Startup_Backup_Checkbox_DontCreate": "未來不要建立還原點",
-  "Startup_Backup_Checkbox_DontShow": "不再顯示此訊息",
   "Startup_Migration_Title": "指令碼位置已更新",
   "Startup_Migration_SubTitle": "Winhance 遷移",
   "Startup_Migration_Intro": "Winhance 已更新 Windows 應用程式移除指令碼的位置。",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "根據您目前的 Winhance 選擇產生 autounattend.xml 檔案，以在安裝過程中自訂 Windows。",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "更多產生選項即將推出",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "額外的 XML 自訂選項將在未來的更新中提供。",
-  "Button_OpenWIMUtil": "開啟 WIMUtil",
-  "Button_DoItLater": "我稍後再做",
   "Dialog_FallbackDownload": "替代下載方式",
-  "Dialog_Button_Download": "下載",
   "WindowsApps_Msg_FallbackDownload": "透過 WinGet 找不到套件 '{0}'，可能是因為地理區域限制。\n\nWinhance 可以使用替代方式 (store.rg-adguard.net) 直接從 Microsoft 伺服器下載此套件。\n\n• 套件檔案直接來自 Microsoft 官方 CDN\n• 此方法完全合法且安全\n• 它僅繞過區域限制\n\n您想要使用替代下載方式繼續嗎？",
   "WindowsApps_Checkbox_DontAskAgain": "未來的安裝不要再詢問我",
   "Progress_RemovingOldFile": "正在移除舊的映像檔...",
-  "Progress_WarningCouldNotDeleteFile": "警告：無法刪除舊檔案",
   "Progress_ConversionCompleted": "轉換成功完成",
   "Progress_ConversionFailed": "轉換失敗",
   "Progress_PreparingInstallAdk": "正在準備安裝 Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "正在檢查系統還原狀態...",
   "Progress_EnablingRestore": "正在啟用系統還原...",
   "Progress_CreatingRestorePoint": "正在建立系統還原點...",
-  "Progress_BackingUpRegistry": "正在備份 {0} 登錄區...",
   "Progress_CheckingInstallStatus": "正在檢查安裝狀態...",
   "Progress_WaitForInitialLoad": "請稍候，等待初始載入完成",
   "Progress_RefreshingStatus": "正在重新整理安裝狀態...",
   "Progress_SelectionsCleared": "已清除所有選擇",
   "Progress_NoInternetConnection": "無可用的網際網路連線。無法繼續安裝。",
-  "Progress_WingetInstalledSuccess": "WinGet 安裝成功",
   "Progress_ConvertingFormat": "正在將 {0} 轉換為 {1}...",
   "Progress_ConvertingEdition": "正在轉換 {1} 的 {0} 版本...",
   "Progress_CopyingFile": "正在複製：{0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "安裝 WinGet 失敗。無法安裝 {0}。",
   "Progress_WinGet_StartingInstallation": "正在開始安裝 {0}...",
   "Progress_WinGet_InstalledSuccess": "成功安裝 {0}",
-  "Progress_WinGet_RepairingInstallation": "正在修復 WinGet 安裝...",
-  "Progress_WinGet_FailedRepair": "修復 WinGet 失敗。無法安裝 {0}。",
-  "Progress_WinGet_FailedLocateAfterRepair": "修復後無法定位 WinGet。無法安裝 {0}。",
-  "Progress_WinGet_RetryingInstallation": "正在重試安裝 {0}...",
   "Progress_WinGet_InstallationCancelled": "{0} 的安裝已取消",
   "Progress_WinGet_NetworkError": "安裝 {0} 時發生網路錯誤。請檢查您的網際網路連線並重試。",
   "Progress_WinGet_InstallationError": "安裝 {0} 時發生錯誤：{1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "正在驗證 WinGet 安裝...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "WinGet 安裝驗證失敗",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet 已安裝但無法存取。請重新啟動應用程式。",
-  "Progress_WinGet_InitializingSources": "正在初始化 WinGet 來源...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet 安裝成功",
   "Progress_WinGet_InstallError": "安裝 WinGet 時發生錯誤：{0}",
   "Progress_Store_FetchingLinks": "正在擷取 {0} 的下載連結...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "安裝 {0} 失敗",
   "Progress_Store_DownloadCancelled": "{0} 的下載已取消",
   "Progress_Store_InstallError": "安裝 {0} 時發生錯誤：{1}",
-  "Progress_Store_RequestingPackageInfo": "正在請求 {0} 的套件資訊...",
-  "Progress_Store_DownloadingMainPackage": "正在下載 {0} 主要套件...",
   "Progress_Store_DownloadingDependencies": "正在下載 {0} 必要的相依性套件...",
   "Progress_Store_InstallingWithDependencies": "正在安裝 {0} 與 {1} 個相依性元件...",
   "Progress_Store_Installing": "正在安裝 {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "安裝失敗: {0}",
   "Progress_WinGet_CheckingUpdates": "正在檢查 WinGet 更新...",
   "Progress_WinGet_Updating": "正在更新 WinGet...",
-  "Progress_WinGet_CheckingVersion": "正在檢查 WinGet 版本...",
-  "Progress_WinGet_UpdateInitiated": "已透過 Store 啟動 WinGet 更新，正在驗證完成情況...",
-  "Progress_WinGet_WaitingForUpdate": "正在等待 WinGet 更新完成...",
-  "Progress_WinGet_Reinstalling": "正在重新安裝 WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet 更新成功",
-  "Progress_WinGet_UpdateCompleted": "WinGet 更新已完成",
   "Progress_WinGet_AlreadyUpToDate": "WinGet 已是最新版本",
-  "Progress_WinGet_InstalledLatest": "WinGet 已安裝最新版本",
   "Progress_WinGet_Ready": "WinGet 已就緒",
   "Progress_Uninstalling": "正在解除安裝 {0}...",
   "Progress_Finalizing": "正在完成...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "此系統上無法使用 WinGet。",
   "App_Tagline": "提升您的 Windows 體驗",
   "Loading_InitializingSettings": "正在初始化設定...",
-  "Loading_CreatingRestorePoint": "正在建立系統還原點。請稍候，這可能需要一些時間...",
   "Loading_MigratingScripts": "正在遷移腳本...",
   "Loading_CheckingScripts": "正在檢查腳本更新...",
-  "Loading_PreparingApp": "正在準備應用程式..."
+  "Loading_PreparingApp": "正在準備應用程式...",
+  "Tooltip_Documentation": "說明文件",
+  "Tooltip_ToggleNavigation": "\u5207\u63DB\u5C0E\u89BD",
+  "Dialog_ImportConfig_Option_Backup_Title": "匯入備份設定",
+  "Dialog_ImportConfig_Option_Backup_Description": "還原您的系統備份設定",
+  "Dialog_ImportConfig_Option_Defaults_Title": "還原 Windows 預設值",
+  "Dialog_ImportConfig_Option_Defaults_Description": "將所有設定重設為 Windows 出廠預設值",
+  "Loading_CreatingConfigBackup": "正在建立設定備份...",
+  "Config_Backup_NotFound": "找不到備份設定檔。備份會在首次啟動應用程式時自動建立。",
+  "Config_Backup_NotFound_Title": "找不到備份",
+  "Config_Backup_Select_Title": "選擇備份檔案",
+  "Review_Mode_Title": "設定檢閱模式",
+  "Review_Mode_Description": "檢閱所有區段的變更，準備好後按一下「套用設定」。",
+  "Review_Mode_Status_Format": "已檢閱 {0}/{1}（{2} 項將被套用）",
+  "Review_Mode_Apply_Button": "套用設定",
+  "Review_Mode_Cancel_Button": "取消",
+  "Review_Mode_Cancel_Confirmation_Title": "取消設定檢閱",
+  "Review_Mode_Cancel_Confirmation": "確定要取消嗎？不會套用任何變更。",
+  "Review_Mode_Diff_Toggle": "目前：{0} → 設定：{1}",
+  "Review_Mode_Select_Action": "使用上方按鈕為已勾選的應用程式選擇操作（安裝或解除安裝）",
+  "Review_Mode_Action_Install": "套用設定時將安裝已勾選的應用程式",
+  "Review_Mode_Action_Remove": "套用設定時將移除已勾選的應用程式",
+  "Review_Mode_Skip_Checkbox": "略過檢閱並立即套用",
+  "Review_Mode_Status_AllMatch": "所有設定已與設定檔一致",
+  "Review_Mode_Status_NoItems": "沒有要套用的設定項目",
+  "Review_Mode_Action_ThemeWallpaper": "是否套用此佈景主題的預設桌布？",
+  "Review_Mode_Action_CleanTaskbar": "是否在此設定中清理工作列？",
+  "Review_Mode_Action_CleanStartMenu": "是否在此設定中清理開始功能表？",
+  "Startup_Backup_ConfigBackup": "• 設定備份：目前 Windows 設定的快照",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• 系統還原：在 Windows 設定中搜尋「建立還原點」",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• 備份設定：使用標題列中的「匯入設定」並選擇「匯入備份設定」",
+  "Help_LearnMore_WindowsApps": "深入瞭解 Windows 應用程式",
+  "Help_LearnMore_ExternalApps": "深入瞭解外部應用程式",
+  "WIMUtil_Tooltip_DownloadWindows10": "下載 Windows 10 ISO",
+  "WIMUtil_Tooltip_DownloadWindows11": "下載 Windows 11 ISO",
+  "WIMUtil_Tooltip_Schneegans": "開啟 Schneegans XML 產生器",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "預設：{0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "確定要刪除 WIM 映像檔嗎？此操作無法復原。",
+  "WIMUtil_Msg_DeleteEsdConfirm": "確定要刪除 ESD 映像檔嗎？此操作無法復原。",
+  "WIMUtil_Msg_DeleteWimSuccess": "WIM 檔案已成功刪除。",
+  "WIMUtil_Msg_DeleteEsdSuccess": "ESD 檔案已成功刪除。",
+  "WIMUtil_Msg_DeleteFailed": "刪除映像檔失敗。",
+  "WIMUtil_Msg_DeleteError": "刪除映像檔時發生錯誤：{0}",
+  "WIMUtil_Status_ConvertingToFormat": "正在將 {0} 轉換為 {1}...",
+  "WIMUtil_Status_CreatingIso": "正在建立 ISO",
+  "WIMUtil_Button_OpenFolder": "開啟資料夾",
+  "Loading_CheckingSystemProtection": "正在檢查系統保護..."
 }
