--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -20,8 +20,8 @@
   "Tooltip_ToggleTheme": "Переключить тему Winhance",
   "Tooltip_Donate": "Поддержать разработку",
   "Tooltip_ReportBug": "Сообщить об ошибке",
-  "Menu_ReportBug": "Сообщить об ошибке",
   "Settings_Title": "Настройки Winhance",
+  "Settings_Description": "Настройка параметров приложения Winhance",
   "Settings_Menu_Language": "Язык",
   "Settings_Language_Description": "Выберите язык отображения приложения",
   "Settings_Theme_Title": "Тема Winhance",
@@ -45,7 +45,6 @@
   "Dialog_Warning": "Предупреждение",
   "Dialog_Error": "Ошибка",
   "Dialog_Confirmation": "Подтверждение",
-  "Dialog_Question": "Вопрос",
   "Dialog_ConfirmInstallation": "Подтвердить установку",
   "Dialog_ConfirmRemoval": "Подтвердить удаление",
   "Dialog_ConfirmOperation": "Подтвердить {0}",
@@ -76,19 +75,7 @@
   "Dialog_ImportConfig_Option_Own_Description": "Выберите файл конфигурации с вашего компьютера",
   "Dialog_ImportConfig_Option_Recommended_Title": "Импортировать рекомендуемую конфигурацию",
   "Dialog_ImportConfig_Option_Recommended_Description": "Загрузить рекомендуемый файл конфигурации Winhance",
-  "Dialog_ImportOptions_Title": "Импорт конфигурации",
   "Dialog_ImportOptions_Message": "Выберите способ импорта конфигурации:",
-  "ImportOption_Own": "Импортировать свой файл конфигурации",
-  "ImportOption_Recommended": "Импортировать рекомендуемую конфигурацию Winhance",
-  "Dialog_Button_Yes": "Да",
-  "Dialog_Button_No": "Нет",
-  "Dialog_Button_OK": "ОК",
-  "Dialog_Button_Cancel": "Отмена",
-  "Dialog_Button_Continue": "Продолжить",
-  "Dialog_Button_Close": "Закрыть",
-  "Dialog_Button_Apply": "Применить",
-  "Dialog_Button_Refresh": "Обновить",
-  "Dialog_Button_Help": "Справка",
   "Dialog_Unified_Section_SoftwareAndApps": "Программы и приложения",
   "Dialog_Unified_Description_SoftwareAndApps": "Выбор пакетов Windows и внешнего программного обеспечения",
   "Dialog_Unified_Section_WindowsApps": "Приложения Windows",
@@ -132,6 +119,7 @@
   "Button_Refresh": "Обновить",
   "Button_Help": "Справка",
   "Button_Delete": "Удалить",
+  "Button_Download": "Скачать",
   "Common_On": "Вкл",
   "Common_Off": "Выкл",
   "Common_Search_Placeholder": "Введите здесь для поиска...",
@@ -1099,7 +1087,6 @@
   "WIMUtil_Status_NoIsoSelected": "ISO не выбран",
   "WIMUtil_Status_WaitForConversion": "🔒 Дождитесь завершения преобразования",
   "WIMUtil_Status_CompleteStep1": "🔒 Выполните шаг 1",
-  "WIMUtil_Status_ReadyToAddXml": "Готов к добавлению XML",
   "WIMUtil_Status_XmlAdded": "✓ XML добавлен",
   "WIMUtil_Status_NoXmlAdded": "XML не добавлен (необязательно)",
   "WIMUtil_Status_DriversAdded": "✓ Драйверы добавлены",
@@ -1159,18 +1146,10 @@
   "Startup_Backup_Intro": "Winhance защитил вашу систему с помощью резервных копий.",
   "Startup_Backup_RestoreEnabled": "Восстановление системы было отключено и теперь включено.",
   "Startup_Backup_Created": "Создано:",
-  "Startup_Backup_RegistryBackups": "• Резервные копии реестра ({0} кустов) в:",
-  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Точка восстановления системы: 'Начальная точка восстановления Winhance'",
   "Startup_Backup_ToRestore": "Для восстановления:",
-  "Startup_Backup_RestoreInstructions_System": "• Система: откройте 'Создать точку восстановления' в Настройках > Восстановление системы",
-  "Startup_Backup_RestoreInstructions_Registry": "• Реестр: дважды щелкните файлы .reg в папке резервной копии",
-  "Startup_Backup_RestoreInstructions_RestoreOnly": "Для восстановления: найдите 'точку восстановления' в настройках Windows",
-  "Startup_Backup_RestoreInstructions_RegistryOnly": "Для восстановления: дважды щелкните файлы .reg в папке резервной копии",
   "Startup_Backup_Note": "Примечание: восстановление системы не восстановит удаленные приложения.",
-  "Startup_Backup_Note_AdminRights": "Резервные копии реестра создаются один раз и требуют прав администратора.",
   "Startup_Backup_Checkbox_DontCreate": "Не создавать точки восстановления в будущем",
-  "Startup_Backup_Checkbox_DontShow": "Больше не показывать это сообщение",
   "Startup_Migration_Title": "Расположение скрипта обновлено",
   "Startup_Migration_SubTitle": "Миграция Winhance",
   "Startup_Migration_Intro": "Winhance обновил расположение скриптов удаления приложений Windows.",
@@ -1301,14 +1280,10 @@
   "AdvancedTools_GenerateCard_Description": "Создайте файл autounattend.xml на основе текущих настроек Winhance для автоматизации установки Windows.",
   "AdvancedTools_InfoBar_MoreOptionsTitle": "Дополнительные параметры генерации скоро появятся",
   "AdvancedTools_InfoBar_MoreOptionsMessage": "Дополнительные параметры настройки XML будут доступны в будущих обновлениях.",
-  "Button_OpenWIMUtil": "Открыть WIMUtil",
-  "Button_DoItLater": "Я сделаю это позже",
   "Dialog_FallbackDownload": "Альтернативный метод загрузки",
-  "Dialog_Button_Download": "Скачать",
   "WindowsApps_Msg_FallbackDownload": "Пакет '{0}' не найден через WinGet, вероятно, из-за географических ограничений рынка.\n\nWinhance может загрузить этот пакет напрямую с серверов Microsoft, используя альтернативный метод (store.rg-adguard.net).\n\n• Файлы пакета поступают непосредственно с официального CDN Microsoft\n• Этот метод полностью легален и безопасен\n• Он обходит только региональные ограничения\n\nХотите ли вы продолжить с альтернативным методом загрузки?",
   "WindowsApps_Checkbox_DontAskAgain": "Не спрашивать меня снова для будущих установок",
   "Progress_RemovingOldFile": "Удаление старого файла образа...",
-  "Progress_WarningCouldNotDeleteFile": "Предупреждение: не удалось удалить старый файл",
   "Progress_ConversionCompleted": "Преобразование успешно завершено",
   "Progress_ConversionFailed": "Ошибка преобразования",
   "Progress_PreparingInstallAdk": "Подготовка к установке Windows ADK...",
@@ -1348,13 +1323,11 @@
   "Progress_CheckingRestoreStatus": "Проверка статуса восстановления системы...",
   "Progress_EnablingRestore": "Включение восстановления системы...",
   "Progress_CreatingRestorePoint": "Создание точки восстановления системы...",
-  "Progress_BackingUpRegistry": "Резервное копирование куста реестра {0}...",
   "Progress_CheckingInstallStatus": "Проверка статуса установки...",
   "Progress_WaitForInitialLoad": "Пожалуйста, подождите завершения начальной загрузки",
   "Progress_RefreshingStatus": "Обновление статуса установки...",
   "Progress_SelectionsCleared": "Все выборы очищены",
   "Progress_NoInternetConnection": "Нет доступного интернет-соединения. Установка не может быть продолжена.",
-  "Progress_WingetInstalledSuccess": "WinGet успешно установлен",
   "Progress_ConvertingFormat": "Преобразование {0} в {1}...",
   "Progress_ConvertingEdition": "Преобразование редакции {0} из {1}...",
   "Progress_CopyingFile": "Копирование: {0}",
@@ -1367,10 +1340,6 @@
   "Progress_WinGet_FailedInstallManager": "Не удалось установить WinGet. Не удается установить {0}.",
   "Progress_WinGet_StartingInstallation": "Начало установки {0}...",
   "Progress_WinGet_InstalledSuccess": "Успешно установлено {0}",
-  "Progress_WinGet_RepairingInstallation": "Восстановление установки WinGet...",
-  "Progress_WinGet_FailedRepair": "Не удалось восстановить WinGet. Не удается установить {0}.",
-  "Progress_WinGet_FailedLocateAfterRepair": "Не удалось найти WinGet после восстановления. Не удается установить {0}.",
-  "Progress_WinGet_RetryingInstallation": "Повторная установка {0}...",
   "Progress_WinGet_InstallationCancelled": "Установка {0} была отменена",
   "Progress_WinGet_NetworkError": "Сетевая ошибка при установке {0}. Пожалуйста, проверьте ваше интернет-соединение и попробуйте снова.",
   "Progress_WinGet_InstallationError": "Ошибка установки {0}: {1}",
@@ -1387,8 +1356,6 @@
   "Progress_WinGet_VerifyingInstallation": "Проверка установки WinGet...",
   "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "Проверка установки WinGet не удалась",
-  "Progress_WinGet_InstalledNotAccessible": "WinGet установлен, но недоступен. Пожалуйста, перезапустите приложение.",
-  "Progress_WinGet_InitializingSources": "Инициализация источников WinGet...",
   "Progress_WinGet_InstalledSuccessfully": "WinGet успешно установлен",
   "Progress_WinGet_InstallError": "Ошибка установки WinGet: {0}",
   "Progress_Store_FetchingLinks": "Получение ссылок для загрузки {0}...",
@@ -1397,8 +1364,6 @@
   "Progress_Store_FailedInstall": "Не удалось установить {0}",
   "Progress_Store_DownloadCancelled": "Загрузка {0} была отменена",
   "Progress_Store_InstallError": "Ошибка установки {0}: {1}",
-  "Progress_Store_RequestingPackageInfo": "Запрос информации о пакете для {0}...",
-  "Progress_Store_DownloadingMainPackage": "Загрузка основного пакета {0}...",
   "Progress_Store_DownloadingDependencies": "Загрузка {0} необходимых зависимых пакетов...",
   "Progress_Store_InstallingWithDependencies": "Установка {0} с {1} зависимостями...",
   "Progress_Store_Installing": "Установка {0}...",
@@ -1407,14 +1372,8 @@
   "Progress_Store_NonRecoverableError": "Ошибка установки: {0}",
   "Progress_WinGet_CheckingUpdates": "Проверка обновлений WinGet...",
   "Progress_WinGet_Updating": "Обновление WinGet...",
-  "Progress_WinGet_CheckingVersion": "Проверка версии WinGet...",
-  "Progress_WinGet_UpdateInitiated": "Обновление WinGet инициировано через Store, проверка завершения...",
-  "Progress_WinGet_WaitingForUpdate": "Ожидание завершения обновления WinGet...",
-  "Progress_WinGet_Reinstalling": "Переустановка WinGet...",
   "Progress_WinGet_UpdateSuccess": "WinGet успешно обновлен",
-  "Progress_WinGet_UpdateCompleted": "Обновление WinGet завершено",
   "Progress_WinGet_AlreadyUpToDate": "WinGet уже обновлен",
-  "Progress_WinGet_InstalledLatest": "WinGet уже установлен последней версии",
   "Progress_WinGet_Ready": "WinGet готов",
   "Progress_Uninstalling": "Удаление {0}...",
   "Progress_Finalizing": "Завершение...",
@@ -1475,8 +1434,53 @@
   "Error_WinGetNotAvailable": "WinGet недоступен в этой системе.",
   "App_Tagline": "Улучшите ваш опыт работы с Windows",
   "Loading_InitializingSettings": "Инициализация настроек...",
-  "Loading_CreatingRestorePoint": "Создание точки восстановления системы. Пожалуйста, подождите, это может занять некоторое время...",
   "Loading_MigratingScripts": "Миграция скриптов...",
   "Loading_CheckingScripts": "Проверка обновлений скриптов...",
-  "Loading_PreparingApp": "Подготовка приложения..."
+  "Loading_PreparingApp": "Подготовка приложения...",
+  "Tooltip_Documentation": "Документация",
+  "Tooltip_ToggleNavigation": "\u041F\u0435\u0440\u0435\u043A\u043B\u044E\u0447\u0438\u0442\u044C \u043D\u0430\u0432\u0438\u0433\u0430\u0446\u0438\u044E",
+  "Dialog_ImportConfig_Option_Backup_Title": "Импортировать резервную конфигурацию",
+  "Dialog_ImportConfig_Option_Backup_Description": "Восстановить резервную конфигурацию системы",
+  "Dialog_ImportConfig_Option_Defaults_Title": "Восстановить значения Windows по умолчанию",
+  "Dialog_ImportConfig_Option_Defaults_Description": "Сбросить все настройки до заводских значений Windows",
+  "Loading_CreatingConfigBackup": "Создание резервной копии конфигурации...",
+  "Config_Backup_NotFound": "Файлы резервной конфигурации не найдены. Резервная копия создаётся автоматически при первом запуске приложения.",
+  "Config_Backup_NotFound_Title": "Резервная копия не найдена",
+  "Config_Backup_Select_Title": "Выбрать файл резервной копии",
+  "Review_Mode_Title": "Режим просмотра конфигурации",
+  "Review_Mode_Description": "Просмотрите изменения во всех разделах, затем нажмите «Применить конфигурацию», когда будете готовы.",
+  "Review_Mode_Status_Format": "{0} из {1} просмотрено ({2} будет применено)",
+  "Review_Mode_Apply_Button": "Применить конфигурацию",
+  "Review_Mode_Cancel_Button": "Отмена",
+  "Review_Mode_Cancel_Confirmation_Title": "Отменить просмотр конфигурации",
+  "Review_Mode_Cancel_Confirmation": "Вы уверены, что хотите отменить? Никакие изменения не будут применены.",
+  "Review_Mode_Diff_Toggle": "Текущее: {0} → Конфигурация: {1}",
+  "Review_Mode_Select_Action": "Выберите действие (Установить или Удалить) для отмеченных приложений с помощью кнопок выше",
+  "Review_Mode_Action_Install": "Отмеченные приложения будут установлены при применении конфигурации",
+  "Review_Mode_Action_Remove": "Отмеченные приложения будут удалены при применении конфигурации",
+  "Review_Mode_Skip_Checkbox": "Пропустить просмотр и применить сразу",
+  "Review_Mode_Status_AllMatch": "Все настройки уже соответствуют конфигурации",
+  "Review_Mode_Status_NoItems": "Нет элементов конфигурации для применения",
+  "Review_Mode_Action_ThemeWallpaper": "Применить обои по умолчанию для этой темы?",
+  "Review_Mode_Action_CleanTaskbar": "Очистить панель задач в рамках этой конфигурации?",
+  "Review_Mode_Action_CleanStartMenu": "Очистить меню «Пуск» в рамках этой конфигурации?",
+  "Startup_Backup_ConfigBackup": "• Резервная копия конфигурации: Снимок ваших текущих настроек Windows",
+  "Startup_Backup_RestoreInstructions_RestorePoint": "• Восстановление системы: Найдите «Создание точки восстановления» в параметрах Windows",
+  "Startup_Backup_RestoreInstructions_ConfigBackup": "• Резервная конфигурация: Используйте «Импортировать конфигурацию» в строке заголовка и выберите «Импортировать резервную конфигурацию»",
+  "Help_LearnMore_WindowsApps": "Узнать больше о приложениях Windows",
+  "Help_LearnMore_ExternalApps": "Узнать больше о сторонних приложениях",
+  "WIMUtil_Tooltip_DownloadWindows10": "Скачать ISO Windows 10",
+  "WIMUtil_Tooltip_DownloadWindows11": "Скачать ISO Windows 11",
+  "WIMUtil_Tooltip_Schneegans": "Открыть генератор XML Schneegans",
+  "WIMUtil_Card_SelectDirectory_Description_Default": "По умолчанию: {0}",
+  "WIMUtil_Msg_DeleteWimConfirm": "Вы уверены, что хотите удалить файл образа WIM? Это действие нельзя отменить.",
+  "WIMUtil_Msg_DeleteEsdConfirm": "Вы уверены, что хотите удалить файл образа ESD? Это действие нельзя отменить.",
+  "WIMUtil_Msg_DeleteWimSuccess": "Файл WIM успешно удалён.",
+  "WIMUtil_Msg_DeleteEsdSuccess": "Файл ESD успешно удалён.",
+  "WIMUtil_Msg_DeleteFailed": "Не удалось удалить файл образа.",
+  "WIMUtil_Msg_DeleteError": "Ошибка при удалении файла образа: {0}",
+  "WIMUtil_Status_ConvertingToFormat": "Конвертация {0} в {1}...",
+  "WIMUtil_Status_CreatingIso": "Создание ISO",
+  "WIMUtil_Button_OpenFolder": "Открыть папку",
+  "Loading_CheckingSystemProtection": "Проверка защиты системы..."
 }
